--- a/po/it.po
+++ b/po/it.po
@@ -5,7 +5,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: OpenPLi-enigma2\n"
+"Project-Id-Version: OpenDelta-enigma2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-12-22 15:03+0100\n"
 "PO-Revision-Date: 2020-05-16 18:46+0200\n"
