--- a/README
+++ b/README
@@ -1,1 +1,4 @@
+The OpenDelta team 
+Build image base OpenPli
+
 To build enigma2, start reading here: https://wiki.openpli.org/Information_for_Developers
