--- a/po/he.po
+++ b/po/he.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: tuxbox-enigma 0.0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-12-22 15:03+0100\n"
+"POT-Creation-Date: 2022-07-30 14:55+0200\n"
 "PO-Revision-Date: 2012-03-08 10:40+0330\n"
 "Last-Translator: \n"
 "Language-Team: Arabic <moustafagamal@hotmail.com>\n"
@@ -623,7 +623,19 @@ msgstr "A/V הגדרות"
 msgid "AAC downmix"
 msgstr ""
 
+msgid "AAC transcoding"
+msgstr ""
+
+msgid "AAC+ downmix"
+msgstr ""
+
+msgid "AC3"
+msgstr ""
+
 msgid "AC3 downmix"
+msgstr ""
+
+msgid "AC3 transcoding"
 msgstr ""
 
 msgid "ACQUIRING TSID/ONID"
@@ -1098,7 +1110,7 @@ msgstr ""
 msgid "Artist"
 msgstr "אומן"
 
-msgid "Arts/Culture"
+msgid "Arts/Culture (without music)"
 msgstr ""
 
 msgid "Aruba"
@@ -1271,6 +1283,9 @@ msgstr "סריקה אוטומטית"
 msgid "Automatic scan"
 msgstr "סריקה אוטומטית"
 
+msgid "Automatically power off box to deep standby mode."
+msgstr ""
+
 msgid "Automatically put the TV in standby whenever the receiver goes into standby or deep standby."
 msgstr ""
 
@@ -1286,6 +1301,9 @@ msgstr "Available format variables"
 #, fuzzy
 msgid "Available locales are:"
 msgstr "Available format variables"
+
+msgid "Axas E4HD Ultra"
+msgstr ""
 
 msgid "Azerbaijan"
 msgstr ""
@@ -1556,6 +1574,10 @@ msgstr ""
 msgid "CI assignment"
 msgstr ""
 
+#, fuzzy
+msgid "CI enabled"
+msgstr "אופשר"
+
 msgid "CI slot: "
 msgstr ""
 
@@ -1566,6 +1588,10 @@ msgid "Cable"
 msgstr "Cable"
 
 msgid "Cable Scan"
+msgstr ""
+
+#, python-format
+msgid "Cable scan executable utility not found '%s'!"
 msgstr ""
 
 msgid "Cabo Verde"
@@ -1808,7 +1834,7 @@ msgid ""
 "DiSEqC port %s for %s"
 msgstr ""
 
-msgid "Children/Youth"
+msgid "Children/Youth/Education/Science"
 msgstr ""
 
 msgid "Chile"
@@ -1827,6 +1853,21 @@ msgid "Choose Tuner"
 msgstr ""
 
 msgid "Choose bouquet"
+msgstr ""
+
+msgid "Choose whether AAC sound tracks should be transcoded."
+msgstr ""
+
+msgid "Choose whether AC3 sound tracks should be transcoded."
+msgstr ""
+
+msgid "Choose whether WMA Pro sound tracks should be downmixed."
+msgstr ""
+
+msgid "Choose whether multi channel DTS-HD(HR/MA) sound tracks should be downmixed or transcoded."
+msgstr ""
+
+msgid "Choose whether multi channel aac+ sound tracks should be downmixed to stereo."
 msgstr ""
 
 msgid "Choose whether to scan a single transponder, one satellite or multiple satellites."
@@ -2565,6 +2606,9 @@ msgstr "צ'כית"
 msgid "D"
 msgstr "D"
 
+msgid "DAC"
+msgstr ""
+
 msgid "DHCP"
 msgstr "DHCP"
 
@@ -2575,7 +2619,13 @@ msgstr "מתקדם"
 msgid "DMM normal"
 msgstr ""
 
+msgid "DTS"
+msgstr ""
+
 msgid "DTS downmix"
+msgstr ""
+
+msgid "DTS-HD(HR/MA) downmix"
 msgstr ""
 
 msgid "DUAL LAYER DVD"
@@ -2669,6 +2719,9 @@ msgstr "סוג הטיימר"
 #, fuzzy
 msgid "Default+Picon"
 msgstr "הגדרות ברירת מחדל"
+
+msgid "Define additional delay in milliseconds before start of http(s) streams, e.g. to connect a remote tuner, you use a complex system of DiSEqC."
+msgstr ""
 
 msgid "Define the location of the EPG Cache file."
 msgstr ""
@@ -2902,6 +2955,9 @@ msgstr ""
 
 msgid "Disable"
 msgstr "השבת"
+
+msgid "Disable FCC during recordings"
+msgstr ""
 
 #
 msgid "Disable Picture in Picture"
@@ -3167,6 +3223,10 @@ msgstr "פלאגינים חדשים להורדה"
 msgid "Downloadable plugins"
 msgstr "פלאגינים להורדה"
 
+#, fuzzy
+msgid "Downloaded Images"
+msgstr "מוריד"
+
 msgid "Downloading"
 msgstr "מוריד"
 
@@ -3180,6 +3240,12 @@ msgstr ""
 
 msgid "Downloading plugin information. Please wait..."
 msgstr "...מוריד פרטים על הפלאגין, אנא המתן"
+
+msgid "Downmix"
+msgstr ""
+
+msgid "Drama and Films"
+msgstr ""
 
 msgid "Drop unconfigured satellites"
 msgstr ""
@@ -3228,7 +3294,7 @@ msgid "ERROR - failed to scan (%s)!"
 msgstr "(%s) !שגיאה - נכשל בסריקה"
 
 #, python-format
-msgid "ERROR downloading file %s"
+msgid "ERROR downloading file %s/%s"
 msgstr ""
 
 #
@@ -3288,9 +3354,6 @@ msgstr "ערוך כותרת"
 #
 msgid "Edit update source url"
 msgstr "Edit update source url"
-
-msgid "Education/Science/..."
-msgstr ""
 
 msgid "Egypt"
 msgstr ""
@@ -3361,6 +3424,11 @@ msgid "Enable auto fastscan for %s"
 msgstr ""
 
 #
+#, fuzzy
+msgid "Enable bluetooth audio"
+msgstr "Enable bouquet edit"
+
+#
 msgid "Enable bouquet edit"
 msgstr "Enable bouquet edit"
 
@@ -3395,6 +3463,11 @@ msgstr ""
 
 msgid "Enable parental protection"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Enable power off timer"
+msgstr "Enable move mode"
 
 msgid "Enable remote enigma2 receiver to be tried to tune into services that cannot be tuned into locally (e.g. tuner is occupied or service type is unavailable on the local tuner. Specify complete URL including http:// and port number (normally ...:8001), e.g. http://second_box:8001."
 msgstr ""
@@ -3549,10 +3622,6 @@ msgid "Eritrea"
 msgstr ""
 
 msgid "Error"
-msgstr "שגיאה"
-
-#, fuzzy, python-format
-msgid "Error %s"
 msgstr "שגיאה"
 
 msgid "Error code"
@@ -3807,6 +3876,15 @@ msgid ""
 "inactive"
 msgstr ""
 
+#, fuzzy
+msgid "FCC enabled"
+msgstr "אופשר"
+
+#
+#, fuzzy
+msgid "FCCSetup"
+msgstr "הגדרות"
+
 msgid "FEC"
 msgstr "FEC"
 
@@ -3900,6 +3978,15 @@ msgstr ""
 #
 msgid "Fast"
 msgstr "מהיר"
+
+msgid "Fast Channel Change"
+msgstr ""
+
+msgid "Fast Channel Change Setup"
+msgstr ""
+
+msgid "Fast Channel Change setup"
+msgstr ""
 
 #
 msgid "Fast DiSEqC"
@@ -4003,7 +4090,13 @@ msgstr "OK הפעולה הבאה תתבצע לאחר לחיצה על"
 msgid "Force legacy signal stats"
 msgstr ""
 
+msgid "Force power off (even when not in standby)"
+msgstr ""
+
 msgid "Force zap to recording service in standby"
+msgstr ""
+
+msgid "Forces deep standby, even when not in standby mode. Scheduled recordings remain unaffected."
 msgstr ""
 
 msgid "Format"
@@ -4088,6 +4181,10 @@ msgstr ""
 msgid "Full view resolution"
 msgstr ""
 
+#, fuzzy
+msgid "Fullbackup Images"
+msgstr "Flash"
+
 msgid "Function of OK button"
 msgstr ""
 
@@ -4131,6 +4228,9 @@ msgid "General AC3 delay"
 msgstr ""
 
 msgid "General PCM delay"
+msgstr ""
+
+msgid "General bluetooth audio delay"
 msgstr ""
 
 #
@@ -4307,7 +4407,10 @@ msgstr ""
 msgid "HD2400"
 msgstr ""
 
-msgid "HD60/Multibox/Multibox SE"
+msgid "HD60/HD66SE/Multibox/Multibox SE"
+msgstr ""
+
+msgid "HDMI"
 msgstr ""
 
 msgid "HDMI Colordepth"
@@ -4380,6 +4483,9 @@ msgstr "כונן קשיח"
 msgid "Harddisk Setup"
 msgstr ""
 
+msgid "Hardware Accelerated"
+msgstr ""
+
 msgid "Hardware: "
 msgstr ""
 
@@ -4425,6 +4531,10 @@ msgstr ""
 
 msgid "High bitrate support"
 msgstr "High bitrate support"
+
+#, fuzzy
+msgid "History Prev/Next"
+msgstr "שיחזור להגדרות יצרן"
 
 msgid "History back"
 msgstr ""
@@ -4480,6 +4590,9 @@ msgstr "? כמה דקות אתה מעוניין להקליט"
 
 msgid "How many minutes do you want to record?"
 msgstr "? כמה דקות אתה מעוניין להקליט"
+
+msgid "Http(s) stream start delay"
+msgstr ""
 
 msgid "Hue"
 msgstr "Hue"
@@ -4558,6 +4671,9 @@ msgid "If set to 'yes' signal values (SNR, etc) will be calculated from API V3. 
 msgstr ""
 
 msgid "If set to 'yes' the same commands will be sent to the TV for deep standby events, as are sent during regular standby events."
+msgstr ""
+
+msgid "If the box is supposed to enter deep standby e.g. monday night at 1 AM, it actually is already tuesday. To enable this anyway, differing next day start time can be specified here."
 msgstr ""
 
 msgid "If using multiple uncommitted switches the DiSEqC commands must be sent multiple times. Set to the number of uncommitted switches in the chain minus one."
@@ -5054,9 +5170,6 @@ msgstr "שמאל"
 msgid "Left from servicename"
 msgstr ""
 
-msgid "Leisure hobbies"
-msgstr ""
-
 msgid "Lesotho"
 msgstr ""
 
@@ -5356,6 +5469,11 @@ msgstr "ליטא"
 msgid "Mauritius"
 msgstr "מועדפים"
 
+#
+#, fuzzy
+msgid "Max channels"
+msgstr "ערוץ"
+
 msgid "Max memory positions"
 msgstr ""
 
@@ -5371,14 +5489,6 @@ msgstr ""
 #
 msgid "Media player"
 msgstr "נגן המוזיקה"
-
-#
-#, fuzzy
-msgid "Media player: GStreamer, version "
-msgstr ":גרסה חדשה"
-
-msgid "Media player: ffmpeg, version "
-msgstr ""
 
 #
 #, fuzzy
@@ -5603,9 +5713,6 @@ msgstr "מיקום סרטים"
 msgid "Movie selection"
 msgstr "מיקום סרטים"
 
-msgid "Movie/Drama"
-msgstr ""
-
 msgid "Movielist menu"
 msgstr "תפריט רשימת הסרטים"
 
@@ -5801,7 +5908,7 @@ msgstr ""
 msgid "New Zealand"
 msgstr ""
 
-msgid "News Current Affairs"
+msgid "News/Current Affairs/Social"
 msgstr ""
 
 msgctxt "button label, 'next screen'"
@@ -5810,6 +5917,9 @@ msgstr ""
 
 msgctxt "now/next: 'next' event label"
 msgid "Next"
+msgstr ""
+
+msgid "Next day starts at"
 msgstr ""
 
 msgid "Nicaragua"
@@ -6166,6 +6276,11 @@ msgstr ""
 msgid "Only on startup"
 msgstr ""
 
+#
+#, fuzzy
+msgid "Only power off"
+msgstr "Enable move mode"
+
 msgid "Only select 'yes' if you are using a multiswich that requires a DiSEqC Port-A command signal. For all other setups select 'no'."
 msgstr ""
 
@@ -6192,7 +6307,7 @@ msgstr ""
 msgid "Operating LED status in standby mode"
 msgstr ""
 
-msgid "Operating LED status while running."
+msgid "Operating LED status while running"
 msgstr ""
 
 msgid "Opkg"
@@ -6329,6 +6444,9 @@ msgstr "בקרת הורים, עריכת שירותים"
 #
 msgid "Parental control setup"
 msgstr "הגדרת בקרת הורים"
+
+msgid "Passthrough"
+msgstr ""
 
 msgid "Password"
 msgstr ""
@@ -6790,6 +6908,14 @@ msgstr ""
 msgid "Power management. Consult your receiver's manual for more information."
 msgstr ""
 
+#
+#, fuzzy
+msgid "Power off time"
+msgstr "Sort Time"
+
+msgid "Power off timer"
+msgstr ""
+
 msgid "Power on display"
 msgstr ""
 
@@ -7138,6 +7264,9 @@ msgid "Rec"
 msgstr ""
 
 msgid "Recall to previous service"
+msgstr ""
+
+msgid "Receiver or driver does not support FCC"
 msgstr ""
 
 #
@@ -7589,6 +7718,9 @@ msgstr "SNR"
 #
 msgid "SNR:"
 msgstr "SNR:"
+
+msgid "SPDIF"
+msgstr ""
 
 msgid "SRT file"
 msgstr ""
@@ -8351,6 +8483,9 @@ msgstr "סריקת שירותים"
 msgid "Service title mode"
 msgstr "Select video mode"
 
+msgid "Service type 4097 incorrect for PiP!"
+msgstr ""
+
 msgid ""
 "Service unavailable!\n"
 "Check tuner configuration!"
@@ -8387,6 +8522,11 @@ msgstr ""
 
 msgid "Set blocktimes by weekday"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Set cursor on service from channel history"
+msgstr "previous channel in history"
 
 msgid "Set default"
 msgstr ""
@@ -8526,9 +8666,6 @@ msgstr "Show infobar on event change"
 #, fuzzy
 msgid "Show EPG..."
 msgstr " הראה EPG..."
-
-msgid "Show Games show"
-msgstr ""
 
 msgid "Show InfoBar"
 msgstr ""
@@ -8777,6 +8914,9 @@ msgstr ""
 msgid "Show warning when timeshift is stopped"
 msgstr ""
 
+msgid "Show/Game Show/Leisure hobbies"
+msgstr ""
+
 msgid "Show/hide window"
 msgstr ""
 
@@ -8967,9 +9107,6 @@ msgid "Smartcard PIN"
 msgstr ""
 
 msgid "Smooth"
-msgstr ""
-
-msgid "Social/Political/Economics"
 msgstr ""
 
 msgid "SocketMMI"
@@ -9541,7 +9678,7 @@ msgid "Switch on the display during Suspend Mode"
 msgstr "View list of available Display and Userinterface extensions."
 
 #, fuzzy
-msgid "Switch on the display during operation."
+msgid "Switch on the display during operation"
 msgstr "View list of available Display and Userinterface extensions."
 
 #, fuzzy
@@ -10015,10 +10152,16 @@ msgstr ""
 msgid "This option allows you to show the full screen path leading to the current screen."
 msgstr ""
 
+msgid "This option allows you to switch audio to bluetooth speakers."
+msgstr ""
+
 msgid "This option allows you to view the old and new settings side by side."
 msgstr ""
 
 msgid "This option can be useful for long HDMI cables."
+msgstr ""
+
+msgid "This option configures the general audio delay for bluetooth speakers."
 msgstr ""
 
 msgid "This option set the level of surpression of mosquito noise (Mosquito Noise is random aliasing as a result of strong compression). Obviously this goes at the cost of picture details."
@@ -11065,6 +11208,9 @@ msgstr ""
 msgid "WLAN connection"
 msgstr "WLAN connection"
 
+msgid "WMA Pro downmix"
+msgstr ""
+
 #
 msgid "WSS on 4:3"
 msgstr ""
@@ -11354,7 +11500,7 @@ msgstr ""
 msgid "When enabled, the VCR scart option will be shown on the main menu"
 msgstr ""
 
-msgid "When enabled, the channel selection list will be hidden while listening to a radio channel"
+msgid "When enabled, the channel selection list will be hidden while listening to a radio channel. When disabled, the option 'Auto play last service in radio mode' is available."
 msgstr ""
 
 msgid "When enabled, the infobar will be displayed when a new event starts."
@@ -11382,6 +11528,9 @@ msgid "When enabled, the receiver will select an AC3 track (when available)."
 msgstr ""
 
 msgid "When enabled, the receiver will select an AC3+ track (when available)."
+msgstr ""
+
+msgid "When enabled, then when changing bouquets, set the cursor on the service from the channel history in the channel selection list."
 msgstr ""
 
 msgid "When enabled, this setting has more weight than 'Preferred tuner for recordings'."
@@ -11720,6 +11869,9 @@ msgstr ""
 msgid "Zap"
 msgstr ""
 
+msgid "Zap Up/Down"
+msgstr ""
+
 #
 msgid "Zap back to previously tuned service?"
 msgstr "?לזפזפ אחורנית לערוץ הקודם"
@@ -11769,7 +11921,7 @@ msgstr "move up to first entry"
 msgid "Zgemma H.S/H.2S/H.2H/H5/H7(old model)"
 msgstr ""
 
-msgid "Zgemma H9(old model)/I55Plus"
+msgid "Zgemma H9(old model)/I55Plus/H8"
 msgstr ""
 
 msgid "Zgemma Star S/2S/H1/H2"
@@ -11820,8 +11972,10 @@ msgstr ""
 msgid "additional cable of rotor"
 msgstr ""
 
-msgid "adult movie/drama"
-msgstr ""
+#
+#, fuzzy
+msgid "adult movie"
+msgstr "Select a movie"
 
 msgid "advanced"
 msgstr "מתקדם"
@@ -11915,9 +12069,6 @@ msgstr "better"
 msgid "black"
 msgstr "black"
 
-msgid "black & white"
-msgstr ""
-
 msgid "blacklist"
 msgstr "blacklist"
 
@@ -11950,7 +12101,7 @@ msgstr ""
 msgid "chapters"
 msgstr "chapters"
 
-msgid "childrens's/youth program (general)"
+msgid "childrens's youth program (general)"
 msgstr ""
 
 #
@@ -11967,10 +12118,6 @@ msgstr ""
 msgid "comedy"
 msgstr ""
 
-#
-msgid "config menu"
-msgstr "תפריט הגדרות"
-
 msgid "confirmed"
 msgstr "אושר"
 
@@ -11978,6 +12125,15 @@ msgid "connected"
 msgstr "התחבר"
 
 msgid "controlled by HDMI"
+msgstr ""
+
+msgid "convert to AC3"
+msgstr ""
+
+msgid "convert to DTS"
+msgstr ""
+
+msgid "convert to multi-channel PCM"
 msgstr ""
 
 msgid "cooking"
@@ -12037,7 +12193,7 @@ msgstr ""
 msgid "economics/social advisory"
 msgstr ""
 
-msgid "education/science/factual topics (general)"
+msgid "educational/science/factual topics (general)"
 msgstr ""
 
 msgid "embedded"
@@ -12128,7 +12284,7 @@ msgstr ""
 msgid "fine arts"
 msgstr ""
 
-msgid "fitness & health"
+msgid "fitness and health"
 msgstr ""
 
 #, fuzzy
@@ -12171,9 +12327,6 @@ msgid "further education"
 msgstr ""
 
 msgid "game show/quiz/contest"
-msgstr ""
-
-msgid "gardening"
 msgstr ""
 
 msgid "go to deep standby"
@@ -12292,7 +12445,7 @@ msgstr ""
 msgid "literature"
 msgstr ""
 
-msgid "live broadcast"
+msgid "local sports"
 msgstr ""
 
 msgid "locked"
@@ -12320,6 +12473,10 @@ msgstr "תפריט"
 msgid "mins"
 msgstr "דקות"
 
+#, fuzzy
+msgid "module disabled"
+msgstr "disabled"
+
 msgid "month"
 msgstr "חודש"
 
@@ -12341,7 +12498,7 @@ msgstr "move up to first entry"
 msgid "move up to previous entry"
 msgstr "move up to previous entry"
 
-msgid "movie/drama (general)"
+msgid "movie (general)"
 msgstr ""
 
 msgid "multi"
@@ -12483,9 +12640,6 @@ msgstr "open nameserver configuration"
 msgid "original"
 msgstr ""
 
-msgid "original language"
-msgstr ""
-
 msgid "pass"
 msgstr "pass"
 
@@ -12506,6 +12660,13 @@ msgstr ""
 
 msgid "pre-school children's program"
 msgstr ""
+
+msgid "preserve bookmarks in cuts"
+msgstr ""
+
+#, fuzzy
+msgid "priority"
+msgstr "עדיפות"
 
 msgid "receiver software because updates are available."
 msgstr ""
@@ -12532,6 +12693,11 @@ msgstr "remove after this position"
 #
 msgid "remove before this position"
 msgstr "remove before this position"
+
+#
+#, fuzzy
+msgid "remove bookmarks in cuts"
+msgstr "remove bookmark"
 
 msgid "remove this mark"
 msgstr "remove this mark"
@@ -12590,7 +12756,7 @@ msgstr "בחר רשומה בתפריט"
 msgid "serious music/classic music"
 msgstr ""
 
-msgid "serious/classical/religious/historical movie/drama"
+msgid "serious/classical/religious/historical drama"
 msgstr ""
 
 #
@@ -12672,13 +12838,13 @@ msgstr ""
 msgid "slot%s - %s, without backup"
 msgstr ""
 
-msgid "soap/melodram/folkloric"
+msgid "soap/melodrama/folkloric"
 msgstr ""
 
 msgid "social/political issues/economics (general)"
 msgstr ""
 
-msgid "social/spiritual science"
+msgid "social/spiritual sciences"
 msgstr ""
 
 msgid "space"
@@ -12730,10 +12896,10 @@ msgstr "העבר לשפת תרגום הבאה"
 msgid "talk show"
 msgstr ""
 
-msgid "team sports"
+msgid "team sports/excluding football"
 msgstr ""
 
-msgid "technology/natural science"
+msgid "technology/natural sciences"
 msgstr ""
 
 msgid "template file"
@@ -12785,15 +12951,18 @@ msgstr ""
 msgid "unknown service"
 msgstr "שירות לא ידוע"
 
-msgid "unpublished"
-msgstr ""
-
 msgid "untestable"
 msgstr ""
 
 #
 msgid "until standby/restart"
 msgstr "until standby/restart"
+
+msgid "use HDMI cacenter"
+msgstr ""
+
+msgid "use best / controlled by HDMI"
+msgstr ""
 
 #
 msgid "user defined"
@@ -12806,6 +12975,10 @@ msgstr "user defined"
 
 msgid "variety show"
 msgstr ""
+
+#
+msgid "version"
+msgstr "גִרְסָה"
 
 #
 msgid "vertical"
