--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-12-22 15:03+0100\n"
+"POT-Creation-Date: 2022-07-30 14:55+0200\n"
 "PO-Revision-Date: 2013-10-20 19:13-0300\n"
 "Last-Translator: Diogo <pingflood@gmail.com>\n"
 "Language-Team: Traduzido por Frank Viana <franksrviana@gmail.com>\n"
@@ -592,8 +592,21 @@ msgstr "Áudio e vídeo"
 msgid "AAC downmix"
 msgstr ""
 
+msgid "AAC transcoding"
+msgstr ""
+
+#, fuzzy
+msgid "AAC+ downmix"
+msgstr "AC3 downmix"
+
+msgid "AC3"
+msgstr ""
+
 msgid "AC3 downmix"
 msgstr "AC3 downmix"
+
+msgid "AC3 transcoding"
+msgstr ""
 
 msgid "ACQUIRING TSID/ONID"
 msgstr ""
@@ -1014,8 +1027,9 @@ msgstr ""
 msgid "Artist"
 msgstr "Artista"
 
-msgid "Arts/Culture"
-msgstr "Arte/Cultura"
+#, fuzzy
+msgid "Arts/Culture (without music)"
+msgstr "Arte/Cultura (sem música, geral)"
 
 msgid "Aruba"
 msgstr ""
@@ -1174,6 +1188,9 @@ msgstr "Busca automática"
 msgid "Automatic scan"
 msgstr "Busca automática"
 
+msgid "Automatically power off box to deep standby mode."
+msgstr ""
+
 msgid "Automatically put the TV in standby whenever the receiver goes into standby or deep standby."
 msgstr ""
 
@@ -1189,6 +1206,9 @@ msgstr "Formato de variáveis disponíveis"
 #, fuzzy
 msgid "Available locales are:"
 msgstr "Formato de variáveis disponíveis"
+
+msgid "Axas E4HD Ultra"
+msgstr ""
 
 msgid "Azerbaijan"
 msgstr ""
@@ -1439,6 +1459,10 @@ msgstr ""
 msgid "CI assignment"
 msgstr "Definição de CI"
 
+#, fuzzy
+msgid "CI enabled"
+msgstr "Ativo"
+
 msgid "CI slot: "
 msgstr ""
 
@@ -1450,6 +1474,10 @@ msgstr "Cabo"
 
 msgid "Cable Scan"
 msgstr "Busca via cabo"
+
+#, python-format
+msgid "Cable scan executable utility not found '%s'!"
+msgstr ""
 
 msgid "Cabo Verde"
 msgstr ""
@@ -1674,8 +1702,9 @@ msgid ""
 "DiSEqC port %s for %s"
 msgstr ""
 
-msgid "Children/Youth"
-msgstr "Crianças/Jovens"
+#, fuzzy
+msgid "Children/Youth/Education/Science"
+msgstr "Educação/Ciência"
 
 msgid "Chile"
 msgstr ""
@@ -1694,6 +1723,26 @@ msgstr "Escolha o tuner"
 
 msgid "Choose bouquet"
 msgstr ""
+
+#, fuzzy
+msgid "Choose whether AAC sound tracks should be transcoded."
+msgstr "Configurar se trilhas de áudio multicanais devem ser mixadas em estéreo."
+
+#, fuzzy
+msgid "Choose whether AC3 sound tracks should be transcoded."
+msgstr "Configurar se trilhas de áudio multicanais devem ser mixadas em estéreo."
+
+#, fuzzy
+msgid "Choose whether WMA Pro sound tracks should be downmixed."
+msgstr "Configurar se trilhas de áudio multicanais devem ser mixadas em estéreo."
+
+#, fuzzy
+msgid "Choose whether multi channel DTS-HD(HR/MA) sound tracks should be downmixed or transcoded."
+msgstr "Configurar se trilhas de áudio multicanais devem ser mixadas em estéreo."
+
+#, fuzzy
+msgid "Choose whether multi channel aac+ sound tracks should be downmixed to stereo."
+msgstr "Configurar se trilhas de áudio multicanais devem ser mixadas em estéreo."
 
 msgid "Choose whether to scan a single transponder, one satellite or multiple satellites."
 msgstr ""
@@ -2400,6 +2449,9 @@ msgstr "Checo"
 msgid "D"
 msgstr ""
 
+msgid "DAC"
+msgstr ""
+
 msgid "DHCP"
 msgstr ""
 
@@ -2409,7 +2461,14 @@ msgstr "DMM avançado"
 msgid "DMM normal"
 msgstr "DMM normal"
 
+msgid "DTS"
+msgstr ""
+
 msgid "DTS downmix"
+msgstr "Downmix DTS"
+
+#, fuzzy
+msgid "DTS-HD(HR/MA) downmix"
 msgstr "Downmix DTS"
 
 msgid "DUAL LAYER DVD"
@@ -2495,6 +2554,9 @@ msgstr "Ação do temporizador"
 #, fuzzy
 msgid "Default+Picon"
 msgstr "Configuração padrão"
+
+msgid "Define additional delay in milliseconds before start of http(s) streams, e.g. to connect a remote tuner, you use a complex system of DiSEqC."
+msgstr ""
 
 #, fuzzy
 msgid "Define the location of the EPG Cache file."
@@ -2716,6 +2778,9 @@ msgstr "O diretório contém %(file)s e %(subdir)s."
 
 msgid "Disable"
 msgstr "Desativar"
+
+msgid "Disable FCC during recordings"
+msgstr ""
 
 msgid "Disable Picture in Picture"
 msgstr "Desativar PiP"
@@ -2966,6 +3031,10 @@ msgstr "Lista de plugins"
 msgid "Downloadable plugins"
 msgstr "Plugins disponíveis"
 
+#, fuzzy
+msgid "Downloaded Images"
+msgstr "Fazendo o download"
+
 msgid "Downloading"
 msgstr "Fazendo o download"
 
@@ -2978,6 +3047,13 @@ msgstr "Obtendo lista de pacotes. Aguarde..."
 
 msgid "Downloading plugin information. Please wait..."
 msgstr "Obtendo informações. Aguarde..."
+
+#, fuzzy
+msgid "Downmix"
+msgstr "Downmix DTS"
+
+msgid "Drama and Films"
+msgstr ""
 
 #, fuzzy
 msgid "Drop unconfigured satellites"
@@ -3022,7 +3098,7 @@ msgid "ERROR - failed to scan (%s)!"
 msgstr "ERRO - Falha na busca (%s)!"
 
 #, python-format
-msgid "ERROR downloading file %s"
+msgid "ERROR downloading file %s/%s"
 msgstr ""
 
 msgid "East"
@@ -3074,9 +3150,6 @@ msgstr "Editar título"
 
 msgid "Edit update source url"
 msgstr "Editar URL da fonte de atualização"
-
-msgid "Education/Science/..."
-msgstr "Educação/Ciência"
 
 msgid "Egypt"
 msgstr ""
@@ -3147,6 +3220,10 @@ msgstr ""
 msgid "Enable auto fastscan for %s"
 msgstr ""
 
+#, fuzzy
+msgid "Enable bluetooth audio"
+msgstr "Editar grupo de favoritos"
+
 msgid "Enable bouquet edit"
 msgstr "Editar grupo de favoritos"
 
@@ -3177,6 +3254,10 @@ msgstr "Ativar EPG EIT"
 
 msgid "Enable parental protection"
 msgstr ""
+
+#, fuzzy
+msgid "Enable power off timer"
+msgstr "Organizar/mover itens"
 
 msgid "Enable remote enigma2 receiver to be tried to tune into services that cannot be tuned into locally (e.g. tuner is occupied or service type is unavailable on the local tuner. Specify complete URL including http:// and port number (normally ...:8001), e.g. http://second_box:8001."
 msgstr ""
@@ -3322,10 +3403,6 @@ msgid "Eritrea"
 msgstr ""
 
 msgid "Error"
-msgstr "Erro"
-
-#, fuzzy, python-format
-msgid "Error %s"
 msgstr "Erro"
 
 msgid "Error code"
@@ -3566,6 +3643,14 @@ msgid ""
 "inactive"
 msgstr ""
 
+#, fuzzy
+msgid "FCC enabled"
+msgstr "Ativo"
+
+#, fuzzy
+msgid "FCCSetup"
+msgstr "Configurar"
+
 msgid "FEC"
 msgstr ""
 
@@ -3656,6 +3741,15 @@ msgstr ""
 
 msgid "Fast"
 msgstr "Rápido"
+
+msgid "Fast Channel Change"
+msgstr ""
+
+msgid "Fast Channel Change Setup"
+msgstr ""
+
+msgid "Fast Channel Change setup"
+msgstr ""
 
 msgid "Fast DiSEqC"
 msgstr "DiSEqC rápida"
@@ -3752,7 +3846,13 @@ msgstr "As tarefas irão terminar após pressionar OK!"
 msgid "Force legacy signal stats"
 msgstr ""
 
+msgid "Force power off (even when not in standby)"
+msgstr ""
+
 msgid "Force zap to recording service in standby"
+msgstr ""
+
+msgid "Forces deep standby, even when not in standby mode. Scheduled recordings remain unaffected."
 msgstr ""
 
 msgid "Format"
@@ -3829,6 +3929,10 @@ msgstr "Transparência total"
 msgid "Full view resolution"
 msgstr "Resolução de tela cheia"
 
+#, fuzzy
+msgid "Fullbackup Images"
+msgstr "A gravação falhou"
+
 msgid "Function of OK button"
 msgstr "Função do botão OK"
 
@@ -3871,6 +3975,10 @@ msgstr "Atraso AC3 geral"
 
 msgid "General PCM delay"
 msgstr "Atraso PCM geral"
+
+#, fuzzy
+msgid "General bluetooth audio delay"
+msgstr "Atraso AC3 geral"
 
 msgid "Genre"
 msgstr "Gênero"
@@ -4032,7 +4140,10 @@ msgstr "Lista HD"
 msgid "HD2400"
 msgstr ""
 
-msgid "HD60/Multibox/Multibox SE"
+msgid "HD60/HD66SE/Multibox/Multibox SE"
+msgstr ""
+
+msgid "HDMI"
 msgstr ""
 
 msgid "HDMI Colordepth"
@@ -4099,6 +4210,9 @@ msgstr "Disco rígido"
 msgid "Harddisk Setup"
 msgstr ""
 
+msgid "Hardware Accelerated"
+msgstr ""
+
 msgid "Hardware: "
 msgstr ""
 
@@ -4143,6 +4257,10 @@ msgstr "Informação hierárquica"
 
 msgid "High bitrate support"
 msgstr "Suporte para bitrate alto"
+
+#, fuzzy
+msgid "History Prev/Next"
+msgstr "Padrão de fábrica"
 
 msgid "History back"
 msgstr ""
@@ -4198,6 +4316,9 @@ msgstr "Gravar por quantos minutos?"
 
 msgid "How many minutes do you want to record?"
 msgstr "Gravar por quantos minutos?"
+
+msgid "Http(s) stream start delay"
+msgstr ""
 
 msgid "Hue"
 msgstr "Tom"
@@ -4272,6 +4393,9 @@ msgid "If set to 'yes' signal values (SNR, etc) will be calculated from API V3. 
 msgstr ""
 
 msgid "If set to 'yes' the same commands will be sent to the TV for deep standby events, as are sent during regular standby events."
+msgstr ""
+
+msgid "If the box is supposed to enter deep standby e.g. monday night at 1 AM, it actually is already tuesday. To enable this anyway, differing next day start time can be specified here."
 msgstr ""
 
 msgid "If using multiple uncommitted switches the DiSEqC commands must be sent multiple times. Set to the number of uncommitted switches in the chain minus one."
@@ -4716,9 +4840,6 @@ msgstr "Esquerda"
 msgid "Left from servicename"
 msgstr "Esquerda do nome do serviço"
 
-msgid "Leisure hobbies"
-msgstr "Lazer"
-
 msgid "Lesotho"
 msgstr ""
 
@@ -4982,6 +5103,10 @@ msgstr "Lituano"
 msgid "Mauritius"
 msgstr "Favoritos"
 
+#, fuzzy
+msgid "Max channels"
+msgstr "Canal"
+
 msgid "Max memory positions"
 msgstr ""
 
@@ -4996,13 +5121,6 @@ msgstr ""
 
 msgid "Media player"
 msgstr "Reprodutor de mídia"
-
-#, fuzzy
-msgid "Media player: GStreamer, version "
-msgstr "Versão do Kernel:"
-
-msgid "Media player: ffmpeg, version "
-msgstr ""
 
 msgid "Media scanner"
 msgstr "Buscar mídia"
@@ -5204,9 +5322,6 @@ msgstr "Diretório das gravações"
 msgid "Movie selection"
 msgstr "Selecionar vídeos"
 
-msgid "Movie/Drama"
-msgstr "Filme/Drama"
-
 msgid "Movielist menu"
 msgstr "Menu da lista de vídeos"
 
@@ -5386,7 +5501,8 @@ msgstr ""
 msgid "New Zealand"
 msgstr ""
 
-msgid "News Current Affairs"
+#, fuzzy
+msgid "News/Current Affairs/Social"
 msgstr "Notícias atuais"
 
 msgctxt "button label, 'next screen'"
@@ -5396,6 +5512,9 @@ msgstr "Próximo"
 msgctxt "now/next: 'next' event label"
 msgid "Next"
 msgstr "A seguir"
+
+msgid "Next day starts at"
+msgstr ""
 
 msgid "Nicaragua"
 msgstr ""
@@ -5719,6 +5838,10 @@ msgstr ""
 msgid "Only on startup"
 msgstr ""
 
+#, fuzzy
+msgid "Only power off"
+msgstr "Organizar/mover itens"
+
 msgid "Only select 'yes' if you are using a multiswich that requires a DiSEqC Port-A command signal. For all other setups select 'no'."
 msgstr ""
 
@@ -5743,7 +5866,7 @@ msgstr ""
 msgid "Operating LED status in standby mode"
 msgstr ""
 
-msgid "Operating LED status while running."
+msgid "Operating LED status while running"
 msgstr ""
 
 msgid "Opkg"
@@ -5871,6 +5994,9 @@ msgstr "Editor de canais do controle de acesso"
 
 msgid "Parental control setup"
 msgstr "Controle de acesso"
+
+msgid "Passthrough"
+msgstr ""
 
 msgid "Password"
 msgstr ""
@@ -6294,6 +6420,13 @@ msgstr ""
 msgid "Power management. Consult your receiver's manual for more information."
 msgstr ""
 
+#, fuzzy
+msgid "Power off time"
+msgstr "Cronológico"
+
+msgid "Power off timer"
+msgstr ""
+
 msgid "Power on display"
 msgstr ""
 
@@ -6630,6 +6763,9 @@ msgid "Rec"
 msgstr ""
 
 msgid "Recall to previous service"
+msgstr ""
+
+msgid "Receiver or driver does not support FCC"
 msgstr ""
 
 msgid "Reception settings"
@@ -7054,6 +7190,9 @@ msgid "SNR"
 msgstr ""
 
 msgid "SNR:"
+msgstr ""
+
+msgid "SPDIF"
 msgstr ""
 
 msgid "SRT file"
@@ -7756,6 +7895,9 @@ msgstr "Busca de canais"
 msgid "Service title mode"
 msgstr ""
 
+msgid "Service type 4097 incorrect for PiP!"
+msgstr ""
+
 msgid ""
 "Service unavailable!\n"
 "Check tuner configuration!"
@@ -7790,6 +7932,10 @@ msgstr "Ligar sempre neste canal"
 
 msgid "Set blocktimes by weekday"
 msgstr ""
+
+#, fuzzy
+msgid "Set cursor on service from channel history"
+msgstr "Canal anterior na memória"
 
 msgid "Set default"
 msgstr ""
@@ -7916,9 +8062,6 @@ msgstr "EPG do canal atual"
 
 msgid "Show EPG..."
 msgstr "Exibir EPG"
-
-msgid "Show Games show"
-msgstr "Exibir Games Show"
 
 msgid "Show InfoBar"
 msgstr ""
@@ -8152,6 +8295,10 @@ msgstr ""
 msgid "Show warning when timeshift is stopped"
 msgstr "Exibir aviso ao parar o timeshift"
 
+#, fuzzy
+msgid "Show/Game Show/Leisure hobbies"
+msgstr "Lazer"
+
 msgid "Show/hide window"
 msgstr ""
 
@@ -8317,9 +8464,6 @@ msgstr ""
 
 msgid "Smooth"
 msgstr ""
-
-msgid "Social/Political/Economics"
-msgstr "Social/Política/Econômica"
 
 msgid "SocketMMI"
 msgstr ""
@@ -8831,7 +8975,7 @@ msgid "Switch on the display during Suspend Mode"
 msgstr "Ver extensões de tela e interface do usuário disponíveis."
 
 #, fuzzy
-msgid "Switch on the display during operation."
+msgid "Switch on the display during operation"
 msgstr "Ver extensões de tela e interface do usuário disponíveis."
 
 #, fuzzy
@@ -9274,11 +9418,18 @@ msgstr ""
 msgid "This option allows you to show the full screen path leading to the current screen."
 msgstr ""
 
+msgid "This option allows you to switch audio to bluetooth speakers."
+msgstr ""
+
 msgid "This option allows you to view the old and new settings side by side."
 msgstr ""
 
 msgid "This option can be useful for long HDMI cables."
 msgstr ""
+
+#, fuzzy
+msgid "This option configures the general audio delay for bluetooth speakers."
+msgstr "Configurar o atraso geral das trilhas de áudio em estéreo."
 
 msgid "This option set the level of surpression of mosquito noise (Mosquito Noise is random aliasing as a result of strong compression). Obviously this goes at the cost of picture details."
 msgstr ""
@@ -10238,6 +10389,10 @@ msgstr ""
 msgid "WLAN connection"
 msgstr "Conexão sem fio"
 
+#, fuzzy
+msgid "WMA Pro downmix"
+msgstr "AC3 downmix"
+
 msgid "WSS on 4:3"
 msgstr "WSS em 4:3"
 
@@ -10539,7 +10694,8 @@ msgstr "Quando ativado, as legendas de teletexto serão exibidas em sua posiçã
 msgid "When enabled, the VCR scart option will be shown on the main menu"
 msgstr "Quando ativado, a opção VCR Scart será exibida no menu principal"
 
-msgid "When enabled, the channel selection list will be hidden while listening to a radio channel"
+#, fuzzy
+msgid "When enabled, the channel selection list will be hidden while listening to a radio channel. When disabled, the option 'Auto play last service in radio mode' is available."
 msgstr "Quando ativado, a lista de canais ficará oculta ao ouvir um canal de rádio"
 
 msgid "When enabled, the infobar will be displayed when a new event starts."
@@ -10567,6 +10723,9 @@ msgid "When enabled, the receiver will select an AC3 track (when available)."
 msgstr "Quando ativado, o receptor irá selecionar uma trilha AC3 (quando disponível)."
 
 msgid "When enabled, the receiver will select an AC3+ track (when available)."
+msgstr ""
+
+msgid "When enabled, then when changing bouquets, set the cursor on the service from the channel history in the channel selection list."
 msgstr ""
 
 msgid "When enabled, this setting has more weight than 'Preferred tuner for recordings'."
@@ -10911,6 +11070,9 @@ msgstr ""
 msgid "Zap"
 msgstr "Assistir"
 
+msgid "Zap Up/Down"
+msgstr ""
+
 msgid "Zap back to previously tuned service?"
 msgstr "Voltar ao canal sintonizado anteriormente?"
 
@@ -10959,7 +11121,7 @@ msgstr "Ir para o primeiro canal"
 msgid "Zgemma H.S/H.2S/H.2H/H5/H7(old model)"
 msgstr ""
 
-msgid "Zgemma H9(old model)/I55Plus"
+msgid "Zgemma H9(old model)/I55Plus/H8"
 msgstr ""
 
 msgid "Zgemma Star S/2S/H1/H2"
@@ -11009,7 +11171,8 @@ msgstr ""
 msgid "additional cable of rotor"
 msgstr ""
 
-msgid "adult movie/drama"
+#, fuzzy
+msgid "adult movie"
 msgstr "Filme/Drama adulto"
 
 msgid "advanced"
@@ -11100,9 +11263,6 @@ msgstr "Melhor"
 msgid "black"
 msgstr "Preto"
 
-msgid "black & white"
-msgstr "Preto e Branco"
-
 msgid "blacklist"
 msgstr "Lista negra"
 
@@ -11133,7 +11293,8 @@ msgstr "centralizado"
 msgid "chapters"
 msgstr "Capítulos"
 
-msgid "childrens's/youth program (general)"
+#, fuzzy
+msgid "childrens's youth program (general)"
 msgstr "Infantil/Adolescentes (geral)"
 
 msgid "circular left"
@@ -11148,9 +11309,6 @@ msgstr ""
 msgid "comedy"
 msgstr "Comédia"
 
-msgid "config menu"
-msgstr "Menu de configuração"
-
 msgid "confirmed"
 msgstr "Confirmado"
 
@@ -11159,6 +11317,16 @@ msgstr "Conectado"
 
 msgid "controlled by HDMI"
 msgstr ""
+
+msgid "convert to AC3"
+msgstr ""
+
+msgid "convert to DTS"
+msgstr ""
+
+#, fuzzy
+msgid "convert to multi-channel PCM"
+msgstr "Exibir EPG múltiplo"
 
 msgid "cooking"
 msgstr "Cozinha"
@@ -11214,7 +11382,8 @@ msgstr "Leste"
 msgid "economics/social advisory"
 msgstr "Economia social/Consultivo"
 
-msgid "education/science/factual topics (general)"
+#, fuzzy
+msgid "educational/science/factual topics (general)"
 msgstr "Educação/Ciência/Temas factuais (geral)"
 
 msgid "embedded"
@@ -11304,7 +11473,8 @@ msgstr "Filme/Cinema"
 msgid "fine arts"
 msgstr "Belas artes"
 
-msgid "fitness & health"
+#, fuzzy
+msgid "fitness and health"
 msgstr "Fitness e Saúde"
 
 msgid "flat alphabetic"
@@ -11344,9 +11514,6 @@ msgstr "Educação"
 
 msgid "game show/quiz/contest"
 msgstr "Game show/Quiz/Concurso"
-
-msgid "gardening"
-msgstr "Jardinagem"
 
 msgid "go to deep standby"
 msgstr "Desligar"
@@ -11454,8 +11621,9 @@ msgstr "Alinhamento de eventos"
 msgid "literature"
 msgstr "Literatura"
 
-msgid "live broadcast"
-msgstr "Transmissão ao-vivo"
+#, fuzzy
+msgid "local sports"
+msgstr "Esportes de equipe"
 
 msgid "locked"
 msgstr "Sintonizado"
@@ -11481,6 +11649,10 @@ msgstr "Menu"
 msgid "mins"
 msgstr "mins"
 
+#, fuzzy
+msgid "module disabled"
+msgstr "Desativado"
+
 msgid "month"
 msgstr "mês"
 
@@ -11502,7 +11674,8 @@ msgstr "Ir para a primeira entrada"
 msgid "move up to previous entry"
 msgstr "Ir para a entrada anterior"
 
-msgid "movie/drama (general)"
+#, fuzzy
+msgid "movie (general)"
 msgstr "Filme/Drama (geral)"
 
 msgid "multi"
@@ -11636,9 +11809,6 @@ msgstr "Abrir a configuração do servidor DNS"
 msgid "original"
 msgstr "Original"
 
-msgid "original language"
-msgstr "Idioma original"
-
 msgid "pass"
 msgstr "Passar"
 
@@ -11659,6 +11829,13 @@ msgstr "Cultura popular/Artes tradicionais"
 
 msgid "pre-school children's program"
 msgstr "Programa infantil pré-escolar"
+
+msgid "preserve bookmarks in cuts"
+msgstr ""
+
+#, fuzzy
+msgid "priority"
+msgstr "Prioridade"
 
 msgid "receiver software because updates are available."
 msgstr "software do receptor porque há atualizações disponíveis."
@@ -11683,6 +11860,10 @@ msgstr "Remover após esta posição"
 
 msgid "remove before this position"
 msgstr "Remover antes desta posição"
+
+#, fuzzy
+msgid "remove bookmarks in cuts"
+msgstr "Remover favorito"
 
 msgid "remove this mark"
 msgstr "Remover esta marca"
@@ -11738,7 +11919,8 @@ msgstr "Selecionar entrada de menu"
 msgid "serious music/classic music"
 msgstr "Música clássica"
 
-msgid "serious/classical/religious/historical movie/drama"
+#, fuzzy
+msgid "serious/classical/religious/historical drama"
 msgstr "Clássico/Religioso/Filme histórico/Drama"
 
 #, fuzzy
@@ -11818,13 +12000,15 @@ msgstr ""
 msgid "slot%s - %s, without backup"
 msgstr ""
 
-msgid "soap/melodram/folkloric"
+#, fuzzy
+msgid "soap/melodrama/folkloric"
 msgstr "Novelas/Melodramas/Popular"
 
 msgid "social/political issues/economics (general)"
 msgstr "Questões sociais/Políticas/Economia (geral)"
 
-msgid "social/spiritual science"
+#, fuzzy
+msgid "social/spiritual sciences"
 msgstr "Ciência social/espiritual"
 
 msgid "space"
@@ -11877,10 +12061,11 @@ msgstr "Próximo idioma de legenda"
 msgid "talk show"
 msgstr "Talk show"
 
-msgid "team sports"
-msgstr "Esportes de equipe"
+msgid "team sports/excluding football"
+msgstr ""
 
-msgid "technology/natural science"
+#, fuzzy
+msgid "technology/natural sciences"
 msgstr "Tecnologia/Ciências Naturais"
 
 msgid "template file"
@@ -11929,14 +12114,17 @@ msgstr ""
 msgid "unknown service"
 msgstr "Serviço desconhecido"
 
-msgid "unpublished"
-msgstr "Não publicado"
-
 msgid "untestable"
 msgstr ""
 
 msgid "until standby/restart"
 msgstr "até standby/reiniciar"
+
+msgid "use HDMI cacenter"
+msgstr ""
+
+msgid "use best / controlled by HDMI"
+msgstr ""
 
 msgid "user defined"
 msgstr "Manual"
@@ -11947,6 +12135,9 @@ msgstr "Manual"
 
 msgid "variety show"
 msgstr "Show de variedades"
+
+msgid "version"
+msgstr "versão"
 
 msgid "vertical"
 msgstr "Vertical"
