--- a/po/th.po
+++ b/po/th.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: tuxbox-enigma 0.0.1-En-Th\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-12-22 15:03+0100\n"
+"POT-Creation-Date: 2022-07-30 14:55+0200\n"
 "PO-Revision-Date: 2010-04-08 18:13+0700\n"
 "Last-Translator: Tony - Thaidreambox\n"
 "Language-Team: Tony @ Thai Dreambox <tonyboyth@gmail.com>\n"
@@ -593,7 +593,19 @@ msgstr "ตั้งค่าภาพและเสียง"
 msgid "AAC downmix"
 msgstr ""
 
+msgid "AAC transcoding"
+msgstr ""
+
+msgid "AAC+ downmix"
+msgstr ""
+
+msgid "AC3"
+msgstr ""
+
 msgid "AC3 downmix"
+msgstr ""
+
+msgid "AC3 transcoding"
 msgstr ""
 
 msgid "ACQUIRING TSID/ONID"
@@ -1036,7 +1048,7 @@ msgstr ""
 msgid "Artist"
 msgstr "ศิลปิน"
 
-msgid "Arts/Culture"
+msgid "Arts/Culture (without music)"
 msgstr ""
 
 msgid "Aruba"
@@ -1201,6 +1213,9 @@ msgstr "ค้นหาอัตโนมัติ"
 msgid "Automatic scan"
 msgstr "ค้นหาอัตโนมัติ"
 
+msgid "Automatically power off box to deep standby mode."
+msgstr ""
+
 msgid "Automatically put the TV in standby whenever the receiver goes into standby or deep standby."
 msgstr ""
 
@@ -1216,6 +1231,9 @@ msgstr "รูปแบบที่ใช้งานได้"
 #, fuzzy
 msgid "Available locales are:"
 msgstr "รูปแบบที่ใช้งานได้"
+
+msgid "Axas E4HD Ultra"
+msgstr ""
 
 msgid "Azerbaijan"
 msgstr ""
@@ -1469,6 +1487,10 @@ msgstr ""
 msgid "CI assignment"
 msgstr "CI assignment"
 
+#, fuzzy
+msgid "CI enabled"
+msgstr "ใช้งานแล้ว"
+
 msgid "CI slot: "
 msgstr ""
 
@@ -1479,6 +1501,10 @@ msgid "Cable"
 msgstr "เคเบิ้ล"
 
 msgid "Cable Scan"
+msgstr ""
+
+#, python-format
+msgid "Cable scan executable utility not found '%s'!"
 msgstr ""
 
 msgid "Cabo Verde"
@@ -1710,7 +1736,7 @@ msgid ""
 "DiSEqC port %s for %s"
 msgstr ""
 
-msgid "Children/Youth"
+msgid "Children/Youth/Education/Science"
 msgstr ""
 
 msgid "Chile"
@@ -1729,6 +1755,21 @@ msgid "Choose Tuner"
 msgstr ""
 
 msgid "Choose bouquet"
+msgstr ""
+
+msgid "Choose whether AAC sound tracks should be transcoded."
+msgstr ""
+
+msgid "Choose whether AC3 sound tracks should be transcoded."
+msgstr ""
+
+msgid "Choose whether WMA Pro sound tracks should be downmixed."
+msgstr ""
+
+msgid "Choose whether multi channel DTS-HD(HR/MA) sound tracks should be downmixed or transcoded."
+msgstr ""
+
+msgid "Choose whether multi channel aac+ sound tracks should be downmixed to stereo."
 msgstr ""
 
 msgid "Choose whether to scan a single transponder, one satellite or multiple satellites."
@@ -2459,6 +2500,9 @@ msgstr "ภาษาเชค"
 msgid "D"
 msgstr "D"
 
+msgid "DAC"
+msgstr ""
+
 msgid "DHCP"
 msgstr "DHCP"
 
@@ -2469,7 +2513,13 @@ msgstr "ขั้นสูง"
 msgid "DMM normal"
 msgstr ""
 
+msgid "DTS"
+msgstr ""
+
 msgid "DTS downmix"
+msgstr ""
+
+msgid "DTS-HD(HR/MA) downmix"
 msgstr ""
 
 msgid "DUAL LAYER DVD"
@@ -2561,6 +2611,9 @@ msgstr "ประเภทการตั้งเวลา"
 #, fuzzy
 msgid "Default+Picon"
 msgstr "ตั้งค่าเริ่มต้น"
+
+msgid "Define additional delay in milliseconds before start of http(s) streams, e.g. to connect a remote tuner, you use a complex system of DiSEqC."
+msgstr ""
 
 msgid "Define the location of the EPG Cache file."
 msgstr ""
@@ -2785,6 +2838,9 @@ msgstr "ไม่พบโฟล์เดอร์ %s ในระบบ"
 
 msgid "Disable"
 msgstr "ไม่ใช้งาน"
+
+msgid "Disable FCC during recordings"
+msgstr ""
 
 msgid "Disable Picture in Picture"
 msgstr "ไม่ใช้งานภาพซ้อนภาพ"
@@ -3039,6 +3095,10 @@ msgstr "Plugin ใหม่ที่ดาวน์โหลดได้"
 msgid "Downloadable plugins"
 msgstr "Plugin ที่ดาวน์โหลดได้"
 
+#, fuzzy
+msgid "Downloaded Images"
+msgstr "กำลังดาวน์โหลด"
+
 msgid "Downloading"
 msgstr "กำลังดาวน์โหลด"
 
@@ -3051,6 +3111,12 @@ msgstr "กำลังดาวน์โหลดข้อมูลติดต
 
 msgid "Downloading plugin information. Please wait..."
 msgstr "กำลังดาวน์โหลดข้อมูล Plugin กรุณารอสักครู่..."
+
+msgid "Downmix"
+msgstr ""
+
+msgid "Drama and Films"
+msgstr ""
 
 #, fuzzy
 msgid "Drop unconfigured satellites"
@@ -3096,7 +3162,7 @@ msgid "ERROR - failed to scan (%s)!"
 msgstr "ผิดพลาด - การค้นหา (%s) ล้มเหลว"
 
 #, python-format
-msgid "ERROR downloading file %s"
+msgid "ERROR downloading file %s/%s"
 msgstr ""
 
 msgid "East"
@@ -3149,9 +3215,6 @@ msgstr "แก้ไขชื่อเรื่อง"
 
 msgid "Edit update source url"
 msgstr "แก้ไข URL ของเซอร์พเวอร์เพื่อปรับปรุง"
-
-msgid "Education/Science/..."
-msgstr ""
 
 msgid "Egypt"
 msgstr ""
@@ -3220,6 +3283,10 @@ msgstr ""
 msgid "Enable auto fastscan for %s"
 msgstr ""
 
+#, fuzzy
+msgid "Enable bluetooth audio"
+msgstr "แก้ไขกลุ่มรายการ"
+
 msgid "Enable bouquet edit"
 msgstr "แก้ไขกลุ่มรายการ"
 
@@ -3250,6 +3317,10 @@ msgstr ""
 
 msgid "Enable parental protection"
 msgstr ""
+
+#, fuzzy
+msgid "Enable power off timer"
+msgstr "ทำการเคลื่อนย้าย"
 
 msgid "Enable remote enigma2 receiver to be tried to tune into services that cannot be tuned into locally (e.g. tuner is occupied or service type is unavailable on the local tuner. Specify complete URL including http:// and port number (normally ...:8001), e.g. http://second_box:8001."
 msgstr ""
@@ -3396,10 +3467,6 @@ msgid "Eritrea"
 msgstr ""
 
 msgid "Error"
-msgstr "ผิดพลาด"
-
-#, fuzzy, python-format
-msgid "Error %s"
 msgstr "ผิดพลาด"
 
 msgid "Error code"
@@ -3650,6 +3717,14 @@ msgid ""
 "inactive"
 msgstr ""
 
+#, fuzzy
+msgid "FCC enabled"
+msgstr "ใช้งานแล้ว"
+
+#, fuzzy
+msgid "FCCSetup"
+msgstr "ตั้งค่า"
+
 msgid "FEC"
 msgstr "FEC"
 
@@ -3739,6 +3814,15 @@ msgstr ""
 
 msgid "Fast"
 msgstr "เร็ว"
+
+msgid "Fast Channel Change"
+msgstr ""
+
+msgid "Fast Channel Change Setup"
+msgstr ""
+
+msgid "Fast Channel Change setup"
+msgstr ""
 
 msgid "Fast DiSEqC"
 msgstr "Fast DiSEqC"
@@ -3836,7 +3920,13 @@ msgstr ""
 msgid "Force legacy signal stats"
 msgstr ""
 
+msgid "Force power off (even when not in standby)"
+msgstr ""
+
 msgid "Force zap to recording service in standby"
+msgstr ""
+
+msgid "Forces deep standby, even when not in standby mode. Scheduled recordings remain unaffected."
 msgstr ""
 
 msgid "Format"
@@ -3912,6 +4002,10 @@ msgstr ""
 msgid "Full view resolution"
 msgstr ""
 
+#, fuzzy
+msgid "Fullbackup Images"
+msgstr "แฟรช"
+
 msgid "Function of OK button"
 msgstr ""
 
@@ -3957,6 +4051,10 @@ msgstr "General AC3 Delay"
 #, fuzzy
 msgid "General PCM delay"
 msgstr "General PCM Delay"
+
+#, fuzzy
+msgid "General bluetooth audio delay"
+msgstr "General AC3 Delay"
 
 msgid "Genre"
 msgstr "ชนิด"
@@ -4125,7 +4223,10 @@ msgstr ""
 msgid "HD2400"
 msgstr ""
 
-msgid "HD60/Multibox/Multibox SE"
+msgid "HD60/HD66SE/Multibox/Multibox SE"
+msgstr ""
+
+msgid "HDMI"
 msgstr ""
 
 msgid "HDMI Colordepth"
@@ -4194,6 +4295,9 @@ msgstr "ฮาร์ดดิสก์"
 msgid "Harddisk Setup"
 msgstr ""
 
+msgid "Hardware Accelerated"
+msgstr ""
+
 msgid "Hardware: "
 msgstr ""
 
@@ -4239,6 +4343,10 @@ msgstr ""
 
 msgid "High bitrate support"
 msgstr "รองรับข้อมูลขนาดใหญ่"
+
+#, fuzzy
+msgid "History Prev/Next"
+msgstr "ตั้งค่าจากโรงงาน"
 
 msgid "History back"
 msgstr ""
@@ -4294,6 +4402,9 @@ msgstr "บันทึกรายต่อไปอีกกี่นาที
 
 msgid "How many minutes do you want to record?"
 msgstr "บันทึกรายต่อไปอีกกี่นาที?"
+
+msgid "Http(s) stream start delay"
+msgstr ""
 
 msgid "Hue"
 msgstr "Hue"
@@ -4368,6 +4479,9 @@ msgid "If set to 'yes' signal values (SNR, etc) will be calculated from API V3. 
 msgstr ""
 
 msgid "If set to 'yes' the same commands will be sent to the TV for deep standby events, as are sent during regular standby events."
+msgstr ""
+
+msgid "If the box is supposed to enter deep standby e.g. monday night at 1 AM, it actually is already tuesday. To enable this anyway, differing next day start time can be specified here."
 msgstr ""
 
 msgid "If using multiple uncommitted switches the DiSEqC commands must be sent multiple times. Set to the number of uncommitted switches in the chain minus one."
@@ -4836,9 +4950,6 @@ msgstr "ซ้าย"
 msgid "Left from servicename"
 msgstr ""
 
-msgid "Leisure hobbies"
-msgstr ""
-
 msgid "Lesotho"
 msgstr ""
 
@@ -5114,6 +5225,10 @@ msgstr "ภาษาลิธูเนี่ยน"
 msgid "Mauritius"
 msgstr "รายการโปรด"
 
+#, fuzzy
+msgid "Max channels"
+msgstr "ช่อง"
+
 msgid "Max memory positions"
 msgstr ""
 
@@ -5129,13 +5244,6 @@ msgstr ""
 
 msgid "Media player"
 msgstr "เล่นไฟล์"
-
-#, fuzzy
-msgid "Media player: GStreamer, version "
-msgstr "เวอร์ชั่นใหม่:"
-
-msgid "Media player: ffmpeg, version "
-msgstr ""
 
 #, fuzzy
 msgid "Media scanner"
@@ -5343,9 +5451,6 @@ msgstr ""
 msgid "Movie selection"
 msgstr "เลือกการตั้งเวลา"
 
-msgid "Movie/Drama"
-msgstr ""
-
 msgid "Movielist menu"
 msgstr "เมนูรายการภาพยนต์"
 
@@ -5529,7 +5634,7 @@ msgstr ""
 msgid "New Zealand"
 msgstr ""
 
-msgid "News Current Affairs"
+msgid "News/Current Affairs/Social"
 msgstr ""
 
 msgctxt "button label, 'next screen'"
@@ -5538,6 +5643,9 @@ msgstr ""
 
 msgctxt "now/next: 'next' event label"
 msgid "Next"
+msgstr ""
+
+msgid "Next day starts at"
 msgstr ""
 
 msgid "Nicaragua"
@@ -5869,6 +5977,10 @@ msgstr ""
 msgid "Only on startup"
 msgstr ""
 
+#, fuzzy
+msgid "Only power off"
+msgstr "ทำการเคลื่อนย้าย"
+
 msgid "Only select 'yes' if you are using a multiswich that requires a DiSEqC Port-A command signal. For all other setups select 'no'."
 msgstr ""
 
@@ -5895,7 +6007,7 @@ msgstr ""
 msgid "Operating LED status in standby mode"
 msgstr ""
 
-msgid "Operating LED status while running."
+msgid "Operating LED status while running"
 msgstr ""
 
 msgid "Opkg"
@@ -6027,6 +6139,9 @@ msgstr "แก้ไขบริการที่ต้องควบคุม
 
 msgid "Parental control setup"
 msgstr "ตั้งค่าการควบคุมอายุ"
+
+msgid "Passthrough"
+msgstr ""
 
 msgid "Password"
 msgstr ""
@@ -6462,6 +6577,13 @@ msgstr ""
 msgid "Power management. Consult your receiver's manual for more information."
 msgstr ""
 
+#, fuzzy
+msgid "Power off time"
+msgstr "จัดเรียงเวลา"
+
+msgid "Power off timer"
+msgstr ""
+
 msgid "Power on display"
 msgstr ""
 
@@ -6800,6 +6922,9 @@ msgid "Rec"
 msgstr ""
 
 msgid "Recall to previous service"
+msgstr ""
+
+msgid "Receiver or driver does not support FCC"
 msgstr ""
 
 #, fuzzy
@@ -7230,6 +7355,9 @@ msgstr "SNR"
 
 msgid "SNR:"
 msgstr "SNR:"
+
+msgid "SPDIF"
+msgstr ""
 
 msgid "SRT file"
 msgstr ""
@@ -7955,6 +8083,9 @@ msgstr "ค้นหาบริการ"
 msgid "Service title mode"
 msgstr "เลือกโหมดวีดีโอ"
 
+msgid "Service type 4097 incorrect for PiP!"
+msgstr ""
+
 msgid ""
 "Service unavailable!\n"
 "Check tuner configuration!"
@@ -7989,6 +8120,10 @@ msgstr ""
 
 msgid "Set blocktimes by weekday"
 msgstr ""
+
+#, fuzzy
+msgid "Set cursor on service from channel history"
+msgstr "รายการก่อนหน้าที่จำไว้"
 
 msgid "Set default"
 msgstr ""
@@ -8121,9 +8256,6 @@ msgstr "แสดงแถบรายการเมื่อมีการเ
 #, fuzzy
 msgid "Show EPG..."
 msgstr "แสดงผังรายการ (EPG)"
-
-msgid "Show Games show"
-msgstr ""
 
 msgid "Show InfoBar"
 msgstr ""
@@ -8364,6 +8496,9 @@ msgstr ""
 msgid "Show warning when timeshift is stopped"
 msgstr ""
 
+msgid "Show/Game Show/Leisure hobbies"
+msgstr ""
+
 msgid "Show/hide window"
 msgstr ""
 
@@ -8537,9 +8672,6 @@ msgid "Smartcard PIN"
 msgstr ""
 
 msgid "Smooth"
-msgstr ""
-
-msgid "Social/Political/Economics"
 msgstr ""
 
 msgid "SocketMMI"
@@ -9068,7 +9200,7 @@ msgid "Switch on the display during Suspend Mode"
 msgstr "แสดงรายการส่วนเพิ่มเติมสำหรับส่วนติดต่อผู้ใช้"
 
 #, fuzzy
-msgid "Switch on the display during operation."
+msgid "Switch on the display during operation"
 msgstr "แสดงรายการส่วนเพิ่มเติมสำหรับส่วนติดต่อผู้ใช้"
 
 #, fuzzy
@@ -9515,10 +9647,16 @@ msgstr ""
 msgid "This option allows you to show the full screen path leading to the current screen."
 msgstr ""
 
+msgid "This option allows you to switch audio to bluetooth speakers."
+msgstr ""
+
 msgid "This option allows you to view the old and new settings side by side."
 msgstr ""
 
 msgid "This option can be useful for long HDMI cables."
+msgstr ""
+
+msgid "This option configures the general audio delay for bluetooth speakers."
 msgstr ""
 
 msgid "This option set the level of surpression of mosquito noise (Mosquito Noise is random aliasing as a result of strong compression). Obviously this goes at the cost of picture details."
@@ -10501,6 +10639,9 @@ msgstr "W"
 msgid "WLAN connection"
 msgstr ""
 
+msgid "WMA Pro downmix"
+msgstr ""
+
 msgid "WSS on 4:3"
 msgstr "WSS บน 4:3"
 
@@ -10788,7 +10929,7 @@ msgstr ""
 msgid "When enabled, the VCR scart option will be shown on the main menu"
 msgstr ""
 
-msgid "When enabled, the channel selection list will be hidden while listening to a radio channel"
+msgid "When enabled, the channel selection list will be hidden while listening to a radio channel. When disabled, the option 'Auto play last service in radio mode' is available."
 msgstr ""
 
 msgid "When enabled, the infobar will be displayed when a new event starts."
@@ -10816,6 +10957,9 @@ msgid "When enabled, the receiver will select an AC3 track (when available)."
 msgstr ""
 
 msgid "When enabled, the receiver will select an AC3+ track (when available)."
+msgstr ""
+
+msgid "When enabled, then when changing bouquets, set the cursor on the service from the channel history in the channel selection list."
 msgstr ""
 
 msgid "When enabled, this setting has more weight than 'Preferred tuner for recordings'."
@@ -11147,6 +11291,9 @@ msgstr ""
 msgid "Zap"
 msgstr ""
 
+msgid "Zap Up/Down"
+msgstr ""
+
 msgid "Zap back to previously tuned service?"
 msgstr ""
 
@@ -11194,7 +11341,7 @@ msgstr "ย้ายไปบนสุด"
 msgid "Zgemma H.S/H.2S/H.2H/H5/H7(old model)"
 msgstr ""
 
-msgid "Zgemma H9(old model)/I55Plus"
+msgid "Zgemma H9(old model)/I55Plus/H8"
 msgstr ""
 
 msgid "Zgemma Star S/2S/H1/H2"
@@ -11242,8 +11389,9 @@ msgstr ""
 msgid "additional cable of rotor"
 msgstr ""
 
-msgid "adult movie/drama"
-msgstr ""
+#, fuzzy
+msgid "adult movie"
+msgstr "เลือกภาพยนต์"
 
 msgid "advanced"
 msgstr "ขั้นสูง"
@@ -11335,9 +11483,6 @@ msgstr "ดีขึ้น"
 msgid "black"
 msgstr "ดำ"
 
-msgid "black & white"
-msgstr ""
-
 msgid "blacklist"
 msgstr "รายการต้องห้าม"
 
@@ -11369,7 +11514,7 @@ msgstr ""
 msgid "chapters"
 msgstr "บทที่"
 
-msgid "childrens's/youth program (general)"
+msgid "childrens's youth program (general)"
 msgstr ""
 
 msgid "circular left"
@@ -11384,9 +11529,6 @@ msgstr ""
 msgid "comedy"
 msgstr ""
 
-msgid "config menu"
-msgstr "เมนูตั้งค่า"
-
 msgid "confirmed"
 msgstr "ยืนยันแล้ว"
 
@@ -11394,6 +11536,15 @@ msgid "connected"
 msgstr "เชื่อมต่อแล้ว"
 
 msgid "controlled by HDMI"
+msgstr ""
+
+msgid "convert to AC3"
+msgstr ""
+
+msgid "convert to DTS"
+msgstr ""
+
+msgid "convert to multi-channel PCM"
 msgstr ""
 
 msgid "cooking"
@@ -11451,7 +11602,7 @@ msgstr ""
 msgid "economics/social advisory"
 msgstr ""
 
-msgid "education/science/factual topics (general)"
+msgid "educational/science/factual topics (general)"
 msgstr ""
 
 msgid "embedded"
@@ -11541,7 +11692,7 @@ msgstr ""
 msgid "fine arts"
 msgstr ""
 
-msgid "fitness & health"
+msgid "fitness and health"
 msgstr ""
 
 #, fuzzy
@@ -11582,9 +11733,6 @@ msgid "further education"
 msgstr ""
 
 msgid "game show/quiz/contest"
-msgstr ""
-
-msgid "gardening"
 msgstr ""
 
 msgid "go to deep standby"
@@ -11693,7 +11841,7 @@ msgstr ""
 msgid "literature"
 msgstr ""
 
-msgid "live broadcast"
+msgid "local sports"
 msgstr ""
 
 msgid "locked"
@@ -11720,6 +11868,10 @@ msgstr "เมนู"
 msgid "mins"
 msgstr "น."
 
+#, fuzzy
+msgid "module disabled"
+msgstr "ไม่ใช้แล้ว"
+
 msgid "month"
 msgstr "เดือน"
 
@@ -11741,7 +11893,7 @@ msgstr "ย้ายไปบนสุด"
 msgid "move up to previous entry"
 msgstr "ย้ายไปก่อนหน้านี้"
 
-msgid "movie/drama (general)"
+msgid "movie (general)"
 msgstr ""
 
 msgid "multi"
@@ -11874,9 +12026,6 @@ msgstr "ตั้งค่า Nameserver"
 msgid "original"
 msgstr ""
 
-msgid "original language"
-msgstr ""
-
 msgid "pass"
 msgstr "ผ่าน"
 
@@ -11897,6 +12046,13 @@ msgstr ""
 
 msgid "pre-school children's program"
 msgstr ""
+
+msgid "preserve bookmarks in cuts"
+msgstr ""
+
+#, fuzzy
+msgid "priority"
+msgstr "สำคัญ"
 
 msgid "receiver software because updates are available."
 msgstr ""
@@ -11921,6 +12077,10 @@ msgstr "ลบหลังจากตำแหน่งนี้ออก"
 
 msgid "remove before this position"
 msgstr "ลบก่อนหน้าตำแหน่งนี้ออก"
+
+#, fuzzy
+msgid "remove bookmarks in cuts"
+msgstr "ลบบุ๊คมาร์ค"
 
 msgid "remove this mark"
 msgstr "ลบรายการนี้ออก"
@@ -11974,7 +12134,7 @@ msgstr "เลือกเมนูจากรายการ"
 msgid "serious music/classic music"
 msgstr ""
 
-msgid "serious/classical/religious/historical movie/drama"
+msgid "serious/classical/religious/historical drama"
 msgstr ""
 
 #, fuzzy
@@ -12054,13 +12214,13 @@ msgstr ""
 msgid "slot%s - %s, without backup"
 msgstr ""
 
-msgid "soap/melodram/folkloric"
+msgid "soap/melodrama/folkloric"
 msgstr ""
 
 msgid "social/political issues/economics (general)"
 msgstr ""
 
-msgid "social/spiritual science"
+msgid "social/spiritual sciences"
 msgstr ""
 
 msgid "space"
@@ -12112,10 +12272,10 @@ msgstr "เลือกซับไตเติ้ลต่อไป"
 msgid "talk show"
 msgstr ""
 
-msgid "team sports"
+msgid "team sports/excluding football"
 msgstr ""
 
-msgid "technology/natural science"
+msgid "technology/natural sciences"
 msgstr ""
 
 msgid "template file"
@@ -12164,13 +12324,16 @@ msgstr ""
 msgid "unknown service"
 msgstr "ไม่ทราบชนิดบริการ"
 
-msgid "unpublished"
-msgstr ""
-
 msgid "untestable"
 msgstr ""
 
 msgid "until standby/restart"
+msgstr ""
+
+msgid "use HDMI cacenter"
+msgstr ""
+
+msgid "use best / controlled by HDMI"
 msgstr ""
 
 msgid "user defined"
@@ -12182,6 +12345,9 @@ msgstr "ผู้ใช้ระบุ"
 
 msgid "variety show"
 msgstr ""
+
+msgid "version"
+msgstr "รุ่น"
 
 msgid "vertical"
 msgstr "แนวตั้ง (V)"
