--- a/po/fy.po
+++ b/po/fy.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-12-22 15:03+0100\n"
+"POT-Creation-Date: 2022-07-30 14:55+0200\n"
 "PO-Revision-Date: 2008-12-29 16:22+0100\n"
 "Last-Translator: gerrit <gerrit@nedlinux.nl>\n"
 "Language-Team: gerrit <fy@li.org>\n"
@@ -653,7 +653,19 @@ msgstr "A/F ynstellingen"
 msgid "AAC downmix"
 msgstr ""
 
+msgid "AAC transcoding"
+msgstr ""
+
+msgid "AAC+ downmix"
+msgstr ""
+
+msgid "AC3"
+msgstr ""
+
 msgid "AC3 downmix"
+msgstr ""
+
+msgid "AC3 transcoding"
 msgstr ""
 
 msgid "ACQUIRING TSID/ONID"
@@ -1145,7 +1157,7 @@ msgstr ""
 msgid "Artist"
 msgstr "Artyst"
 
-msgid "Arts/Culture"
+msgid "Arts/Culture (without music)"
 msgstr ""
 
 msgid "Aruba"
@@ -1326,6 +1338,9 @@ msgstr "Automatysk sykjen"
 msgid "Automatic scan"
 msgstr "Automatysk sykjen"
 
+msgid "Automatically power off box to deep standby mode."
+msgstr ""
+
 msgid "Automatically put the TV in standby whenever the receiver goes into standby or deep standby."
 msgstr ""
 
@@ -1343,6 +1358,9 @@ msgstr "Beskikbere variabele formaten"
 #, fuzzy
 msgid "Available locales are:"
 msgstr "Beskikbere variabele formaten"
+
+msgid "Axas E4HD Ultra"
+msgstr ""
 
 msgid "Azerbaijan"
 msgstr ""
@@ -1630,6 +1648,11 @@ msgstr ""
 msgid "CI assignment"
 msgstr ""
 
+#
+#, fuzzy
+msgid "CI enabled"
+msgstr "ynskeakele"
+
 msgid "CI slot: "
 msgstr ""
 
@@ -1641,6 +1664,10 @@ msgid "Cable"
 msgstr "Kabel"
 
 msgid "Cable Scan"
+msgstr ""
+
+#, python-format
+msgid "Cable scan executable utility not found '%s'!"
 msgstr ""
 
 msgid "Cabo Verde"
@@ -1898,7 +1925,7 @@ msgid ""
 "DiSEqC port %s for %s"
 msgstr ""
 
-msgid "Children/Youth"
+msgid "Children/Youth/Education/Science"
 msgstr ""
 
 msgid "Chile"
@@ -1917,6 +1944,21 @@ msgid "Choose Tuner"
 msgstr ""
 
 msgid "Choose bouquet"
+msgstr ""
+
+msgid "Choose whether AAC sound tracks should be transcoded."
+msgstr ""
+
+msgid "Choose whether AC3 sound tracks should be transcoded."
+msgstr ""
+
+msgid "Choose whether WMA Pro sound tracks should be downmixed."
+msgstr ""
+
+msgid "Choose whether multi channel DTS-HD(HR/MA) sound tracks should be downmixed or transcoded."
+msgstr ""
+
+msgid "Choose whether multi channel aac+ sound tracks should be downmixed to stereo."
 msgstr ""
 
 msgid "Choose whether to scan a single transponder, one satellite or multiple satellites."
@@ -2715,6 +2757,9 @@ msgstr "Tsjechysk"
 msgid "D"
 msgstr "D"
 
+msgid "DAC"
+msgstr ""
+
 #
 msgid "DHCP"
 msgstr "DHCP"
@@ -2727,7 +2772,13 @@ msgstr "afansjearre"
 msgid "DMM normal"
 msgstr ""
 
+msgid "DTS"
+msgstr ""
+
 msgid "DTS downmix"
+msgstr ""
+
+msgid "DTS-HD(HR/MA) downmix"
 msgstr ""
 
 #
@@ -2837,6 +2888,9 @@ msgstr "Tiidsbarren type"
 #, fuzzy
 msgid "Default+Picon"
 msgstr "Wyzigje ynstellingen"
+
+msgid "Define additional delay in milliseconds before start of http(s) streams, e.g. to connect a remote tuner, you use a complex system of DiSEqC."
+msgstr ""
 
 msgid "Define the location of the EPG Cache file."
 msgstr ""
@@ -3087,6 +3141,9 @@ msgstr "Map %s bestiit net"
 #
 msgid "Disable"
 msgstr "Utskeakelje"
+
+msgid "Disable FCC during recordings"
+msgstr ""
 
 #
 msgid "Disable Picture in Picture"
@@ -3378,6 +3435,11 @@ msgid "Downloadable plugins"
 msgstr "Binnen te heljen ynstekkers"
 
 #
+#, fuzzy
+msgid "Downloaded Images"
+msgstr "Binnenheljen fan"
+
+#
 msgid "Downloading"
 msgstr "Binnenheljen fan"
 
@@ -3393,6 +3455,12 @@ msgstr ""
 #
 msgid "Downloading plugin information. Please wait..."
 msgstr "Binnenheljen fan ynstekker ynformaasje..."
+
+msgid "Downmix"
+msgstr ""
+
+msgid "Drama and Films"
+msgstr ""
 
 #
 #, fuzzy
@@ -3443,7 +3511,7 @@ msgid "ERROR - failed to scan (%s)!"
 msgstr "Flater - Sykjen mislearre (%s)!"
 
 #, python-format
-msgid "ERROR downloading file %s"
+msgid "ERROR downloading file %s/%s"
 msgstr ""
 
 #
@@ -3507,9 +3575,6 @@ msgstr "Bewukje titel"
 
 #
 msgid "Edit update source url"
-msgstr ""
-
-msgid "Education/Science/..."
 msgstr ""
 
 msgid "Egypt"
@@ -3583,6 +3648,11 @@ msgid "Enable auto fastscan for %s"
 msgstr ""
 
 #
+#, fuzzy
+msgid "Enable bluetooth audio"
+msgstr "Bewurkjen boeket oan"
+
+#
 msgid "Enable bouquet edit"
 msgstr "Bewurkjen boeket oan"
 
@@ -3617,6 +3687,11 @@ msgstr ""
 
 msgid "Enable parental protection"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Enable power off timer"
+msgstr "Ferpleatsen mode oan"
 
 msgid "Enable remote enigma2 receiver to be tried to tune into services that cannot be tuned into locally (e.g. tuner is occupied or service type is unavailable on the local tuner. Specify complete URL including http:// and port number (normally ...:8001), e.g. http://second_box:8001."
 msgstr ""
@@ -3780,11 +3855,6 @@ msgstr ""
 
 #
 msgid "Error"
-msgstr "Flater"
-
-#
-#, fuzzy, python-format
-msgid "Error %s"
 msgstr "Flater"
 
 msgid "Error code"
@@ -4061,6 +4131,16 @@ msgid ""
 msgstr ""
 
 #
+#, fuzzy
+msgid "FCC enabled"
+msgstr "ynskeakele"
+
+#
+#, fuzzy
+msgid "FCCSetup"
+msgstr "Ynstelle"
+
+#
 msgid "FEC"
 msgstr "FEC"
 
@@ -4156,6 +4236,15 @@ msgstr ""
 #
 msgid "Fast"
 msgstr "Rap"
+
+msgid "Fast Channel Change"
+msgstr ""
+
+msgid "Fast Channel Change Setup"
+msgstr ""
+
+msgid "Fast Channel Change setup"
+msgstr ""
 
 #
 msgid "Fast DiSEqC"
@@ -4268,7 +4357,13 @@ msgstr ""
 msgid "Force legacy signal stats"
 msgstr ""
 
+msgid "Force power off (even when not in standby)"
+msgstr ""
+
 msgid "Force zap to recording service in standby"
+msgstr ""
+
+msgid "Forces deep standby, even when not in standby mode. Scheduled recordings remain unaffected."
 msgstr ""
 
 #
@@ -4355,6 +4450,11 @@ msgstr ""
 msgid "Full view resolution"
 msgstr ""
 
+#
+#, fuzzy
+msgid "Fullbackup Images"
+msgstr "Flash"
+
 msgid "Function of OK button"
 msgstr ""
 
@@ -4401,6 +4501,9 @@ msgid "General AC3 delay"
 msgstr ""
 
 msgid "General PCM delay"
+msgstr ""
+
+msgid "General bluetooth audio delay"
 msgstr ""
 
 #
@@ -4588,7 +4691,10 @@ msgstr ""
 msgid "HD2400"
 msgstr ""
 
-msgid "HD60/Multibox/Multibox SE"
+msgid "HD60/HD66SE/Multibox/Multibox SE"
+msgstr ""
+
+msgid "HDMI"
 msgstr ""
 
 msgid "HDMI Colordepth"
@@ -4662,6 +4768,9 @@ msgstr "Hurde skiif"
 msgid "Harddisk Setup"
 msgstr ""
 
+msgid "Hardware Accelerated"
+msgstr ""
+
 msgid "Hardware: "
 msgstr ""
 
@@ -4709,6 +4818,11 @@ msgstr ""
 #
 msgid "High bitrate support"
 msgstr ""
+
+#
+#, fuzzy
+msgid "History Prev/Next"
+msgstr "Fabryks ynstellingen"
 
 msgid "History back"
 msgstr ""
@@ -4767,6 +4881,9 @@ msgstr "Hoe folle minuten wolle jo opnimme?"
 #
 msgid "How many minutes do you want to record?"
 msgstr "Hoe folle minuten wolle jo opnimme?"
+
+msgid "Http(s) stream start delay"
+msgstr ""
 
 #
 msgid "Hue"
@@ -4848,6 +4965,9 @@ msgid "If set to 'yes' signal values (SNR, etc) will be calculated from API V3. 
 msgstr ""
 
 msgid "If set to 'yes' the same commands will be sent to the TV for deep standby events, as are sent during regular standby events."
+msgstr ""
+
+msgid "If the box is supposed to enter deep standby e.g. monday night at 1 AM, it actually is already tuesday. To enable this anyway, differing next day start time can be specified here."
 msgstr ""
 
 msgid "If using multiple uncommitted switches the DiSEqC commands must be sent multiple times. Set to the number of uncommitted switches in the chain minus one."
@@ -5369,9 +5489,6 @@ msgstr "Links"
 msgid "Left from servicename"
 msgstr ""
 
-msgid "Leisure hobbies"
-msgstr ""
-
 msgid "Lesotho"
 msgstr ""
 
@@ -5684,6 +5801,11 @@ msgstr "Lithuaniansk"
 msgid "Mauritius"
 msgstr "Favoryten"
 
+#
+#, fuzzy
+msgid "Max channels"
+msgstr "Kanaal"
+
 msgid "Max memory positions"
 msgstr ""
 
@@ -5699,14 +5821,6 @@ msgstr ""
 #
 msgid "Media player"
 msgstr "Media Spieler"
-
-#
-#, fuzzy
-msgid "Media player: GStreamer, version "
-msgstr "Nije ferzje:"
-
-msgid "Media player: ffmpeg, version "
-msgstr ""
 
 #
 #, fuzzy
@@ -5946,9 +6060,6 @@ msgstr ""
 msgid "Movie selection"
 msgstr "Tiidsbarren seleksje"
 
-msgid "Movie/Drama"
-msgstr ""
-
 #
 msgid "Movielist menu"
 msgstr "Filmlyst menu"
@@ -6162,7 +6273,7 @@ msgstr ""
 msgid "New Zealand"
 msgstr ""
 
-msgid "News Current Affairs"
+msgid "News/Current Affairs/Social"
 msgstr ""
 
 msgctxt "button label, 'next screen'"
@@ -6171,6 +6282,9 @@ msgstr ""
 
 msgctxt "now/next: 'next' event label"
 msgid "Next"
+msgstr ""
+
+msgid "Next day starts at"
 msgstr ""
 
 msgid "Nicaragua"
@@ -6542,6 +6656,11 @@ msgstr ""
 msgid "Only on startup"
 msgstr ""
 
+#
+#, fuzzy
+msgid "Only power off"
+msgstr "Ferpleatsen mode oan"
+
 msgid "Only select 'yes' if you are using a multiswich that requires a DiSEqC Port-A command signal. For all other setups select 'no'."
 msgstr ""
 
@@ -6570,7 +6689,7 @@ msgstr ""
 msgid "Operating LED status in standby mode"
 msgstr ""
 
-msgid "Operating LED status while running."
+msgid "Operating LED status while running"
 msgstr ""
 
 msgid "Opkg"
@@ -6714,6 +6833,9 @@ msgstr "Alderlik tasjoch bewurker"
 #
 msgid "Parental control setup"
 msgstr "Alderlik tasjoch"
+
+msgid "Passthrough"
+msgstr ""
 
 msgid "Password"
 msgstr ""
@@ -7220,6 +7342,14 @@ msgstr ""
 msgid "Power management. Consult your receiver's manual for more information."
 msgstr ""
 
+#
+#, fuzzy
+msgid "Power off time"
+msgstr "Sorteer op Tiid"
+
+msgid "Power off timer"
+msgstr ""
+
 msgid "Power on display"
 msgstr ""
 
@@ -7599,6 +7729,9 @@ msgid "Rec"
 msgstr ""
 
 msgid "Recall to previous service"
+msgstr ""
+
+msgid "Receiver or driver does not support FCC"
 msgstr ""
 
 #
@@ -8098,6 +8231,9 @@ msgstr "SNR"
 #
 msgid "SNR:"
 msgstr "SNR:"
+
+msgid "SPDIF"
+msgstr ""
 
 msgid "SRT file"
 msgstr ""
@@ -8911,6 +9047,9 @@ msgstr "Kanaal sykje"
 msgid "Service title mode"
 msgstr "Kies fideo moadus"
 
+msgid "Service type 4097 incorrect for PiP!"
+msgstr ""
+
 #
 msgid ""
 "Service unavailable!\n"
@@ -8946,6 +9085,11 @@ msgstr ""
 
 msgid "Set blocktimes by weekday"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Set cursor on service from channel history"
+msgstr "set foarich kanaal yn skiednis"
 
 msgid "Set default"
 msgstr ""
@@ -9091,9 +9235,6 @@ msgstr "Ynfobalke sjen litte by barren wiksel"
 #, fuzzy
 msgid "Show EPG..."
 msgstr "EPG sjen litte..."
-
-msgid "Show Games show"
-msgstr ""
 
 msgid "Show InfoBar"
 msgstr ""
@@ -9350,6 +9491,9 @@ msgstr ""
 msgid "Show warning when timeshift is stopped"
 msgstr ""
 
+msgid "Show/Game Show/Leisure hobbies"
+msgstr ""
+
 msgid "Show/hide window"
 msgstr ""
 
@@ -9546,9 +9690,6 @@ msgid "Smartcard PIN"
 msgstr ""
 
 msgid "Smooth"
-msgstr ""
-
-msgid "Social/Political/Economics"
 msgstr ""
 
 msgid "SocketMMI"
@@ -10132,7 +10273,7 @@ msgstr ""
 msgid "Switch on the display during Suspend Mode"
 msgstr ""
 
-msgid "Switch on the display during operation."
+msgid "Switch on the display during operation"
 msgstr ""
 
 #
@@ -10619,10 +10760,16 @@ msgstr ""
 msgid "This option allows you to show the full screen path leading to the current screen."
 msgstr ""
 
+msgid "This option allows you to switch audio to bluetooth speakers."
+msgstr ""
+
 msgid "This option allows you to view the old and new settings side by side."
 msgstr ""
 
 msgid "This option can be useful for long HDMI cables."
+msgstr ""
+
+msgid "This option configures the general audio delay for bluetooth speakers."
 msgstr ""
 
 msgid "This option set the level of surpression of mosquito noise (Mosquito Noise is random aliasing as a result of strong compression). Obviously this goes at the cost of picture details."
@@ -11743,6 +11890,9 @@ msgstr "W"
 msgid "WLAN connection"
 msgstr ""
 
+msgid "WMA Pro downmix"
+msgstr ""
+
 #
 msgid "WSS on 4:3"
 msgstr "WSS by 4:3"
@@ -12041,7 +12191,7 @@ msgstr ""
 msgid "When enabled, the VCR scart option will be shown on the main menu"
 msgstr ""
 
-msgid "When enabled, the channel selection list will be hidden while listening to a radio channel"
+msgid "When enabled, the channel selection list will be hidden while listening to a radio channel. When disabled, the option 'Auto play last service in radio mode' is available."
 msgstr ""
 
 msgid "When enabled, the infobar will be displayed when a new event starts."
@@ -12069,6 +12219,9 @@ msgid "When enabled, the receiver will select an AC3 track (when available)."
 msgstr ""
 
 msgid "When enabled, the receiver will select an AC3+ track (when available)."
+msgstr ""
+
+msgid "When enabled, then when changing bouquets, set the cursor on the service from the channel history in the channel selection list."
 msgstr ""
 
 msgid "When enabled, this setting has more weight than 'Preferred tuner for recordings'."
@@ -12416,6 +12569,9 @@ msgstr ""
 msgid "Zap"
 msgstr ""
 
+msgid "Zap Up/Down"
+msgstr ""
+
 #
 msgid "Zap back to previously tuned service?"
 msgstr ""
@@ -12466,7 +12622,7 @@ msgstr "Neit it earste menu item gean"
 msgid "Zgemma H.S/H.2S/H.2H/H5/H7(old model)"
 msgstr ""
 
-msgid "Zgemma H9(old model)/I55Plus"
+msgid "Zgemma H9(old model)/I55Plus/H8"
 msgstr ""
 
 msgid "Zgemma Star S/2S/H1/H2"
@@ -12522,8 +12678,10 @@ msgstr ""
 msgid "additional cable of rotor"
 msgstr ""
 
-msgid "adult movie/drama"
-msgstr ""
+#
+#, fuzzy
+msgid "adult movie"
+msgstr "Kies in film"
 
 #
 msgid "advanced"
@@ -12624,9 +12782,6 @@ msgstr "better"
 msgid "black"
 msgstr "swart"
 
-msgid "black & white"
-msgstr ""
-
 #
 msgid "blacklist"
 msgstr "swarte lyst"
@@ -12662,7 +12817,7 @@ msgstr ""
 msgid "chapters"
 msgstr "Haadstikken"
 
-msgid "childrens's/youth program (general)"
+msgid "childrens's youth program (general)"
 msgstr ""
 
 #
@@ -12680,10 +12835,6 @@ msgid "comedy"
 msgstr ""
 
 #
-msgid "config menu"
-msgstr "konfiguraasje menu"
-
-#
 msgid "confirmed"
 msgstr "befestigt"
 
@@ -12692,6 +12843,15 @@ msgid "connected"
 msgstr "oanslúten"
 
 msgid "controlled by HDMI"
+msgstr ""
+
+msgid "convert to AC3"
+msgstr ""
+
+msgid "convert to DTS"
+msgstr ""
+
+msgid "convert to multi-channel PCM"
 msgstr ""
 
 msgid "cooking"
@@ -12756,7 +12916,7 @@ msgstr ""
 msgid "economics/social advisory"
 msgstr ""
 
-msgid "education/science/factual topics (general)"
+msgid "educational/science/factual topics (general)"
 msgstr ""
 
 msgid "embedded"
@@ -12855,7 +13015,7 @@ msgstr ""
 msgid "fine arts"
 msgstr ""
 
-msgid "fitness & health"
+msgid "fitness and health"
 msgstr ""
 
 #
@@ -12902,9 +13062,6 @@ msgid "further education"
 msgstr ""
 
 msgid "game show/quiz/contest"
-msgstr ""
-
-msgid "gardening"
 msgstr ""
 
 #
@@ -13033,7 +13190,7 @@ msgstr ""
 msgid "literature"
 msgstr ""
 
-msgid "live broadcast"
+msgid "local sports"
 msgstr ""
 
 #
@@ -13065,6 +13222,11 @@ msgid "mins"
 msgstr "min"
 
 #
+#, fuzzy
+msgid "module disabled"
+msgstr "útskeakele"
+
+#
 msgid "month"
 msgstr "maand"
 
@@ -13090,7 +13252,7 @@ msgstr "Neit it earste menu item gean"
 msgid "move up to previous entry"
 msgstr "Nei it foarige menu item "
 
-msgid "movie/drama (general)"
+msgid "movie (general)"
 msgstr ""
 
 msgid "multi"
@@ -13241,9 +13403,6 @@ msgstr "Iepenje nammeserver konfiguraasje"
 msgid "original"
 msgstr ""
 
-msgid "original language"
-msgstr ""
-
 #
 msgid "pass"
 msgstr "trochgean"
@@ -13266,6 +13425,12 @@ msgid "popular culture/traditional arts"
 msgstr ""
 
 msgid "pre-school children's program"
+msgstr ""
+
+msgid "preserve bookmarks in cuts"
+msgstr ""
+
+msgid "priority"
 msgstr ""
 
 msgid "receiver software because updates are available."
@@ -13296,6 +13461,11 @@ msgstr "nei dizze posysje alles ferwiderje"
 #
 msgid "remove before this position"
 msgstr "foar dizze posysje alles ferwiderje"
+
+#
+#, fuzzy
+msgid "remove bookmarks in cuts"
+msgstr "boekmerk ferwiderje"
 
 #
 msgid "remove this mark"
@@ -13357,7 +13527,7 @@ msgstr "Kies menu item"
 msgid "serious music/classic music"
 msgstr ""
 
-msgid "serious/classical/religious/historical movie/drama"
+msgid "serious/classical/religious/historical drama"
 msgstr ""
 
 #
@@ -13444,13 +13614,13 @@ msgstr ""
 msgid "slot%s - %s, without backup"
 msgstr ""
 
-msgid "soap/melodram/folkloric"
+msgid "soap/melodrama/folkloric"
 msgstr ""
 
 msgid "social/political issues/economics (general)"
 msgstr ""
 
-msgid "social/spiritual science"
+msgid "social/spiritual sciences"
 msgstr ""
 
 msgid "space"
@@ -13509,10 +13679,10 @@ msgstr "skeakelje nei de folgende undertiteling taal"
 msgid "talk show"
 msgstr ""
 
-msgid "team sports"
+msgid "team sports/excluding football"
 msgstr ""
 
-msgid "technology/natural science"
+msgid "technology/natural sciences"
 msgstr ""
 
 #
@@ -13569,14 +13739,17 @@ msgstr ""
 msgid "unknown service"
 msgstr "unbeneame kanaal"
 
-msgid "unpublished"
-msgstr ""
-
 msgid "untestable"
 msgstr ""
 
 #
 msgid "until standby/restart"
+msgstr ""
+
+msgid "use HDMI cacenter"
+msgstr ""
+
+msgid "use best / controlled by HDMI"
 msgstr ""
 
 #
@@ -13590,6 +13763,9 @@ msgstr "brûkers ynstelling"
 
 msgid "variety show"
 msgstr ""
+
+msgid "version"
+msgstr "ferzje"
 
 #
 msgid "vertical"
