--- a/po/is.po
+++ b/po/is.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-12-22 15:03+0100\n"
+"POT-Creation-Date: 2022-07-30 14:55+0200\n"
 "PO-Revision-Date: 2020-05-16 18:44+0200\n"
 "Last-Translator: Baldur <bsveinsson@gmail.com>\n"
 "Language-Team: Polar Team/LT Team <baddi@oreind.is>\n"
@@ -647,7 +647,19 @@ msgstr "Stilla hljóð/mynd"
 msgid "AAC downmix"
 msgstr ""
 
+msgid "AAC transcoding"
+msgstr ""
+
+msgid "AAC+ downmix"
+msgstr ""
+
+msgid "AC3"
+msgstr ""
+
 msgid "AC3 downmix"
+msgstr ""
+
+msgid "AC3 transcoding"
 msgstr ""
 
 msgid "ACQUIRING TSID/ONID"
@@ -1123,7 +1135,7 @@ msgstr ""
 msgid "Artist"
 msgstr "Listamaður"
 
-msgid "Arts/Culture"
+msgid "Arts/Culture (without music)"
 msgstr ""
 
 msgid "Aruba"
@@ -1298,6 +1310,9 @@ msgstr "Sjálfvirk leit"
 msgid "Automatic scan"
 msgstr "Sjálfvirk leit"
 
+msgid "Automatically power off box to deep standby mode."
+msgstr ""
+
 msgid "Automatically put the TV in standby whenever the receiver goes into standby or deep standby."
 msgstr ""
 
@@ -1313,6 +1328,9 @@ msgstr "Útfærslur tiltækra forma"
 #, fuzzy
 msgid "Available locales are:"
 msgstr "Útfærslur tiltækra forma"
+
+msgid "Axas E4HD Ultra"
+msgstr ""
 
 msgid "Azerbaijan"
 msgstr ""
@@ -1572,6 +1590,11 @@ msgstr ""
 msgid "CI assignment"
 msgstr "CI stillingar"
 
+#
+#, fuzzy
+msgid "CI enabled"
+msgstr "virkt"
+
 msgid "CI slot: "
 msgstr ""
 
@@ -1582,6 +1605,10 @@ msgid "Cable"
 msgstr "Kapalkerfi"
 
 msgid "Cable Scan"
+msgstr ""
+
+#, python-format
+msgid "Cable scan executable utility not found '%s'!"
 msgstr ""
 
 msgid "Cabo Verde"
@@ -1817,7 +1844,7 @@ msgid ""
 "DiSEqC port %s for %s"
 msgstr ""
 
-msgid "Children/Youth"
+msgid "Children/Youth/Education/Science"
 msgstr ""
 
 msgid "Chile"
@@ -1836,6 +1863,21 @@ msgid "Choose Tuner"
 msgstr ""
 
 msgid "Choose bouquet"
+msgstr ""
+
+msgid "Choose whether AAC sound tracks should be transcoded."
+msgstr ""
+
+msgid "Choose whether AC3 sound tracks should be transcoded."
+msgstr ""
+
+msgid "Choose whether WMA Pro sound tracks should be downmixed."
+msgstr ""
+
+msgid "Choose whether multi channel DTS-HD(HR/MA) sound tracks should be downmixed or transcoded."
+msgstr ""
+
+msgid "Choose whether multi channel aac+ sound tracks should be downmixed to stereo."
 msgstr ""
 
 msgid "Choose whether to scan a single transponder, one satellite or multiple satellites."
@@ -2578,6 +2620,9 @@ msgstr "Tékkneska"
 msgid "D"
 msgstr "D"
 
+msgid "DAC"
+msgstr ""
+
 msgid "DHCP"
 msgstr "DHCP"
 
@@ -2589,7 +2634,13 @@ msgstr "meiri stillingar"
 msgid "DMM normal"
 msgstr ""
 
+msgid "DTS"
+msgstr ""
+
 msgid "DTS downmix"
+msgstr ""
+
+msgid "DTS-HD(HR/MA) downmix"
 msgstr ""
 
 msgid "DUAL LAYER DVD"
@@ -2696,6 +2747,9 @@ msgstr "Gerð Tímastillngar"
 #, fuzzy
 msgid "Default+Picon"
 msgstr "Upphafs stillingar"
+
+msgid "Define additional delay in milliseconds before start of http(s) streams, e.g. to connect a remote tuner, you use a complex system of DiSEqC."
+msgstr ""
 
 msgid "Define the location of the EPG Cache file."
 msgstr ""
@@ -2946,6 +3000,9 @@ msgstr "Mappa %s ekki til."
 #
 msgid "Disable"
 msgstr "Gera óvirkt"
+
+msgid "Disable FCC during recordings"
+msgstr ""
 
 #
 msgid "Disable Picture in Picture"
@@ -3236,6 +3293,10 @@ msgstr "Niðurhalanleg ný íforrit"
 msgid "Downloadable plugins"
 msgstr "Niðurhalanleg íforrit"
 
+#, fuzzy
+msgid "Downloaded Images"
+msgstr "Hleð niður"
+
 msgid "Downloading"
 msgstr "Hleð niður"
 
@@ -3249,6 +3310,12 @@ msgstr "Reyni að hlaða niður nýjum pakka lista. Vinsamlega bíðið..."
 
 msgid "Downloading plugin information. Please wait..."
 msgstr "Hala niður íforrits upplýsingum. Vinsamlega bíðið..."
+
+msgid "Downmix"
+msgstr ""
+
+msgid "Drama and Films"
+msgstr ""
 
 #
 #, fuzzy
@@ -3299,7 +3366,7 @@ msgid "ERROR - failed to scan (%s)!"
 msgstr "VILLA - gat ekki leitað (%s)!"
 
 #, python-format
-msgid "ERROR downloading file %s"
+msgid "ERROR downloading file %s/%s"
 msgstr ""
 
 #
@@ -3361,9 +3428,6 @@ msgstr "Breyta titili"
 
 msgid "Edit update source url"
 msgstr "Breyta uppfærslu uppruna slóð"
-
-msgid "Education/Science/..."
-msgstr ""
 
 msgid "Egypt"
 msgstr ""
@@ -3436,6 +3500,11 @@ msgid "Enable auto fastscan for %s"
 msgstr ""
 
 #
+#, fuzzy
+msgid "Enable bluetooth audio"
+msgstr "Byrja féttu breytingu"
+
+#
 msgid "Enable bouquet edit"
 msgstr "Byrja féttu breytingu"
 
@@ -3469,6 +3538,11 @@ msgstr ""
 
 msgid "Enable parental protection"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Enable power off timer"
+msgstr "Virkja færlsu stöðu"
 
 msgid "Enable remote enigma2 receiver to be tried to tune into services that cannot be tuned into locally (e.g. tuner is occupied or service type is unavailable on the local tuner. Specify complete URL including http:// and port number (normally ...:8001), e.g. http://second_box:8001."
 msgstr ""
@@ -3627,11 +3701,6 @@ msgstr ""
 
 #
 msgid "Error"
-msgstr "Villa"
-
-#
-#, fuzzy, python-format
-msgid "Error %s"
 msgstr "Villa"
 
 msgid "Error code"
@@ -3900,6 +3969,16 @@ msgid ""
 msgstr ""
 
 #
+#, fuzzy
+msgid "FCC enabled"
+msgstr "virkt"
+
+#
+#, fuzzy
+msgid "FCCSetup"
+msgstr "Uppsetning"
+
+#
 msgid "FEC"
 msgstr "FEC"
 
@@ -3992,6 +4071,15 @@ msgstr ""
 #
 msgid "Fast"
 msgstr "Hratt"
+
+msgid "Fast Channel Change"
+msgstr ""
+
+msgid "Fast Channel Change Setup"
+msgstr ""
+
+msgid "Fast Channel Change setup"
+msgstr ""
 
 #
 msgid "Fast DiSEqC"
@@ -4103,7 +4191,13 @@ msgstr "Eftirfarandi aðgerðir verða framkvæmdar eftir að þú ýtir á OK!"
 msgid "Force legacy signal stats"
 msgstr ""
 
+msgid "Force power off (even when not in standby)"
+msgstr ""
+
 msgid "Force zap to recording service in standby"
+msgstr ""
+
+msgid "Forces deep standby, even when not in standby mode. Scheduled recordings remain unaffected."
 msgstr ""
 
 #
@@ -4189,6 +4283,11 @@ msgstr ""
 msgid "Full view resolution"
 msgstr ""
 
+#
+#, fuzzy
+msgid "Fullbackup Images"
+msgstr "Forritun"
+
 msgid "Function of OK button"
 msgstr ""
 
@@ -4240,6 +4339,11 @@ msgstr "Heildar AC3 seinkun"
 #, fuzzy
 msgid "General PCM delay"
 msgstr "Heildar PCM seinkun"
+
+#
+#, fuzzy
+msgid "General bluetooth audio delay"
+msgstr "Heildar AC3 seinkun"
 
 #
 msgid "Genre"
@@ -4423,7 +4527,10 @@ msgstr ""
 msgid "HD2400"
 msgstr ""
 
-msgid "HD60/Multibox/Multibox SE"
+msgid "HD60/HD66SE/Multibox/Multibox SE"
+msgstr ""
+
+msgid "HDMI"
 msgstr ""
 
 msgid "HDMI Colordepth"
@@ -4499,6 +4606,9 @@ msgstr "Harður diskur"
 msgid "Harddisk Setup"
 msgstr ""
 
+msgid "Hardware Accelerated"
+msgstr ""
+
 msgid "Hardware: "
 msgstr ""
 
@@ -4546,6 +4656,11 @@ msgstr "Hierarchy upplýsingar"
 #
 msgid "High bitrate support"
 msgstr "Háhraða stuðningur"
+
+#
+#, fuzzy
+msgid "History Prev/Next"
+msgstr "Verksmiðju stilling"
 
 msgid "History back"
 msgstr ""
@@ -4604,6 +4719,9 @@ msgstr "Í hvað margar mínútur viltu taka upp?"
 #
 msgid "How many minutes do you want to record?"
 msgstr "Í hvað margar mínútur viltu taka upp?"
+
+msgid "Http(s) stream start delay"
+msgstr ""
 
 #
 msgid "Hue"
@@ -4685,6 +4803,9 @@ msgid "If set to 'yes' signal values (SNR, etc) will be calculated from API V3. 
 msgstr ""
 
 msgid "If set to 'yes' the same commands will be sent to the TV for deep standby events, as are sent during regular standby events."
+msgstr ""
+
+msgid "If the box is supposed to enter deep standby e.g. monday night at 1 AM, it actually is already tuesday. To enable this anyway, differing next day start time can be specified here."
 msgstr ""
 
 msgid "If using multiple uncommitted switches the DiSEqC commands must be sent multiple times. Set to the number of uncommitted switches in the chain minus one."
@@ -5204,9 +5325,6 @@ msgstr "Vinstri"
 msgid "Left from servicename"
 msgstr ""
 
-msgid "Leisure hobbies"
-msgstr ""
-
 msgid "Lesotho"
 msgstr ""
 
@@ -5516,6 +5634,10 @@ msgstr "Litháíska"
 msgid "Mauritius"
 msgstr "Eftirlætis listar"
 
+#, fuzzy
+msgid "Max channels"
+msgstr "Rás"
+
 msgid "Max memory positions"
 msgstr ""
 
@@ -5532,14 +5654,6 @@ msgstr ""
 #
 msgid "Media player"
 msgstr "Spilari"
-
-#
-#, fuzzy
-msgid "Media player: GStreamer, version "
-msgstr "Ný útgáfa:"
-
-msgid "Media player: ffmpeg, version "
-msgstr ""
 
 #
 #, fuzzy
@@ -5777,9 +5891,6 @@ msgstr "Staðsetning bíómynda"
 msgid "Movie selection"
 msgstr "Staðsetning bíómynda"
 
-msgid "Movie/Drama"
-msgstr ""
-
 #
 msgid "Movielist menu"
 msgstr "Bíómynda valmynd"
@@ -5992,7 +6103,7 @@ msgstr ""
 msgid "New Zealand"
 msgstr ""
 
-msgid "News Current Affairs"
+msgid "News/Current Affairs/Social"
 msgstr ""
 
 msgctxt "button label, 'next screen'"
@@ -6001,6 +6112,9 @@ msgstr ""
 
 msgctxt "now/next: 'next' event label"
 msgid "Next"
+msgstr ""
+
+msgid "Next day starts at"
 msgstr ""
 
 msgid "Nicaragua"
@@ -6375,6 +6489,11 @@ msgstr ""
 msgid "Only on startup"
 msgstr ""
 
+#
+#, fuzzy
+msgid "Only power off"
+msgstr "Virkja færlsu stöðu"
+
 msgid "Only select 'yes' if you are using a multiswich that requires a DiSEqC Port-A command signal. For all other setups select 'no'."
 msgstr ""
 
@@ -6403,7 +6522,7 @@ msgstr ""
 msgid "Operating LED status in standby mode"
 msgstr ""
 
-msgid "Operating LED status while running."
+msgid "Operating LED status while running"
 msgstr ""
 
 msgid "Opkg"
@@ -6545,6 +6664,9 @@ msgstr "Forritun foreldrakóða á rásir"
 #
 msgid "Parental control setup"
 msgstr "Uppsetning á foreldrastýringu"
+
+msgid "Passthrough"
+msgstr ""
 
 msgid "Password"
 msgstr ""
@@ -7047,6 +7169,14 @@ msgstr ""
 msgid "Power management. Consult your receiver's manual for more information."
 msgstr ""
 
+#
+#, fuzzy
+msgid "Power off time"
+msgstr "Raða Tíma"
+
+msgid "Power off timer"
+msgstr ""
+
 msgid "Power on display"
 msgstr ""
 
@@ -7424,6 +7554,9 @@ msgid "Rec"
 msgstr ""
 
 msgid "Recall to previous service"
+msgstr ""
+
+msgid "Receiver or driver does not support FCC"
 msgstr ""
 
 #
@@ -7918,6 +8051,9 @@ msgstr "SNR"
 #
 msgid "SNR:"
 msgstr "SNR:"
+
+msgid "SPDIF"
+msgstr ""
 
 msgid "SRT file"
 msgstr ""
@@ -8726,6 +8862,9 @@ msgstr "Rása leit"
 msgid "Service title mode"
 msgstr "Veldu mynd stillingu"
 
+msgid "Service type 4097 incorrect for PiP!"
+msgstr ""
+
 #
 msgid ""
 "Service unavailable!\n"
@@ -8762,6 +8901,11 @@ msgstr ""
 
 msgid "Set blocktimes by weekday"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Set cursor on service from channel history"
+msgstr "fyrri rás í sögu"
 
 msgid "Set default"
 msgstr ""
@@ -8906,9 +9050,6 @@ msgstr "Sýna upplýsinga borða við breytingu á atriði"
 #, fuzzy
 msgid "Show EPG..."
 msgstr "sýna EPG"
-
-msgid "Show Games show"
-msgstr ""
 
 msgid "Show InfoBar"
 msgstr ""
@@ -9165,6 +9306,9 @@ msgstr ""
 msgid "Show warning when timeshift is stopped"
 msgstr ""
 
+msgid "Show/Game Show/Leisure hobbies"
+msgstr ""
+
 msgid "Show/hide window"
 msgstr ""
 
@@ -9365,9 +9509,6 @@ msgid "Smartcard PIN"
 msgstr ""
 
 msgid "Smooth"
-msgstr ""
-
-msgid "Social/Political/Economics"
 msgstr ""
 
 msgid "SocketMMI"
@@ -9963,7 +10104,7 @@ msgstr "Skoða lista af tiltækum Skjá og viðmóts viðbótum."
 
 #
 #, fuzzy
-msgid "Switch on the display during operation."
+msgid "Switch on the display during operation"
 msgstr "Skoða lista af tiltækum Skjá og viðmóts viðbótum."
 
 #
@@ -10455,10 +10596,16 @@ msgstr ""
 msgid "This option allows you to show the full screen path leading to the current screen."
 msgstr ""
 
+msgid "This option allows you to switch audio to bluetooth speakers."
+msgstr ""
+
 msgid "This option allows you to view the old and new settings side by side."
 msgstr ""
 
 msgid "This option can be useful for long HDMI cables."
+msgstr ""
+
+msgid "This option configures the general audio delay for bluetooth speakers."
 msgstr ""
 
 msgid "This option set the level of surpression of mosquito noise (Mosquito Noise is random aliasing as a result of strong compression). Obviously this goes at the cost of picture details."
@@ -11562,6 +11709,9 @@ msgstr "W"
 msgid "WLAN connection"
 msgstr "WLAN nettenging"
 
+msgid "WMA Pro downmix"
+msgstr ""
+
 #
 msgid "WSS on 4:3"
 msgstr "WSS á 4:3"
@@ -11859,7 +12009,7 @@ msgstr ""
 msgid "When enabled, the VCR scart option will be shown on the main menu"
 msgstr ""
 
-msgid "When enabled, the channel selection list will be hidden while listening to a radio channel"
+msgid "When enabled, the channel selection list will be hidden while listening to a radio channel. When disabled, the option 'Auto play last service in radio mode' is available."
 msgstr ""
 
 msgid "When enabled, the infobar will be displayed when a new event starts."
@@ -11887,6 +12037,9 @@ msgid "When enabled, the receiver will select an AC3 track (when available)."
 msgstr ""
 
 msgid "When enabled, the receiver will select an AC3+ track (when available)."
+msgstr ""
+
+msgid "When enabled, then when changing bouquets, set the cursor on the service from the channel history in the channel selection list."
 msgstr ""
 
 msgid "When enabled, this setting has more weight than 'Preferred tuner for recordings'."
@@ -12244,6 +12397,9 @@ msgstr ""
 msgid "Zap"
 msgstr ""
 
+msgid "Zap Up/Down"
+msgstr ""
+
 msgid "Zap back to previously tuned service?"
 msgstr "Fara aftur á rás sem áður var stillt á?"
 
@@ -12293,7 +12449,7 @@ msgstr "fara upp í fyrsta atriði"
 msgid "Zgemma H.S/H.2S/H.2H/H5/H7(old model)"
 msgstr ""
 
-msgid "Zgemma H9(old model)/I55Plus"
+msgid "Zgemma H9(old model)/I55Plus/H8"
 msgstr ""
 
 msgid "Zgemma Star S/2S/H1/H2"
@@ -12347,8 +12503,10 @@ msgstr ""
 msgid "additional cable of rotor"
 msgstr ""
 
-msgid "adult movie/drama"
-msgstr ""
+#
+#, fuzzy
+msgid "adult movie"
+msgstr "Veldu mynd"
 
 #
 msgid "advanced"
@@ -12448,9 +12606,6 @@ msgstr "betra"
 msgid "black"
 msgstr "svartur"
 
-msgid "black & white"
-msgstr ""
-
 #
 msgid "blacklist"
 msgstr "svarti listi"
@@ -12486,7 +12641,7 @@ msgstr ""
 msgid "chapters"
 msgstr "kaflar"
 
-msgid "childrens's/youth program (general)"
+msgid "childrens's youth program (general)"
 msgstr ""
 
 #
@@ -12504,10 +12659,6 @@ msgid "comedy"
 msgstr ""
 
 #
-msgid "config menu"
-msgstr "stillinga valmynd"
-
-#
 msgid "confirmed"
 msgstr "staðfest"
 
@@ -12516,6 +12667,15 @@ msgid "connected"
 msgstr "tengt"
 
 msgid "controlled by HDMI"
+msgstr ""
+
+msgid "convert to AC3"
+msgstr ""
+
+msgid "convert to DTS"
+msgstr ""
+
+msgid "convert to multi-channel PCM"
 msgstr ""
 
 msgid "cooking"
@@ -12582,7 +12742,7 @@ msgstr ""
 msgid "economics/social advisory"
 msgstr ""
 
-msgid "education/science/factual topics (general)"
+msgid "educational/science/factual topics (general)"
 msgstr ""
 
 msgid "embedded"
@@ -12681,7 +12841,7 @@ msgstr ""
 msgid "fine arts"
 msgstr ""
 
-msgid "fitness & health"
+msgid "fitness and health"
 msgstr ""
 
 #
@@ -12728,9 +12888,6 @@ msgid "further education"
 msgstr ""
 
 msgid "game show/quiz/contest"
-msgstr ""
-
-msgid "gardening"
 msgstr ""
 
 #
@@ -12858,7 +13015,7 @@ msgstr ""
 msgid "literature"
 msgstr ""
 
-msgid "live broadcast"
+msgid "local sports"
 msgstr ""
 
 #
@@ -12890,6 +13047,11 @@ msgid "mins"
 msgstr "mín"
 
 #
+#, fuzzy
+msgid "module disabled"
+msgstr "óvirkt"
+
+#
 msgid "month"
 msgstr "mánuður"
 
@@ -12915,7 +13077,7 @@ msgstr "fara upp í fyrsta atriði"
 msgid "move up to previous entry"
 msgstr "fara upp í næsta atriði"
 
-msgid "movie/drama (general)"
+msgid "movie (general)"
 msgstr ""
 
 msgid "multi"
@@ -13065,9 +13227,6 @@ msgstr "opna nafnaþjóns stillingar"
 msgid "original"
 msgstr ""
 
-msgid "original language"
-msgstr ""
-
 #
 msgid "pass"
 msgstr "í lagi"
@@ -13091,6 +13250,14 @@ msgstr ""
 
 msgid "pre-school children's program"
 msgstr ""
+
+msgid "preserve bookmarks in cuts"
+msgstr ""
+
+#
+#, fuzzy
+msgid "priority"
+msgstr "Forgangur"
 
 msgid "receiver software because updates are available."
 msgstr ""
@@ -13120,6 +13287,11 @@ msgstr "eyða fyrir aftan þetta"
 #
 msgid "remove before this position"
 msgstr "eyða fyrir framan þetta"
+
+#
+#, fuzzy
+msgid "remove bookmarks in cuts"
+msgstr "eyða bókamerki"
 
 #
 msgid "remove this mark"
@@ -13181,7 +13353,7 @@ msgstr "veldu valmynda atriði"
 msgid "serious music/classic music"
 msgstr ""
 
-msgid "serious/classical/religious/historical movie/drama"
+msgid "serious/classical/religious/historical drama"
 msgstr ""
 
 #, fuzzy
@@ -13266,13 +13438,13 @@ msgstr ""
 msgid "slot%s - %s, without backup"
 msgstr ""
 
-msgid "soap/melodram/folkloric"
+msgid "soap/melodrama/folkloric"
 msgstr ""
 
 msgid "social/political issues/economics (general)"
 msgstr ""
 
-msgid "social/spiritual science"
+msgid "social/spiritual sciences"
 msgstr ""
 
 msgid "space"
@@ -13330,10 +13502,10 @@ msgstr "skipta á næsta undirtexta"
 msgid "talk show"
 msgstr ""
 
-msgid "team sports"
+msgid "team sports/excluding football"
 msgstr ""
 
-msgid "technology/natural science"
+msgid "technology/natural sciences"
 msgstr ""
 
 #
@@ -13391,14 +13563,17 @@ msgstr ""
 msgid "unknown service"
 msgstr "óþekkt rás"
 
-msgid "unpublished"
-msgstr ""
-
 msgid "untestable"
 msgstr ""
 
 msgid "until standby/restart"
 msgstr "bíða til biðstöðu/endurræsingu"
+
+msgid "use HDMI cacenter"
+msgstr ""
+
+msgid "use best / controlled by HDMI"
+msgstr ""
 
 #
 msgid "user defined"
@@ -13411,6 +13586,10 @@ msgstr "stillt af notanda"
 
 msgid "variety show"
 msgstr ""
+
+#
+msgid "version"
+msgstr "útgáfa"
 
 #
 msgid "vertical"
