--- a/po/nn.po
+++ b/po/nn.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-12-22 15:03+0100\n"
+"POT-Creation-Date: 2022-07-30 14:55+0200\n"
 "PO-Revision-Date: 2013-10-23 19:15+0100\n"
 "Last-Translator: andy1 <dmmm8000pvr@gmail.com>\n"
 "Language-Team: none\n"
@@ -627,8 +627,21 @@ msgstr "A/V-innstilling"
 msgid "AAC downmix"
 msgstr ""
 
+msgid "AAC transcoding"
+msgstr ""
+
+#, fuzzy
+msgid "AAC+ downmix"
+msgstr "AC3 blanding"
+
+msgid "AC3"
+msgstr ""
+
 msgid "AC3 downmix"
 msgstr "AC3 blanding"
+
+msgid "AC3 transcoding"
+msgstr ""
 
 msgid "ACQUIRING TSID/ONID"
 msgstr ""
@@ -1094,8 +1107,9 @@ msgstr ""
 msgid "Artist"
 msgstr ""
 
-msgid "Arts/Culture"
-msgstr "kunst/kultur"
+#, fuzzy
+msgid "Arts/Culture (without music)"
+msgstr "kunst/kultur (uten musikk, generelt)"
 
 msgid "Aruba"
 msgstr ""
@@ -1267,6 +1281,9 @@ msgstr "Automatisk søk"
 msgid "Automatic scan"
 msgstr "Automatisk søk"
 
+msgid "Automatically power off box to deep standby mode."
+msgstr ""
+
 msgid "Automatically put the TV in standby whenever the receiver goes into standby or deep standby."
 msgstr ""
 
@@ -1284,6 +1301,9 @@ msgstr "Tilgjengelige format"
 #, fuzzy
 msgid "Available locales are:"
 msgstr "Tilgjengelige format"
+
+msgid "Axas E4HD Ultra"
+msgstr ""
 
 msgid "Azerbaijan"
 msgstr ""
@@ -1565,6 +1585,11 @@ msgstr ""
 msgid "CI assignment"
 msgstr "CI tildeling"
 
+#
+#, fuzzy
+msgid "CI enabled"
+msgstr "aktivert"
+
 msgid "CI slot: "
 msgstr ""
 
@@ -1577,6 +1602,10 @@ msgstr "Kabel"
 
 msgid "Cable Scan"
 msgstr "Kabel-TV søk"
+
+#, python-format
+msgid "Cable scan executable utility not found '%s'!"
+msgstr ""
 
 msgid "Cabo Verde"
 msgstr ""
@@ -1825,8 +1854,9 @@ msgid ""
 "DiSEqC port %s for %s"
 msgstr ""
 
-msgid "Children/Youth"
-msgstr "barn/ungdom"
+#, fuzzy
+msgid "Children/Youth/Education/Science"
+msgstr "utdanning/vitenskap/..."
 
 msgid "Chile"
 msgstr ""
@@ -1845,6 +1875,26 @@ msgstr ""
 
 msgid "Choose bouquet"
 msgstr ""
+
+#, fuzzy
+msgid "Choose whether AAC sound tracks should be transcoded."
+msgstr "Velg om flerkanals lyd skal blandes til stereolyd."
+
+#, fuzzy
+msgid "Choose whether AC3 sound tracks should be transcoded."
+msgstr "Velg om flerkanals lyd skal blandes til stereolyd."
+
+#, fuzzy
+msgid "Choose whether WMA Pro sound tracks should be downmixed."
+msgstr "Velg om flerkanals lyd skal blandes til stereolyd."
+
+#, fuzzy
+msgid "Choose whether multi channel DTS-HD(HR/MA) sound tracks should be downmixed or transcoded."
+msgstr "Velg om flerkanals lyd skal blandes til stereolyd."
+
+#, fuzzy
+msgid "Choose whether multi channel aac+ sound tracks should be downmixed to stereo."
+msgstr "Velg om flerkanals lyd skal blandes til stereolyd."
 
 msgid "Choose whether to scan a single transponder, one satellite or multiple satellites."
 msgstr ""
@@ -2607,6 +2657,9 @@ msgstr "Tjekkisk"
 msgid "D"
 msgstr ""
 
+msgid "DAC"
+msgstr ""
+
 #
 msgid "DHCP"
 msgstr ""
@@ -2618,7 +2671,13 @@ msgstr "DMM avansert"
 msgid "DMM normal"
 msgstr ""
 
+msgid "DTS"
+msgstr ""
+
 msgid "DTS downmix"
+msgstr ""
+
+msgid "DTS-HD(HR/MA) downmix"
 msgstr ""
 
 #
@@ -2718,6 +2777,9 @@ msgstr "Tidtaker type"
 #, fuzzy
 msgid "Default+Picon"
 msgstr "Standardinnstilling"
+
+msgid "Define additional delay in milliseconds before start of http(s) streams, e.g. to connect a remote tuner, you use a complex system of DiSEqC."
+msgstr ""
 
 #, fuzzy
 msgid "Define the location of the EPG Cache file."
@@ -2956,6 +3018,9 @@ msgstr "Katalogen inneholder %(file)s og %(subdir)s."
 #
 msgid "Disable"
 msgstr "Deaktivere"
+
+msgid "Disable FCC during recordings"
+msgstr ""
 
 msgid "Disable Picture in Picture"
 msgstr "Stopp bilde i bilde funksjon"
@@ -3240,6 +3305,11 @@ msgid "Downloadable plugins"
 msgstr "Programtillegg til nedlasting"
 
 #
+#, fuzzy
+msgid "Downloaded Images"
+msgstr "Laster ned"
+
+#
 msgid "Downloading"
 msgstr "Laster ned"
 
@@ -3255,6 +3325,13 @@ msgstr "Leter etter ny pakkeliste. Vennligst vent..."
 #
 msgid "Downloading plugin information. Please wait..."
 msgstr "Henter informasjon om programtillegg. Vennligst vent..."
+
+#, fuzzy
+msgid "Downmix"
+msgstr "AC3 blanding"
+
+msgid "Drama and Films"
+msgstr ""
 
 #, fuzzy
 msgid "Drop unconfigured satellites"
@@ -3303,7 +3380,7 @@ msgid "ERROR - failed to scan (%s)!"
 msgstr "FEIL - kunne ikke søke (%s)!"
 
 #, python-format
-msgid "ERROR downloading file %s"
+msgid "ERROR downloading file %s/%s"
 msgstr ""
 
 #
@@ -3359,9 +3436,6 @@ msgstr "Endre navn"
 
 msgid "Edit update source url"
 msgstr "Endre oppdateringens internettadresse"
-
-msgid "Education/Science/..."
-msgstr "utdanning/vitenskap/..."
 
 msgid "Egypt"
 msgstr ""
@@ -3436,6 +3510,11 @@ msgid "Enable auto fastscan for %s"
 msgstr ""
 
 #
+#, fuzzy
+msgid "Enable bluetooth audio"
+msgstr "Aktivere kanalliste redigering"
+
+#
 msgid "Enable bouquet edit"
 msgstr "Aktivere kanalliste redigering"
 
@@ -3470,6 +3549,11 @@ msgstr "Aktivere EIT EPG"
 
 msgid "Enable parental protection"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Enable power off timer"
+msgstr "Aktivere flytte modus"
 
 msgid "Enable remote enigma2 receiver to be tried to tune into services that cannot be tuned into locally (e.g. tuner is occupied or service type is unavailable on the local tuner. Specify complete URL including http:// and port number (normally ...:8001), e.g. http://second_box:8001."
 msgstr ""
@@ -3633,11 +3717,6 @@ msgstr "Datastrøm"
 
 #
 msgid "Error"
-msgstr "Feil"
-
-#
-#, fuzzy, python-format
-msgid "Error %s"
 msgstr "Feil"
 
 msgid "Error code"
@@ -3903,6 +3982,16 @@ msgid ""
 msgstr ""
 
 #
+#, fuzzy
+msgid "FCC enabled"
+msgstr "aktivert"
+
+#
+#, fuzzy
+msgid "FCCSetup"
+msgstr "Innstilling"
+
+#
 msgid "FEC"
 msgstr ""
 
@@ -3998,6 +4087,15 @@ msgstr ""
 #
 msgid "Fast"
 msgstr "Hurtig"
+
+msgid "Fast Channel Change"
+msgstr ""
+
+msgid "Fast Channel Change Setup"
+msgstr ""
+
+msgid "Fast Channel Change setup"
+msgstr ""
 
 msgid "Fast DiSEqC"
 msgstr "Hurtig DiSEqC"
@@ -4098,7 +4196,13 @@ msgstr "Følgende oppgaver vil bli utført etter at du trykker OK!"
 msgid "Force legacy signal stats"
 msgstr ""
 
+msgid "Force power off (even when not in standby)"
+msgstr ""
+
 msgid "Force zap to recording service in standby"
+msgstr ""
+
+msgid "Forces deep standby, even when not in standby mode. Scheduled recordings remain unaffected."
 msgstr ""
 
 #
@@ -4185,6 +4289,10 @@ msgstr "Maksimal gjennomsiktighet"
 msgid "Full view resolution"
 msgstr "Fullskjermsoppløsning"
 
+#, fuzzy
+msgid "Fullbackup Images"
+msgstr "Flash"
+
 msgid "Function of OK button"
 msgstr "Funksjon for OK knapp"
 
@@ -4230,6 +4338,10 @@ msgstr "AC3 forsinkelse"
 
 msgid "General PCM delay"
 msgstr "PCM forsinkelse"
+
+#, fuzzy
+msgid "General bluetooth audio delay"
+msgstr "AC3 forsinkelse"
 
 #
 msgid "Genre"
@@ -4407,7 +4519,10 @@ msgstr "HD liste"
 msgid "HD2400"
 msgstr ""
 
-msgid "HD60/Multibox/Multibox SE"
+msgid "HD60/HD66SE/Multibox/Multibox SE"
+msgstr ""
+
+msgid "HDMI"
 msgstr ""
 
 msgid "HDMI Colordepth"
@@ -4476,6 +4591,10 @@ msgstr "Disk"
 msgid "Harddisk Setup"
 msgstr ""
 
+#, fuzzy
+msgid "Hardware Accelerated"
+msgstr "Maskinvare:"
+
 msgid "Hardware: "
 msgstr "Maskinvare:"
 
@@ -4523,6 +4642,10 @@ msgstr "Hierarki info"
 #
 msgid "High bitrate support"
 msgstr "Høy bitrate støtte"
+
+#, fuzzy
+msgid "History Prev/Next"
+msgstr "Gjenopprette mottaker"
 
 msgid "History back"
 msgstr ""
@@ -4581,6 +4704,9 @@ msgstr "Hvor mange minutter vil du ta opp?"
 #
 msgid "How many minutes do you want to record?"
 msgstr "Hvor mange minutter vil du ta opp?"
+
+msgid "Http(s) stream start delay"
+msgstr ""
 
 #
 msgid "Hue"
@@ -4661,6 +4787,9 @@ msgid "If set to 'yes' signal values (SNR, etc) will be calculated from API V3. 
 msgstr ""
 
 msgid "If set to 'yes' the same commands will be sent to the TV for deep standby events, as are sent during regular standby events."
+msgstr ""
+
+msgid "If the box is supposed to enter deep standby e.g. monday night at 1 AM, it actually is already tuesday. To enable this anyway, differing next day start time can be specified here."
 msgstr ""
 
 msgid "If using multiple uncommitted switches the DiSEqC commands must be sent multiple times. Set to the number of uncommitted switches in the chain minus one."
@@ -5158,9 +5287,6 @@ msgstr "Venstre"
 msgid "Left from servicename"
 msgstr "Venstre for kanalnavn"
 
-msgid "Leisure hobbies"
-msgstr "fritidssysler"
-
 msgid "Lesotho"
 msgstr ""
 
@@ -5458,6 +5584,11 @@ msgstr "Litauisk"
 msgid "Mauritius"
 msgstr "Favorittliste"
 
+#
+#, fuzzy
+msgid "Max channels"
+msgstr "Kanal"
+
 msgid "Max memory positions"
 msgstr ""
 
@@ -5473,14 +5604,6 @@ msgstr ""
 #
 msgid "Media player"
 msgstr "Mediespiller"
-
-#
-#, fuzzy
-msgid "Media player: GStreamer, version "
-msgstr "Linuxkjerne versjon: "
-
-msgid "Media player: ffmpeg, version "
-msgstr ""
 
 msgid "Media scanner"
 msgstr "Mediesøker"
@@ -5704,9 +5827,6 @@ msgstr "Plassering av opptak"
 msgid "Movie selection"
 msgstr "Opptaksvalg"
 
-msgid "Movie/Drama"
-msgstr "film/drama"
-
 msgid "Movielist menu"
 msgstr "Opptaksliste"
 
@@ -5912,7 +6032,8 @@ msgstr ""
 msgid "New Zealand"
 msgstr ""
 
-msgid "News Current Affairs"
+#, fuzzy
+msgid "News/Current Affairs/Social"
 msgstr "Nyheter aktuelle saker"
 
 msgctxt "button label, 'next screen'"
@@ -5922,6 +6043,9 @@ msgstr "Neste"
 msgctxt "now/next: 'next' event label"
 msgid "Next"
 msgstr "Neste"
+
+msgid "Next day starts at"
+msgstr ""
 
 msgid "Nicaragua"
 msgstr ""
@@ -6279,6 +6403,11 @@ msgstr ""
 msgid "Only on startup"
 msgstr ""
 
+#
+#, fuzzy
+msgid "Only power off"
+msgstr "Aktivere flytte modus"
+
 msgid "Only select 'yes' if you are using a multiswich that requires a DiSEqC Port-A command signal. For all other setups select 'no'."
 msgstr ""
 
@@ -6304,7 +6433,7 @@ msgstr ""
 msgid "Operating LED status in standby mode"
 msgstr ""
 
-msgid "Operating LED status while running."
+msgid "Operating LED status while running"
 msgstr ""
 
 msgid "Opkg"
@@ -6440,6 +6569,9 @@ msgstr "Foreldrekontroll og kanalinnstillinger"
 #
 msgid "Parental control setup"
 msgstr "Foreldrekontroll oppsett"
+
+msgid "Passthrough"
+msgstr ""
 
 msgid "Password"
 msgstr ""
@@ -6914,6 +7046,14 @@ msgstr ""
 msgid "Power management. Consult your receiver's manual for more information."
 msgstr ""
 
+#
+#, fuzzy
+msgid "Power off time"
+msgstr "Sortere tid"
+
+msgid "Power off timer"
+msgstr ""
+
 msgid "Power on display"
 msgstr ""
 
@@ -7271,6 +7411,9 @@ msgid "Rec"
 msgstr "Opptak"
 
 msgid "Recall to previous service"
+msgstr ""
+
+msgid "Receiver or driver does not support FCC"
 msgstr ""
 
 #
@@ -7736,6 +7879,9 @@ msgstr ""
 
 #
 msgid "SNR:"
+msgstr ""
+
+msgid "SPDIF"
 msgstr ""
 
 msgid "SRT file"
@@ -8485,6 +8631,9 @@ msgstr "Kanalsøk"
 msgid "Service title mode"
 msgstr "Kanalvalg"
 
+msgid "Service type 4097 incorrect for PiP!"
+msgstr ""
+
 msgid ""
 "Service unavailable!\n"
 "Check tuner configuration!"
@@ -8520,6 +8669,11 @@ msgstr "Sett som oppstartskanal"
 
 msgid "Set blocktimes by weekday"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Set cursor on service from channel history"
+msgstr "Gå til forrige kanal i listen"
 
 msgid "Set default"
 msgstr ""
@@ -8653,9 +8807,6 @@ msgstr "Vis EPG for nåværende kanal..."
 #
 msgid "Show EPG..."
 msgstr "Vis EPG..."
-
-msgid "Show Games show"
-msgstr "Vis Games show"
 
 msgid "Show InfoBar"
 msgstr ""
@@ -8906,6 +9057,10 @@ msgstr ""
 msgid "Show warning when timeshift is stopped"
 msgstr "Vis en advarsel når timeshift stoppes"
 
+#, fuzzy
+msgid "Show/Game Show/Leisure hobbies"
+msgstr "fritidssysler"
+
 msgid "Show/hide window"
 msgstr ""
 
@@ -9091,9 +9246,6 @@ msgstr ""
 
 msgid "Smooth"
 msgstr ""
-
-msgid "Social/Political/Economics"
-msgstr "sosial/politisk/økonomisk"
 
 msgid "SocketMMI"
 msgstr ""
@@ -9651,7 +9803,7 @@ msgid "Switch on the display during Suspend Mode"
 msgstr "Vis en liste over alle brukergrensesnitt og skjermvalg"
 
 #, fuzzy
-msgid "Switch on the display during operation."
+msgid "Switch on the display during operation"
 msgstr "Vis en liste over alle brukergrensesnitt og skjermvalg"
 
 #
@@ -10123,11 +10275,18 @@ msgstr ""
 msgid "This option allows you to show the full screen path leading to the current screen."
 msgstr ""
 
+msgid "This option allows you to switch audio to bluetooth speakers."
+msgstr ""
+
 msgid "This option allows you to view the old and new settings side by side."
 msgstr ""
 
 msgid "This option can be useful for long HDMI cables."
 msgstr ""
+
+#, fuzzy
+msgid "This option configures the general audio delay for bluetooth speakers."
+msgstr "Still inn ønsket lydforsinkelse for stereo lyd spor."
 
 msgid "This option set the level of surpression of mosquito noise (Mosquito Noise is random aliasing as a result of strong compression). Obviously this goes at the cost of picture details."
 msgstr ""
@@ -11187,6 +11346,10 @@ msgstr ""
 msgid "WLAN connection"
 msgstr "WLAN oppkobling"
 
+#, fuzzy
+msgid "WMA Pro downmix"
+msgstr "AC3 blanding"
+
 #
 msgid "WSS on 4:3"
 msgstr "WSS på 4:3"
@@ -11494,7 +11657,8 @@ msgstr "Når dette er valgt, vises tekst-TV undertekst på sin opprinnelige posi
 msgid "When enabled, the VCR scart option will be shown on the main menu"
 msgstr "Når dette er valgt, vises VCR scart innstillingen på hovedmenyen."
 
-msgid "When enabled, the channel selection list will be hidden while listening to a radio channel"
+#, fuzzy
+msgid "When enabled, the channel selection list will be hidden while listening to a radio channel. When disabled, the option 'Auto play last service in radio mode' is available."
 msgstr "Når dette er valgt, vil kanalinfo være skjult ved radiolytting"
 
 msgid "When enabled, the infobar will be displayed when a new event starts."
@@ -11522,6 +11686,9 @@ msgid "When enabled, the receiver will select an AC3 track (when available)."
 msgstr "Når dette er valgt, vil mottakeren bruke AC3 lyd (når tilgjengelig)."
 
 msgid "When enabled, the receiver will select an AC3+ track (when available)."
+msgstr ""
+
+msgid "When enabled, then when changing bouquets, set the cursor on the service from the channel history in the channel selection list."
 msgstr ""
 
 msgid "When enabled, this setting has more weight than 'Preferred tuner for recordings'."
@@ -11886,6 +12053,9 @@ msgstr ""
 msgid "Zap"
 msgstr "Gå til"
 
+msgid "Zap Up/Down"
+msgstr ""
+
 #
 msgid "Zap back to previously tuned service?"
 msgstr "Gå tilbake til forrige kanal?"
@@ -11937,7 +12107,7 @@ msgstr "Gå til første kanal"
 msgid "Zgemma H.S/H.2S/H.2H/H5/H7(old model)"
 msgstr ""
 
-msgid "Zgemma H9(old model)/I55Plus"
+msgid "Zgemma H9(old model)/I55Plus/H8"
 msgstr ""
 
 msgid "Zgemma Star S/2S/H1/H2"
@@ -11993,7 +12163,8 @@ msgstr ""
 msgid "additional cable of rotor"
 msgstr ""
 
-msgid "adult movie/drama"
+#, fuzzy
+msgid "adult movie"
 msgstr "voksenfilm/drama"
 
 #
@@ -12095,9 +12266,6 @@ msgstr "best"
 msgid "black"
 msgstr "sort"
 
-msgid "black & white"
-msgstr "sort & hvitt"
-
 msgid "blacklist"
 msgstr "svarteliste"
 
@@ -12131,7 +12299,8 @@ msgstr "sentrert, brytning"
 msgid "chapters"
 msgstr "kapitler"
 
-msgid "childrens's/youth program (general)"
+#, fuzzy
+msgid "childrens's youth program (general)"
 msgstr "barne/ungdomsprogram (generelt)"
 
 #
@@ -12149,10 +12318,6 @@ msgid "comedy"
 msgstr "komedie"
 
 #
-msgid "config menu"
-msgstr "innstillingsmeny"
-
-#
 msgid "confirmed"
 msgstr "bekreftet"
 
@@ -12162,6 +12327,16 @@ msgstr "tilkoblet"
 
 msgid "controlled by HDMI"
 msgstr ""
+
+msgid "convert to AC3"
+msgstr ""
+
+msgid "convert to DTS"
+msgstr ""
+
+#, fuzzy
+msgid "convert to multi-channel PCM"
+msgstr "Vis utvidet kanal EPG"
 
 msgid "cooking"
 msgstr "matlaging"
@@ -12226,7 +12401,8 @@ msgstr "øst"
 msgid "economics/social advisory"
 msgstr "økonomi/sosial rådgivende"
 
-msgid "education/science/factual topics (general)"
+#, fuzzy
+msgid "educational/science/factual topics (general)"
 msgstr "utdanning/vitenskap/faktaprogram (generelt)"
 
 msgid "embedded"
@@ -12325,7 +12501,8 @@ msgstr "film/kino"
 msgid "fine arts"
 msgstr "kunst"
 
-msgid "fitness & health"
+#, fuzzy
+msgid "fitness and health"
 msgstr "trening & helse"
 
 #
@@ -12371,9 +12548,6 @@ msgstr "videreutdanning"
 
 msgid "game show/quiz/contest"
 msgstr "game show/spørrekonkurranse"
-
-msgid "gardening"
-msgstr "hagearbeid"
 
 #
 msgid "go to deep standby"
@@ -12498,8 +12672,9 @@ msgstr "Programjusteringer"
 msgid "literature"
 msgstr "litteratur"
 
-msgid "live broadcast"
-msgstr "direktesending"
+#, fuzzy
+msgid "local sports"
+msgstr "lagidrett"
 
 #
 msgid "locked"
@@ -12530,6 +12705,11 @@ msgid "mins"
 msgstr "min"
 
 #
+#, fuzzy
+msgid "module disabled"
+msgstr "deaktivert"
+
+#
 msgid "month"
 msgstr "måned"
 
@@ -12555,7 +12735,8 @@ msgstr "gå til til første oppføring"
 msgid "move up to previous entry"
 msgstr "gå til til forrige oppføring"
 
-msgid "movie/drama (general)"
+#, fuzzy
+msgid "movie (general)"
 msgstr "film/drama (generelt)"
 
 msgid "multi"
@@ -12707,9 +12888,6 @@ msgstr "åpne innstilling for navneserver "
 msgid "original"
 msgstr "original"
 
-msgid "original language"
-msgstr "opprinnelig språk"
-
 #
 msgid "pass"
 msgstr "klart"
@@ -12732,6 +12910,14 @@ msgstr "populær kultur/tradisjonell kunst"
 
 msgid "pre-school children's program"
 msgstr "førskolebarn/barneprogram"
+
+msgid "preserve bookmarks in cuts"
+msgstr ""
+
+#
+#, fuzzy
+msgid "priority"
+msgstr "Prioritet"
 
 msgid "receiver software because updates are available."
 msgstr "mottaker programvare fordi oppdateringer er tilgjengelige."
@@ -12759,6 +12945,11 @@ msgstr "slette etter denne posisjon"
 
 msgid "remove before this position"
 msgstr "fjerne før denne posisjonen"
+
+#
+#, fuzzy
+msgid "remove bookmarks in cuts"
+msgstr "Slett bokmerke"
 
 msgid "remove this mark"
 msgstr "slett markøren"
@@ -12819,7 +13010,8 @@ msgstr "velg meny"
 msgid "serious music/classic music"
 msgstr "seriøs musikk/klassisk musikk"
 
-msgid "serious/classical/religious/historical movie/drama"
+#, fuzzy
+msgid "serious/classical/religious/historical drama"
 msgstr "seriøs/klassisk/religiøs/historisk film/drama"
 
 #, fuzzy
@@ -12904,13 +13096,15 @@ msgstr ""
 msgid "slot%s - %s, without backup"
 msgstr ""
 
-msgid "soap/melodram/folkloric"
+#, fuzzy
+msgid "soap/melodrama/folkloric"
 msgstr "såpe/melodrama/folklore"
 
 msgid "social/political issues/economics (general)"
 msgstr "sosial/politiske spørsmål/økonomi (generelt)"
 
-msgid "social/spiritual science"
+#, fuzzy
+msgid "social/spiritual sciences"
 msgstr "sosial/åndsvitenskap"
 
 msgid "space"
@@ -12966,10 +13160,11 @@ msgstr "bytt til neste tekstspråk"
 msgid "talk show"
 msgstr "talk show"
 
-msgid "team sports"
-msgstr "lagidrett"
+msgid "team sports/excluding football"
+msgstr ""
 
-msgid "technology/natural science"
+#, fuzzy
+msgid "technology/natural sciences"
 msgstr "teknologi/naturvitenskap"
 
 #
@@ -13023,14 +13218,17 @@ msgstr ""
 msgid "unknown service"
 msgstr "ukjent kanal"
 
-msgid "unpublished"
-msgstr "ikke publisert"
-
 msgid "untestable"
 msgstr ""
 
 msgid "until standby/restart"
 msgstr "til slår av/starter på nytt"
+
+msgid "use HDMI cacenter"
+msgstr ""
+
+msgid "use best / controlled by HDMI"
+msgstr ""
 
 #
 msgid "user defined"
@@ -13043,6 +13241,10 @@ msgstr "brukerbestemt"
 
 msgid "variety show"
 msgstr "varieté show"
+
+#
+msgid "version"
+msgstr "versjon"
 
 #
 msgid "vertical"
