--- a/po/pt.po
+++ b/po/pt.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-12-22 15:03+0100\n"
+"POT-Creation-Date: 2022-07-30 14:55+0200\n"
 "PO-Revision-Date: 2014-12-15 19:38-0000\n"
 "Last-Translator: Phenom <phenomxy@gmail.com>\n"
 "Language-Team: Muaitai <muaitai@gmail.com>\n"
@@ -639,7 +639,19 @@ msgstr "Definições A/V"
 msgid "AAC downmix"
 msgstr ""
 
+msgid "AAC transcoding"
+msgstr ""
+
+msgid "AAC+ downmix"
+msgstr ""
+
+msgid "AC3"
+msgstr ""
+
 msgid "AC3 downmix"
+msgstr ""
+
+msgid "AC3 transcoding"
 msgstr ""
 
 msgid "ACQUIRING TSID/ONID"
@@ -1154,8 +1166,9 @@ msgstr ""
 msgid "Artist"
 msgstr "Artista"
 
-msgid "Arts/Culture"
-msgstr "Arte/Cultura"
+#, fuzzy
+msgid "Arts/Culture (without music)"
+msgstr "arte/cultura"
 
 msgid "Aruba"
 msgstr ""
@@ -1342,6 +1355,9 @@ msgstr "Pesquisa automática"
 msgid "Automatic scan"
 msgstr "Pesquisa automática"
 
+msgid "Automatically power off box to deep standby mode."
+msgstr ""
+
 msgid "Automatically put the TV in standby whenever the receiver goes into standby or deep standby."
 msgstr ""
 
@@ -1359,6 +1375,9 @@ msgstr "Formato de variáveis disponíveis"
 #, fuzzy
 msgid "Available locales are:"
 msgstr "Formato de variáveis disponíveis"
+
+msgid "Axas E4HD Ultra"
+msgstr ""
 
 msgid "Azerbaijan"
 msgstr ""
@@ -1639,6 +1658,11 @@ msgstr ""
 msgid "CI assignment"
 msgstr "Escolha de CI"
 
+#
+#, fuzzy
+msgid "CI enabled"
+msgstr "activo"
+
 msgid "CI slot: "
 msgstr ""
 
@@ -1651,6 +1675,10 @@ msgstr "Cabo"
 
 msgid "Cable Scan"
 msgstr "Pesquisa cabo"
+
+#, python-format
+msgid "Cable scan executable utility not found '%s'!"
+msgstr ""
 
 msgid "Cabo Verde"
 msgstr ""
@@ -1908,8 +1936,9 @@ msgid ""
 "DiSEqC port %s for %s"
 msgstr ""
 
-msgid "Children/Youth"
-msgstr "Crianças"
+#, fuzzy
+msgid "Children/Youth/Education/Science"
+msgstr "Educação/Ciência/..."
 
 msgid "Chile"
 msgstr ""
@@ -1928,6 +1957,26 @@ msgstr ""
 
 msgid "Choose bouquet"
 msgstr ""
+
+#, fuzzy
+msgid "Choose whether AAC sound tracks should be transcoded."
+msgstr "Configurar se faixas som multi-canal devem ser downmixed para estéreo."
+
+#, fuzzy
+msgid "Choose whether AC3 sound tracks should be transcoded."
+msgstr "Configurar se faixas som multi-canal devem ser downmixed para estéreo."
+
+#, fuzzy
+msgid "Choose whether WMA Pro sound tracks should be downmixed."
+msgstr "Configurar se faixas som multi-canal devem ser downmixed para estéreo."
+
+#, fuzzy
+msgid "Choose whether multi channel DTS-HD(HR/MA) sound tracks should be downmixed or transcoded."
+msgstr "Configurar se faixas som multi-canal devem ser downmixed para estéreo."
+
+#, fuzzy
+msgid "Choose whether multi channel aac+ sound tracks should be downmixed to stereo."
+msgstr "Configurar se faixas som multi-canal devem ser downmixed para estéreo."
 
 msgid "Choose whether to scan a single transponder, one satellite or multiple satellites."
 msgstr ""
@@ -2739,6 +2788,9 @@ msgstr "Checo"
 msgid "D"
 msgstr "D"
 
+msgid "DAC"
+msgstr ""
+
 msgid "DHCP"
 msgstr "DHCP"
 
@@ -2751,7 +2803,13 @@ msgstr "DMM avançado"
 msgid "DMM normal"
 msgstr "DMM normal"
 
+msgid "DTS"
+msgstr ""
+
 msgid "DTS downmix"
+msgstr ""
+
+msgid "DTS-HD(HR/MA) downmix"
 msgstr ""
 
 #
@@ -2859,6 +2917,9 @@ msgstr "Eliminar agendamento"
 #, fuzzy
 msgid "Default+Picon"
 msgstr "Configurações padrão"
+
+msgid "Define additional delay in milliseconds before start of http(s) streams, e.g. to connect a remote tuner, you use a complex system of DiSEqC."
+msgstr ""
 
 #, fuzzy
 msgid "Define the location of the EPG Cache file."
@@ -3103,6 +3164,9 @@ msgstr "O directório contém %(file)s e %(subdir)s."
 #
 msgid "Disable"
 msgstr "Desabilitar"
+
+msgid "Disable FCC during recordings"
+msgstr ""
 
 #
 msgid "Disable Picture in Picture"
@@ -3402,6 +3466,10 @@ msgstr "Novos Plugins para descarregar"
 msgid "Downloadable plugins"
 msgstr "Plugins para descarregar"
 
+#, fuzzy
+msgid "Downloaded Images"
+msgstr "Descarregando"
+
 msgid "Downloading"
 msgstr "Descarregando"
 
@@ -3416,6 +3484,12 @@ msgstr "A tentar descarregar uma nova lista de pacotes. Por favor aguarde..."
 #
 msgid "Downloading plugin information. Please wait..."
 msgstr "A descarregar informações de Plugins. Por favor aguarde..."
+
+msgid "Downmix"
+msgstr ""
+
+msgid "Drama and Films"
+msgstr ""
 
 #, fuzzy
 msgid "Drop unconfigured satellites"
@@ -3465,7 +3539,7 @@ msgid "ERROR - failed to scan (%s)!"
 msgstr "ERRO - falha na pesquisa (%s)!"
 
 #, python-format
-msgid "ERROR downloading file %s"
+msgid "ERROR downloading file %s/%s"
 msgstr ""
 
 #
@@ -3530,9 +3604,6 @@ msgstr "Editar o título"
 #
 msgid "Edit update source url"
 msgstr "Editar o URL da fonte de actualização"
-
-msgid "Education/Science/..."
-msgstr "Educação/Ciência/..."
 
 msgid "Egypt"
 msgstr ""
@@ -3608,6 +3679,11 @@ msgid "Enable auto fastscan for %s"
 msgstr "Activar pesquisa rápida automática"
 
 #
+#, fuzzy
+msgid "Enable bluetooth audio"
+msgstr "Activar a edição dos Bouquets"
+
+#
 msgid "Enable bouquet edit"
 msgstr "Activar a edição dos Bouquets"
 
@@ -3642,6 +3718,11 @@ msgstr "Activar Guia de Programação EIT"
 
 msgid "Enable parental protection"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Enable power off timer"
+msgstr "Activar modo deslocar"
 
 msgid "Enable remote enigma2 receiver to be tried to tune into services that cannot be tuned into locally (e.g. tuner is occupied or service type is unavailable on the local tuner. Specify complete URL including http:// and port number (normally ...:8001), e.g. http://second_box:8001."
 msgstr ""
@@ -3806,11 +3887,6 @@ msgstr "Stream"
 
 #
 msgid "Error"
-msgstr "Erro"
-
-#
-#, fuzzy, python-format
-msgid "Error %s"
 msgstr "Erro"
 
 msgid "Error code"
@@ -4086,6 +4162,16 @@ msgid ""
 "inactive"
 msgstr ""
 
+#
+#, fuzzy
+msgid "FCC enabled"
+msgstr "activo"
+
+#
+#, fuzzy
+msgid "FCCSetup"
+msgstr "Definições"
+
 msgid "FEC"
 msgstr "FEC"
 
@@ -4182,6 +4268,15 @@ msgstr ""
 #
 msgid "Fast"
 msgstr "Rápido"
+
+msgid "Fast Channel Change"
+msgstr ""
+
+msgid "Fast Channel Change Setup"
+msgstr ""
+
+msgid "Fast Channel Change setup"
+msgstr ""
 
 #
 msgid "Fast DiSEqC"
@@ -4292,7 +4387,13 @@ msgstr "As tarefas seguintes vão terminar depois de pressionar OK!"
 msgid "Force legacy signal stats"
 msgstr ""
 
+msgid "Force power off (even when not in standby)"
+msgstr ""
+
 msgid "Force zap to recording service in standby"
+msgstr ""
+
+msgid "Forces deep standby, even when not in standby mode. Scheduled recordings remain unaffected."
 msgstr ""
 
 #
@@ -4380,6 +4481,10 @@ msgstr "Transparência total"
 msgid "Full view resolution"
 msgstr "Resolução em vista completa"
 
+#, fuzzy
+msgid "Fullbackup Images"
+msgstr "Flash"
+
 msgid "Function of OK button"
 msgstr "Função do botão OK"
 
@@ -4430,6 +4535,11 @@ msgstr "Atraso AC3 geral"
 #, fuzzy
 msgid "General PCM delay"
 msgstr "Atraso PCM geral"
+
+#
+#, fuzzy
+msgid "General bluetooth audio delay"
+msgstr "Atraso AC3 geral"
 
 #
 msgid "Genre"
@@ -4607,7 +4717,10 @@ msgstr "Lista HD"
 msgid "HD2400"
 msgstr ""
 
-msgid "HD60/Multibox/Multibox SE"
+msgid "HD60/HD66SE/Multibox/Multibox SE"
+msgstr ""
+
+msgid "HDMI"
 msgstr ""
 
 msgid "HDMI Colordepth"
@@ -4684,6 +4797,10 @@ msgstr "Disco rígido"
 msgid "Harddisk Setup"
 msgstr ""
 
+#, fuzzy
+msgid "Hardware Accelerated"
+msgstr "Hardware: "
+
 msgid "Hardware: "
 msgstr "Hardware: "
 
@@ -4731,6 +4848,11 @@ msgstr "Informação de hierarquia"
 #
 msgid "High bitrate support"
 msgstr "Suporte para alto bitrate"
+
+#
+#, fuzzy
+msgid "History Prev/Next"
+msgstr "Restauro de fábrica"
 
 msgid "History back"
 msgstr ""
@@ -4789,6 +4911,9 @@ msgstr "Quantos minutos deseja gravar?"
 #
 msgid "How many minutes do you want to record?"
 msgstr "Quantos minutos deseja gravar?"
+
+msgid "Http(s) stream start delay"
+msgstr ""
 
 #
 msgid "Hue"
@@ -4871,6 +4996,9 @@ msgid "If set to 'yes' signal values (SNR, etc) will be calculated from API V3. 
 msgstr ""
 
 msgid "If set to 'yes' the same commands will be sent to the TV for deep standby events, as are sent during regular standby events."
+msgstr ""
+
+msgid "If the box is supposed to enter deep standby e.g. monday night at 1 AM, it actually is already tuesday. To enable this anyway, differing next day start time can be specified here."
 msgstr ""
 
 msgid "If using multiple uncommitted switches the DiSEqC commands must be sent multiple times. Set to the number of uncommitted switches in the chain minus one."
@@ -5395,9 +5523,6 @@ msgstr "Esquerda"
 msgid "Left from servicename"
 msgstr "Esquerda a partir do nome do canal"
 
-msgid "Leisure hobbies"
-msgstr "Passatempos"
-
 msgid "Lesotho"
 msgstr ""
 
@@ -5714,6 +5839,11 @@ msgstr "Lituano"
 msgid "Mauritius"
 msgstr "Favoritos"
 
+#
+#, fuzzy
+msgid "Max channels"
+msgstr "Canal"
+
 msgid "Max memory positions"
 msgstr "Máximo de posições de memória"
 
@@ -5731,13 +5861,6 @@ msgstr ""
 #
 msgid "Media player"
 msgstr "Leitor multimédia"
-
-#, fuzzy
-msgid "Media player: GStreamer, version "
-msgstr "Versão do Kernel: "
-
-msgid "Media player: ffmpeg, version "
-msgstr ""
 
 #
 #, fuzzy
@@ -5975,9 +6098,6 @@ msgstr "Localização das gravações"
 msgid "Movie selection"
 msgstr "Selecção de gravação"
 
-msgid "Movie/Drama"
-msgstr "Filme/Drama"
-
 #
 msgid "Movielist menu"
 msgstr "Menu da Lista de Filmes"
@@ -6187,7 +6307,8 @@ msgstr ""
 msgid "New Zealand"
 msgstr ""
 
-msgid "News Current Affairs"
+#, fuzzy
+msgid "News/Current Affairs/Social"
 msgstr "Notícias actualidade e política"
 
 msgctxt "button label, 'next screen'"
@@ -6197,6 +6318,9 @@ msgstr "Seguinte"
 msgctxt "now/next: 'next' event label"
 msgid "Next"
 msgstr "Seguinte"
+
+msgid "Next day starts at"
+msgstr ""
 
 msgid "Nicaragua"
 msgstr ""
@@ -6576,6 +6700,11 @@ msgstr ""
 msgid "Only on startup"
 msgstr ""
 
+#
+#, fuzzy
+msgid "Only power off"
+msgstr "Activar modo deslocar"
+
 msgid "Only select 'yes' if you are using a multiswich that requires a DiSEqC Port-A command signal. For all other setups select 'no'."
 msgstr ""
 
@@ -6604,7 +6733,7 @@ msgstr ""
 msgid "Operating LED status in standby mode"
 msgstr ""
 
-msgid "Operating LED status while running."
+msgid "Operating LED status while running"
 msgstr ""
 
 msgid "Opkg"
@@ -6747,6 +6876,9 @@ msgstr "Editor de canais de controlo parental"
 #
 msgid "Parental control setup"
 msgstr "Definições de controle parental"
+
+msgid "Passthrough"
+msgstr ""
 
 msgid "Password"
 msgstr ""
@@ -7265,6 +7397,14 @@ msgstr ""
 msgid "Power management. Consult your receiver's manual for more information."
 msgstr ""
 
+#
+#, fuzzy
+msgid "Power off time"
+msgstr "Ordenar por tempo"
+
+msgid "Power off timer"
+msgstr ""
+
 msgid "Power on display"
 msgstr ""
 
@@ -7653,6 +7793,9 @@ msgid "Rec"
 msgstr "Gravar"
 
 msgid "Recall to previous service"
+msgstr ""
+
+msgid "Receiver or driver does not support FCC"
 msgstr ""
 
 #
@@ -8160,6 +8303,9 @@ msgstr "SNR"
 #
 msgid "SNR:"
 msgstr "SNR:"
+
+msgid "SPDIF"
+msgstr ""
 
 msgid "SRT file"
 msgstr ""
@@ -8976,6 +9122,9 @@ msgstr "Pesquisa de canais"
 msgid "Service title mode"
 msgstr "Modo título de canal"
 
+msgid "Service type 4097 incorrect for PiP!"
+msgstr ""
+
 #
 msgid ""
 "Service unavailable!\n"
@@ -9013,6 +9162,11 @@ msgstr "Marcar com canal inicial"
 
 msgid "Set blocktimes by weekday"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Set cursor on service from channel history"
+msgstr "Trocar para o canal anterior no histórico"
 
 msgid "Set default"
 msgstr "Definir como padrão"
@@ -9161,9 +9315,6 @@ msgstr "Mostrar Guia de Programação para o canal corrente..."
 #, fuzzy
 msgid "Show EPG..."
 msgstr "Mostrar Guia de Programação..."
-
-msgid "Show Games show"
-msgstr "Mostrar jogos"
 
 msgid "Show InfoBar"
 msgstr ""
@@ -9427,6 +9578,10 @@ msgstr ""
 msgid "Show warning when timeshift is stopped"
 msgstr "Mostrar aviso quando o Timeshift parou"
 
+#, fuzzy
+msgid "Show/Game Show/Leisure hobbies"
+msgstr "Passatempos"
+
 msgid "Show/hide window"
 msgstr ""
 
@@ -9628,9 +9783,6 @@ msgstr ""
 
 msgid "Smooth"
 msgstr ""
-
-msgid "Social/Political/Economics"
-msgstr "Social/Politica/Economia"
 
 msgid "SocketMMI"
 msgstr ""
@@ -10222,7 +10374,7 @@ msgstr "Ver lista de extensões de ecrã e interface de utilizador disponíveis"
 
 #
 #, fuzzy
-msgid "Switch on the display during operation."
+msgid "Switch on the display during operation"
 msgstr "Ver lista de extensões de ecrã e interface de utilizador disponíveis"
 
 #
@@ -10722,11 +10874,18 @@ msgstr ""
 msgid "This option allows you to show the full screen path leading to the current screen."
 msgstr ""
 
+msgid "This option allows you to switch audio to bluetooth speakers."
+msgstr ""
+
 msgid "This option allows you to view the old and new settings side by side."
 msgstr ""
 
 msgid "This option can be useful for long HDMI cables."
 msgstr ""
+
+#, fuzzy
+msgid "This option configures the general audio delay for bluetooth speakers."
+msgstr "Configurar o atraso do áudio em estéreo."
 
 msgid "This option set the level of surpression of mosquito noise (Mosquito Noise is random aliasing as a result of strong compression). Obviously this goes at the cost of picture details."
 msgstr ""
@@ -11857,6 +12016,9 @@ msgstr "W"
 msgid "WLAN connection"
 msgstr "Ligação de rede sem fios"
 
+msgid "WMA Pro downmix"
+msgstr ""
+
 #
 msgid "WSS on 4:3"
 msgstr "WSS em 4:3"
@@ -12175,7 +12337,8 @@ msgstr "Quando activado, as legendas de teletexto legendas serão exibidas na su
 msgid "When enabled, the VCR scart option will be shown on the main menu"
 msgstr "Quando activada, a opção VCR Scart será mostrada no menu principal"
 
-msgid "When enabled, the channel selection list will be hidden while listening to a radio channel"
+#, fuzzy
+msgid "When enabled, the channel selection list will be hidden while listening to a radio channel. When disabled, the option 'Auto play last service in radio mode' is available."
 msgstr "Quando activada, a lista de selecção de canal será escondida enquanto ouve um canal de rádio"
 
 msgid "When enabled, the infobar will be displayed when a new event starts."
@@ -12204,6 +12367,9 @@ msgstr "Quando activado, o receptor irá seleccionar uma faixa de AC3 (quando di
 
 msgid "When enabled, the receiver will select an AC3+ track (when available)."
 msgstr "Quando activado, o receptor irá seleccionar uma faixa AC3+ (quando disponível)."
+
+msgid "When enabled, then when changing bouquets, set the cursor on the service from the channel history in the channel selection list."
+msgstr ""
 
 msgid "When enabled, this setting has more weight than 'Preferred tuner for recordings'."
 msgstr ""
@@ -12579,6 +12745,9 @@ msgstr ""
 msgid "Zap"
 msgstr "Zapping"
 
+msgid "Zap Up/Down"
+msgstr ""
+
 #
 msgid "Zap back to previously tuned service?"
 msgstr "Voltar para o canal sintonizado anteriormente?"
@@ -12629,7 +12798,7 @@ msgstr "Ir para o primeiro canal"
 msgid "Zgemma H.S/H.2S/H.2H/H5/H7(old model)"
 msgstr ""
 
-msgid "Zgemma H9(old model)/I55Plus"
+msgid "Zgemma H9(old model)/I55Plus/H8"
 msgstr ""
 
 msgid "Zgemma Star S/2S/H1/H2"
@@ -12687,7 +12856,8 @@ msgstr ""
 msgid "additional cable of rotor"
 msgstr ""
 
-msgid "adult movie/drama"
+#, fuzzy
+msgid "adult movie"
 msgstr "filme adultos/drama"
 
 #
@@ -12789,9 +12959,6 @@ msgstr "melhor"
 msgid "black"
 msgstr "preto"
 
-msgid "black & white"
-msgstr "preto e branco"
-
 #
 msgid "blacklist"
 msgstr "lista negra"
@@ -12827,7 +12994,8 @@ msgstr "centrado, envolto"
 msgid "chapters"
 msgstr "capítulos"
 
-msgid "childrens's/youth program (general)"
+#, fuzzy
+msgid "childrens's youth program (general)"
 msgstr "crianças"
 
 #
@@ -12845,10 +13013,6 @@ msgid "comedy"
 msgstr "comédia"
 
 #
-msgid "config menu"
-msgstr "menu de configuração"
-
-#
 msgid "confirmed"
 msgstr "confimado"
 
@@ -12858,6 +13022,16 @@ msgstr "conectado"
 
 msgid "controlled by HDMI"
 msgstr ""
+
+msgid "convert to AC3"
+msgstr ""
+
+msgid "convert to DTS"
+msgstr ""
+
+#, fuzzy
+msgid "convert to multi-channel PCM"
+msgstr "Mostrar Guia de Programação Múltiplo canal"
 
 msgid "cooking"
 msgstr "cozinhar"
@@ -12923,7 +13097,8 @@ msgstr "este"
 msgid "economics/social advisory"
 msgstr "economia"
 
-msgid "education/science/factual topics (general)"
+#, fuzzy
+msgid "educational/science/factual topics (general)"
 msgstr "educação/ciência"
 
 msgid "embedded"
@@ -13022,7 +13197,8 @@ msgstr "cinema"
 msgid "fine arts"
 msgstr ""
 
-msgid "fitness & health"
+#, fuzzy
+msgid "fitness and health"
 msgstr "fitness e saúde"
 
 #
@@ -13069,9 +13245,6 @@ msgstr "educação"
 
 msgid "game show/quiz/contest"
 msgstr "concursos televisivos"
-
-msgid "gardening"
-msgstr "jardinagem"
 
 #
 msgid "go to deep standby"
@@ -13200,8 +13373,9 @@ msgstr "Alinhamento de programas"
 msgid "literature"
 msgstr "literatura"
 
-msgid "live broadcast"
-msgstr "emissão em directo"
+#, fuzzy
+msgid "local sports"
+msgstr "desportos de equipa"
 
 #
 msgid "locked"
@@ -13232,6 +13406,11 @@ msgid "mins"
 msgstr "mins"
 
 #
+#, fuzzy
+msgid "module disabled"
+msgstr "desactivar"
+
+#
 msgid "month"
 msgstr "mês"
 
@@ -13257,7 +13436,8 @@ msgstr "mover para a primeira entrada"
 msgid "move up to previous entry"
 msgstr "mover para a entrada anterior"
 
-msgid "movie/drama (general)"
+#, fuzzy
+msgid "movie (general)"
 msgstr "filmes/drama"
 
 msgid "multi"
@@ -13409,9 +13589,6 @@ msgstr "abrir a configuração do servidor de DNS"
 msgid "original"
 msgstr "original"
 
-msgid "original language"
-msgstr "idioma original"
-
 #
 msgid "pass"
 msgstr "passar"
@@ -13435,6 +13612,14 @@ msgstr "cultura popular/artes tradicionais"
 
 msgid "pre-school children's program"
 msgstr "pré-escola"
+
+msgid "preserve bookmarks in cuts"
+msgstr ""
+
+#
+#, fuzzy
+msgid "priority"
+msgstr "Prioridade"
 
 msgid "receiver software because updates are available."
 msgstr "software do receptor porque estão actualizações disponíveis."
@@ -13464,6 +13649,11 @@ msgstr "remover depois desta posição"
 #
 msgid "remove before this position"
 msgstr "remover antes desta posição"
+
+#
+#, fuzzy
+msgid "remove bookmarks in cuts"
+msgstr "Remover marcador"
 
 #
 msgid "remove this mark"
@@ -13526,7 +13716,8 @@ msgstr "seleccionar entrada de menu"
 msgid "serious music/classic music"
 msgstr "música"
 
-msgid "serious/classical/religious/historical movie/drama"
+#, fuzzy
+msgid "serious/classical/religious/historical drama"
 msgstr "clássico/história/religião"
 
 #
@@ -13614,13 +13805,14 @@ msgid "slot%s - %s, without backup"
 msgstr ""
 
 #, fuzzy
-msgid "soap/melodram/folkloric"
+msgid "soap/melodrama/folkloric"
 msgstr "drama/folclórico"
 
 msgid "social/political issues/economics (general)"
 msgstr "social/política/economia"
 
-msgid "social/spiritual science"
+#, fuzzy
+msgid "social/spiritual sciences"
 msgstr "social/ciência espiritual"
 
 msgid "space"
@@ -13680,10 +13872,11 @@ msgstr "mudar para o próximo idioma de legenda"
 msgid "talk show"
 msgstr "talk show"
 
-msgid "team sports"
-msgstr "desportos de equipa"
+msgid "team sports/excluding football"
+msgstr ""
 
-msgid "technology/natural science"
+#, fuzzy
+msgid "technology/natural sciences"
 msgstr "tecnologia"
 
 #
@@ -13739,15 +13932,18 @@ msgstr ""
 msgid "unknown service"
 msgstr "canal desconhecido"
 
-msgid "unpublished"
-msgstr "não publicado"
-
 msgid "untestable"
 msgstr ""
 
 #
 msgid "until standby/restart"
 msgstr "até Standby/reiniciar"
+
+msgid "use HDMI cacenter"
+msgstr ""
+
+msgid "use best / controlled by HDMI"
+msgstr ""
 
 #
 msgid "user defined"
@@ -13760,6 +13956,9 @@ msgstr "definido pelo utilizador"
 
 msgid "variety show"
 msgstr "espectáculos variados"
+
+msgid "version"
+msgstr "versão"
 
 #
 msgid "vertical"
