--- a/po/sr.po
+++ b/po/sr.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-12-22 15:03+0100\n"
+"POT-Creation-Date: 2022-07-30 14:55+0200\n"
 "PO-Revision-Date: 2011-04-14 00:02+0200\n"
 "Last-Translator: majevica <jovanovic@gmx.ch>\n"
 "Language-Team: veselin & majevica CRNABERZA <jovanovic@gmx.ch>\n"
@@ -670,7 +670,19 @@ msgstr "A/V Postavke "
 msgid "AAC downmix"
 msgstr ""
 
+msgid "AAC transcoding"
+msgstr ""
+
+msgid "AAC+ downmix"
+msgstr ""
+
+msgid "AC3"
+msgstr ""
+
 msgid "AC3 downmix"
+msgstr ""
+
+msgid "AC3 transcoding"
 msgstr ""
 
 msgid "ACQUIRING TSID/ONID"
@@ -1178,7 +1190,7 @@ msgstr ""
 msgid "Artist"
 msgstr "Izvođač"
 
-msgid "Arts/Culture"
+msgid "Arts/Culture (without music)"
 msgstr ""
 
 msgid "Aruba"
@@ -1365,6 +1377,9 @@ msgstr "Automatsko skeniranje "
 msgid "Automatic scan"
 msgstr "Automatsko skeniranje "
 
+msgid "Automatically power off box to deep standby mode."
+msgstr ""
+
 msgid "Automatically put the TV in standby whenever the receiver goes into standby or deep standby."
 msgstr ""
 
@@ -1382,6 +1397,9 @@ msgstr "Mogući promenljivi format "
 #, fuzzy
 msgid "Available locales are:"
 msgstr "Mogući promenljivi format "
+
+msgid "Axas E4HD Ultra"
+msgstr ""
 
 msgid "Azerbaijan"
 msgstr ""
@@ -1669,6 +1687,11 @@ msgstr ""
 msgid "CI assignment"
 msgstr "CI dodela"
 
+#
+#, fuzzy
+msgid "CI enabled"
+msgstr "omogućeno"
+
 msgid "CI slot: "
 msgstr ""
 
@@ -1680,6 +1703,10 @@ msgid "Cable"
 msgstr "Kabel"
 
 msgid "Cable Scan"
+msgstr ""
+
+#, python-format
+msgid "Cable scan executable utility not found '%s'!"
 msgstr ""
 
 msgid "Cabo Verde"
@@ -1937,7 +1964,7 @@ msgid ""
 "DiSEqC port %s for %s"
 msgstr ""
 
-msgid "Children/Youth"
+msgid "Children/Youth/Education/Science"
 msgstr ""
 
 msgid "Chile"
@@ -1956,6 +1983,21 @@ msgid "Choose Tuner"
 msgstr ""
 
 msgid "Choose bouquet"
+msgstr ""
+
+msgid "Choose whether AAC sound tracks should be transcoded."
+msgstr ""
+
+msgid "Choose whether AC3 sound tracks should be transcoded."
+msgstr ""
+
+msgid "Choose whether WMA Pro sound tracks should be downmixed."
+msgstr ""
+
+msgid "Choose whether multi channel DTS-HD(HR/MA) sound tracks should be downmixed or transcoded."
+msgstr ""
+
+msgid "Choose whether multi channel aac+ sound tracks should be downmixed to stereo."
 msgstr ""
 
 msgid "Choose whether to scan a single transponder, one satellite or multiple satellites."
@@ -2769,6 +2811,9 @@ msgstr "Češki"
 msgid "D"
 msgstr "D"
 
+msgid "DAC"
+msgstr ""
+
 #
 msgid "DHCP"
 msgstr "DHCP"
@@ -2781,7 +2826,13 @@ msgstr "napredno"
 msgid "DMM normal"
 msgstr ""
 
+msgid "DTS"
+msgstr ""
+
 msgid "DTS downmix"
+msgstr ""
+
+msgid "DTS-HD(HR/MA) downmix"
 msgstr ""
 
 #
@@ -2890,6 +2941,9 @@ msgstr "Tip tajmera"
 #, fuzzy
 msgid "Default+Picon"
 msgstr "Standardne postavke"
+
+msgid "Define additional delay in milliseconds before start of http(s) streams, e.g. to connect a remote tuner, you use a complex system of DiSEqC."
+msgstr ""
 
 msgid "Define the location of the EPG Cache file."
 msgstr ""
@@ -3140,6 +3194,9 @@ msgstr "Direktorijum %s ne postoji"
 #
 msgid "Disable"
 msgstr "Onemogući"
+
+msgid "Disable FCC during recordings"
+msgstr ""
 
 #
 msgid "Disable Picture in Picture"
@@ -3438,6 +3495,11 @@ msgid "Downloadable plugins"
 msgstr "Dodaci koji se mogu skidati"
 
 #
+#, fuzzy
+msgid "Downloaded Images"
+msgstr "Skidanje"
+
+#
 msgid "Downloading"
 msgstr "Skidanje"
 
@@ -3453,6 +3515,12 @@ msgstr "Pokušavam skinuti novu listu paketa. Molim sačekajte..."
 #
 msgid "Downloading plugin information. Please wait..."
 msgstr "Skidanje informacija o dodacima. Molim pričekajte..."
+
+msgid "Downmix"
+msgstr ""
+
+msgid "Drama and Films"
+msgstr ""
 
 #
 #, fuzzy
@@ -3505,7 +3573,7 @@ msgid "ERROR - failed to scan (%s)!"
 msgstr "GREŠKA - neuspešno skeniranje (%s)!"
 
 #, python-format
-msgid "ERROR downloading file %s"
+msgid "ERROR downloading file %s/%s"
 msgstr ""
 
 #
@@ -3570,9 +3638,6 @@ msgstr "Urediti naslov"
 #
 msgid "Edit update source url"
 msgstr "Uredi url izvora nadogradnje"
-
-msgid "Education/Science/..."
-msgstr ""
 
 msgid "Egypt"
 msgstr ""
@@ -3645,6 +3710,11 @@ msgid "Enable auto fastscan for %s"
 msgstr ""
 
 #
+#, fuzzy
+msgid "Enable bluetooth audio"
+msgstr "Omogući uređivanje paketa"
+
+#
 msgid "Enable bouquet edit"
 msgstr "Omogući uređivanje paketa"
 
@@ -3679,6 +3749,11 @@ msgstr ""
 
 msgid "Enable parental protection"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Enable power off timer"
+msgstr "Uključi mod za premeštanje"
 
 msgid "Enable remote enigma2 receiver to be tried to tune into services that cannot be tuned into locally (e.g. tuner is occupied or service type is unavailable on the local tuner. Specify complete URL including http:// and port number (normally ...:8001), e.g. http://second_box:8001."
 msgstr ""
@@ -3842,11 +3917,6 @@ msgstr ""
 
 #
 msgid "Error"
-msgstr "Greška"
-
-#
-#, fuzzy, python-format
-msgid "Error %s"
 msgstr "Greška"
 
 msgid "Error code"
@@ -4124,6 +4194,16 @@ msgid ""
 msgstr ""
 
 #
+#, fuzzy
+msgid "FCC enabled"
+msgstr "omogućeno"
+
+#
+#, fuzzy
+msgid "FCCSetup"
+msgstr "Podešavanje"
+
+#
 msgid "FEC"
 msgstr "FEC"
 
@@ -4219,6 +4299,15 @@ msgstr ""
 #
 msgid "Fast"
 msgstr "Brzo"
+
+msgid "Fast Channel Change"
+msgstr ""
+
+msgid "Fast Channel Change Setup"
+msgstr ""
+
+msgid "Fast Channel Change setup"
+msgstr ""
 
 #
 msgid "Fast DiSEqC"
@@ -4333,7 +4422,13 @@ msgstr "Sledeći zadaci će biti urađeni kad pritisnete OK!"
 msgid "Force legacy signal stats"
 msgstr ""
 
+msgid "Force power off (even when not in standby)"
+msgstr ""
+
 msgid "Force zap to recording service in standby"
+msgstr ""
+
+msgid "Forces deep standby, even when not in standby mode. Scheduled recordings remain unaffected."
 msgstr ""
 
 #
@@ -4420,6 +4515,11 @@ msgstr ""
 msgid "Full view resolution"
 msgstr ""
 
+#
+#, fuzzy
+msgid "Fullbackup Images"
+msgstr "Fleš"
+
 msgid "Function of OK button"
 msgstr ""
 
@@ -4471,6 +4571,11 @@ msgstr "Opšte AC3 kašnjenje"
 #, fuzzy
 msgid "General PCM delay"
 msgstr "Opšte PCM kašnjenje"
+
+#
+#, fuzzy
+msgid "General bluetooth audio delay"
+msgstr "Opšte AC3 kašnjenje"
 
 #
 msgid "Genre"
@@ -4657,7 +4762,10 @@ msgstr ""
 msgid "HD2400"
 msgstr ""
 
-msgid "HD60/Multibox/Multibox SE"
+msgid "HD60/HD66SE/Multibox/Multibox SE"
+msgstr ""
+
+msgid "HDMI"
 msgstr ""
 
 msgid "HDMI Colordepth"
@@ -4733,6 +4841,9 @@ msgstr "Hard disk"
 msgid "Harddisk Setup"
 msgstr ""
 
+msgid "Hardware Accelerated"
+msgstr ""
+
 msgid "Hardware: "
 msgstr ""
 
@@ -4780,6 +4891,11 @@ msgstr "Rangiranje info"
 #
 msgid "High bitrate support"
 msgstr "Podrška za visoki bitrejt"
+
+#
+#, fuzzy
+msgid "History Prev/Next"
+msgstr "Fabrički reset"
 
 msgid "History back"
 msgstr ""
@@ -4838,6 +4954,9 @@ msgstr "Koliko minuta želite snimati ?"
 #
 msgid "How many minutes do you want to record?"
 msgstr "Koliko minuta želite snimati ?"
+
+msgid "Http(s) stream start delay"
+msgstr ""
 
 #
 msgid "Hue"
@@ -4919,6 +5038,9 @@ msgid "If set to 'yes' signal values (SNR, etc) will be calculated from API V3. 
 msgstr ""
 
 msgid "If set to 'yes' the same commands will be sent to the TV for deep standby events, as are sent during regular standby events."
+msgstr ""
+
+msgid "If the box is supposed to enter deep standby e.g. monday night at 1 AM, it actually is already tuesday. To enable this anyway, differing next day start time can be specified here."
 msgstr ""
 
 msgid "If using multiple uncommitted switches the DiSEqC commands must be sent multiple times. Set to the number of uncommitted switches in the chain minus one."
@@ -5446,9 +5568,6 @@ msgstr "Levo"
 msgid "Left from servicename"
 msgstr ""
 
-msgid "Leisure hobbies"
-msgstr ""
-
 msgid "Lesotho"
 msgstr ""
 
@@ -5766,6 +5885,11 @@ msgstr "Litvanski"
 msgid "Mauritius"
 msgstr "Favoriti"
 
+#
+#, fuzzy
+msgid "Max channels"
+msgstr "Kanal"
+
 msgid "Max memory positions"
 msgstr ""
 
@@ -5783,14 +5907,6 @@ msgstr ""
 #
 msgid "Media player"
 msgstr "Medija plejer"
-
-#
-#, fuzzy
-msgid "Media player: GStreamer, version "
-msgstr "Nova verzija:"
-
-msgid "Media player: ffmpeg, version "
-msgstr ""
 
 #
 #, fuzzy
@@ -6031,9 +6147,6 @@ msgstr "Lokacija filmova"
 msgid "Movie selection"
 msgstr "Lokacija filmova"
 
-msgid "Movie/Drama"
-msgstr ""
-
 #
 msgid "Movielist menu"
 msgstr "Meni liste filmova"
@@ -6247,7 +6360,7 @@ msgstr ""
 msgid "New Zealand"
 msgstr ""
 
-msgid "News Current Affairs"
+msgid "News/Current Affairs/Social"
 msgstr ""
 
 msgctxt "button label, 'next screen'"
@@ -6256,6 +6369,9 @@ msgstr ""
 
 msgctxt "now/next: 'next' event label"
 msgid "Next"
+msgstr ""
+
+msgid "Next day starts at"
 msgstr ""
 
 msgid "Nicaragua"
@@ -6633,6 +6749,11 @@ msgstr ""
 msgid "Only on startup"
 msgstr ""
 
+#
+#, fuzzy
+msgid "Only power off"
+msgstr "Uključi mod za premeštanje"
+
 msgid "Only select 'yes' if you are using a multiswich that requires a DiSEqC Port-A command signal. For all other setups select 'no'."
 msgstr ""
 
@@ -6661,7 +6782,7 @@ msgstr ""
 msgid "Operating LED status in standby mode"
 msgstr ""
 
-msgid "Operating LED status while running."
+msgid "Operating LED status while running"
 msgstr ""
 
 msgid "Opkg"
@@ -6804,6 +6925,9 @@ msgstr "Urednik za roditeljsku zaštitu kanala"
 #
 msgid "Parental control setup"
 msgstr "Postavke roditeljske zaštite"
+
+msgid "Passthrough"
+msgstr ""
 
 msgid "Password"
 msgstr ""
@@ -7322,6 +7446,14 @@ msgstr ""
 msgid "Power management. Consult your receiver's manual for more information."
 msgstr ""
 
+#
+#, fuzzy
+msgid "Power off time"
+msgstr "Vreme sortiranja"
+
+msgid "Power off timer"
+msgstr ""
+
 msgid "Power on display"
 msgstr ""
 
@@ -7701,6 +7833,9 @@ msgid "Rec"
 msgstr ""
 
 msgid "Recall to previous service"
+msgstr ""
+
+msgid "Receiver or driver does not support FCC"
 msgstr ""
 
 #
@@ -8201,6 +8336,9 @@ msgstr "SNR"
 #
 msgid "SNR:"
 msgstr "SNR:"
+
+msgid "SPDIF"
+msgstr ""
 
 msgid "SRT file"
 msgstr ""
@@ -9024,6 +9162,9 @@ msgstr "Skeniranje kanala"
 msgid "Service title mode"
 msgstr "Izaberi video mod"
 
+msgid "Service type 4097 incorrect for PiP!"
+msgstr ""
+
 #
 msgid ""
 "Service unavailable!\n"
@@ -9061,6 +9202,11 @@ msgstr ""
 
 msgid "Set blocktimes by weekday"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Set cursor on service from channel history"
+msgstr "predhodni kanal u istoriji"
 
 msgid "Set default"
 msgstr ""
@@ -9208,9 +9354,6 @@ msgstr "Prikaži info traku pri promeni događaja"
 #, fuzzy
 msgid "Show EPG..."
 msgstr "prikaži EPG..."
-
-msgid "Show Games show"
-msgstr ""
 
 msgid "Show InfoBar"
 msgstr ""
@@ -9471,6 +9614,9 @@ msgstr ""
 msgid "Show warning when timeshift is stopped"
 msgstr ""
 
+msgid "Show/Game Show/Leisure hobbies"
+msgstr ""
+
 msgid "Show/hide window"
 msgstr ""
 
@@ -9673,9 +9819,6 @@ msgid "Smartcard PIN"
 msgstr ""
 
 msgid "Smooth"
-msgstr ""
-
-msgid "Social/Political/Economics"
 msgstr ""
 
 msgid "SocketMMI"
@@ -10275,7 +10418,7 @@ msgstr "Vidi listu mogućih proširenja za displej i korisnički interfejs"
 
 #
 #, fuzzy
-msgid "Switch on the display during operation."
+msgid "Switch on the display during operation"
 msgstr "Vidi listu mogućih proširenja za displej i korisnički interfejs"
 
 #
@@ -10774,10 +10917,16 @@ msgstr ""
 msgid "This option allows you to show the full screen path leading to the current screen."
 msgstr ""
 
+msgid "This option allows you to switch audio to bluetooth speakers."
+msgstr ""
+
 msgid "This option allows you to view the old and new settings side by side."
 msgstr ""
 
 msgid "This option can be useful for long HDMI cables."
+msgstr ""
+
+msgid "This option configures the general audio delay for bluetooth speakers."
 msgstr ""
 
 msgid "This option set the level of surpression of mosquito noise (Mosquito Noise is random aliasing as a result of strong compression). Obviously this goes at the cost of picture details."
@@ -11901,6 +12050,9 @@ msgstr "W"
 msgid "WLAN connection"
 msgstr "WLAN veza"
 
+msgid "WMA Pro downmix"
+msgstr ""
+
 #
 msgid "WSS on 4:3"
 msgstr "WSS na 4:3"
@@ -12199,7 +12351,7 @@ msgstr ""
 msgid "When enabled, the VCR scart option will be shown on the main menu"
 msgstr ""
 
-msgid "When enabled, the channel selection list will be hidden while listening to a radio channel"
+msgid "When enabled, the channel selection list will be hidden while listening to a radio channel. When disabled, the option 'Auto play last service in radio mode' is available."
 msgstr ""
 
 msgid "When enabled, the infobar will be displayed when a new event starts."
@@ -12227,6 +12379,9 @@ msgid "When enabled, the receiver will select an AC3 track (when available)."
 msgstr ""
 
 msgid "When enabled, the receiver will select an AC3+ track (when available)."
+msgstr ""
+
+msgid "When enabled, then when changing bouquets, set the cursor on the service from the channel history in the channel selection list."
 msgstr ""
 
 msgid "When enabled, this setting has more weight than 'Preferred tuner for recordings'."
@@ -12592,6 +12747,9 @@ msgstr ""
 msgid "Zap"
 msgstr ""
 
+msgid "Zap Up/Down"
+msgstr ""
+
 #
 msgid "Zap back to previously tuned service?"
 msgstr "Vratiti se nazad na prethodni kanal?"
@@ -12642,7 +12800,7 @@ msgstr "Pomeri gore na prvi unos"
 msgid "Zgemma H.S/H.2S/H.2H/H5/H7(old model)"
 msgstr ""
 
-msgid "Zgemma H9(old model)/I55Plus"
+msgid "Zgemma H9(old model)/I55Plus/H8"
 msgstr ""
 
 msgid "Zgemma Star S/2S/H1/H2"
@@ -12698,8 +12856,10 @@ msgstr ""
 msgid "additional cable of rotor"
 msgstr ""
 
-msgid "adult movie/drama"
-msgstr ""
+#
+#, fuzzy
+msgid "adult movie"
+msgstr "Odaberi film"
 
 #
 msgid "advanced"
@@ -12800,9 +12960,6 @@ msgstr "bolje"
 msgid "black"
 msgstr "Crno "
 
-msgid "black & white"
-msgstr ""
-
 #
 msgid "blacklist"
 msgstr "crna lista"
@@ -12838,7 +12995,7 @@ msgstr ""
 msgid "chapters"
 msgstr "Poglavlja"
 
-msgid "childrens's/youth program (general)"
+msgid "childrens's youth program (general)"
 msgstr ""
 
 #
@@ -12856,10 +13013,6 @@ msgid "comedy"
 msgstr ""
 
 #
-msgid "config menu"
-msgstr "konfig meni"
-
-#
 msgid "confirmed"
 msgstr "Potvrđeno"
 
@@ -12868,6 +13021,15 @@ msgid "connected"
 msgstr "Povezano"
 
 msgid "controlled by HDMI"
+msgstr ""
+
+msgid "convert to AC3"
+msgstr ""
+
+msgid "convert to DTS"
+msgstr ""
+
+msgid "convert to multi-channel PCM"
 msgstr ""
 
 msgid "cooking"
@@ -12933,7 +13095,7 @@ msgstr ""
 msgid "economics/social advisory"
 msgstr ""
 
-msgid "education/science/factual topics (general)"
+msgid "educational/science/factual topics (general)"
 msgstr ""
 
 msgid "embedded"
@@ -13032,7 +13194,7 @@ msgstr ""
 msgid "fine arts"
 msgstr ""
 
-msgid "fitness & health"
+msgid "fitness and health"
 msgstr ""
 
 #
@@ -13079,9 +13241,6 @@ msgid "further education"
 msgstr ""
 
 msgid "game show/quiz/contest"
-msgstr ""
-
-msgid "gardening"
 msgstr ""
 
 #
@@ -13212,7 +13371,7 @@ msgstr ""
 msgid "literature"
 msgstr ""
 
-msgid "live broadcast"
+msgid "local sports"
 msgstr ""
 
 #
@@ -13244,6 +13403,11 @@ msgid "mins"
 msgstr "mins"
 
 #
+#, fuzzy
+msgid "module disabled"
+msgstr "onemogućeno"
+
+#
 msgid "month"
 msgstr "Mesec"
 
@@ -13269,7 +13433,7 @@ msgstr "Pomeri gore na prvi unos"
 msgid "move up to previous entry"
 msgstr "Pomeri gore na prethodni unos"
 
-msgid "movie/drama (general)"
+msgid "movie (general)"
 msgstr ""
 
 msgid "multi"
@@ -13420,9 +13584,6 @@ msgstr "Otvori konfiguraciju nejmservera "
 msgid "original"
 msgstr ""
 
-msgid "original language"
-msgstr ""
-
 #
 msgid "pass"
 msgstr "lozinka"
@@ -13446,6 +13607,14 @@ msgstr ""
 
 msgid "pre-school children's program"
 msgstr ""
+
+msgid "preserve bookmarks in cuts"
+msgstr ""
+
+#
+#, fuzzy
+msgid "priority"
+msgstr "Prioritet"
 
 msgid "receiver software because updates are available."
 msgstr ""
@@ -13475,6 +13644,11 @@ msgstr "obriši posle ove pozicije"
 #
 msgid "remove before this position"
 msgstr "obriši pre ove pozicije"
+
+#
+#, fuzzy
+msgid "remove bookmarks in cuts"
+msgstr "uklonite oznaku"
 
 #
 msgid "remove this mark"
@@ -13536,7 +13710,7 @@ msgstr "Izaberite meni ulaz"
 msgid "serious music/classic music"
 msgstr ""
 
-msgid "serious/classical/religious/historical movie/drama"
+msgid "serious/classical/religious/historical drama"
 msgstr ""
 
 #
@@ -13622,13 +13796,13 @@ msgstr ""
 msgid "slot%s - %s, without backup"
 msgstr ""
 
-msgid "soap/melodram/folkloric"
+msgid "soap/melodrama/folkloric"
 msgstr ""
 
 msgid "social/political issues/economics (general)"
 msgstr ""
 
-msgid "social/spiritual science"
+msgid "social/spiritual sciences"
 msgstr ""
 
 msgid "space"
@@ -13687,10 +13861,10 @@ msgstr "Prebaci na sledeći jezik titla"
 msgid "talk show"
 msgstr ""
 
-msgid "team sports"
+msgid "team sports/excluding football"
 msgstr ""
 
-msgid "technology/natural science"
+msgid "technology/natural sciences"
 msgstr ""
 
 #
@@ -13748,15 +13922,18 @@ msgstr ""
 msgid "unknown service"
 msgstr "Nepoznat kanal"
 
-msgid "unpublished"
-msgstr ""
-
 msgid "untestable"
 msgstr ""
 
 #
 msgid "until standby/restart"
 msgstr "do spreman/restart"
+
+msgid "use HDMI cacenter"
+msgstr ""
+
+msgid "use best / controlled by HDMI"
+msgstr ""
 
 #
 msgid "user defined"
@@ -13769,6 +13946,10 @@ msgstr "korisnički definisano"
 
 msgid "variety show"
 msgstr ""
+
+#
+msgid "version"
+msgstr "verzija"
 
 #
 msgid "vertical"
