--- a/po/zh_HK.po
+++ b/po/zh_HK.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-12-22 15:03+0100\n"
+"POT-Creation-Date: 2022-07-30 14:55+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: 王彪 <satfan@163.com>\n"
 "Language-Team: 中國\n"
@@ -589,8 +589,21 @@ msgstr ""
 msgid "AAC downmix"
 msgstr ""
 
+msgid "AAC transcoding"
+msgstr ""
+
+#, fuzzy
+msgid "AAC+ downmix"
+msgstr "AC3 縮減混音"
+
+msgid "AC3"
+msgstr ""
+
 msgid "AC3 downmix"
 msgstr "AC3 縮減混音"
+
+msgid "AC3 transcoding"
+msgstr ""
 
 msgid "ACQUIRING TSID/ONID"
 msgstr ""
@@ -1001,7 +1014,7 @@ msgstr ""
 msgid "Artist"
 msgstr "藝術家"
 
-msgid "Arts/Culture"
+msgid "Arts/Culture (without music)"
 msgstr ""
 
 msgid "Aruba"
@@ -1159,6 +1172,9 @@ msgstr "自動掃描"
 msgid "Automatic scan"
 msgstr ""
 
+msgid "Automatically power off box to deep standby mode."
+msgstr ""
+
 msgid "Automatically put the TV in standby whenever the receiver goes into standby or deep standby."
 msgstr ""
 
@@ -1174,6 +1190,9 @@ msgstr "可用的格式變數"
 #, fuzzy
 msgid "Available locales are:"
 msgstr "可用的格式變數"
+
+msgid "Axas E4HD Ultra"
+msgstr ""
 
 msgid "Azerbaijan"
 msgstr ""
@@ -1425,6 +1444,10 @@ msgstr ""
 msgid "CI assignment"
 msgstr "CI-證書"
 
+#, fuzzy
+msgid "CI enabled"
+msgstr "允許"
+
 msgid "CI slot: "
 msgstr ""
 
@@ -1435,6 +1458,10 @@ msgid "Cable"
 msgstr "有線"
 
 msgid "Cable Scan"
+msgstr ""
+
+#, python-format
+msgid "Cable scan executable utility not found '%s'!"
 msgstr ""
 
 msgid "Cabo Verde"
@@ -1661,7 +1688,7 @@ msgid ""
 "DiSEqC port %s for %s"
 msgstr ""
 
-msgid "Children/Youth"
+msgid "Children/Youth/Education/Science"
 msgstr ""
 
 msgid "Chile"
@@ -1681,6 +1708,21 @@ msgstr "選擇調諧器"
 
 msgid "Choose bouquet"
 msgstr "選擇自定義組"
+
+msgid "Choose whether AAC sound tracks should be transcoded."
+msgstr ""
+
+msgid "Choose whether AC3 sound tracks should be transcoded."
+msgstr ""
+
+msgid "Choose whether WMA Pro sound tracks should be downmixed."
+msgstr ""
+
+msgid "Choose whether multi channel DTS-HD(HR/MA) sound tracks should be downmixed or transcoded."
+msgstr ""
+
+msgid "Choose whether multi channel aac+ sound tracks should be downmixed to stereo."
+msgstr ""
 
 msgid "Choose whether to scan a single transponder, one satellite or multiple satellites."
 msgstr ""
@@ -2385,6 +2427,9 @@ msgstr "捷克"
 msgid "D"
 msgstr "D"
 
+msgid "DAC"
+msgstr ""
+
 msgid "DHCP"
 msgstr "DHCP"
 
@@ -2394,7 +2439,13 @@ msgstr ""
 msgid "DMM normal"
 msgstr ""
 
+msgid "DTS"
+msgstr ""
+
 msgid "DTS downmix"
+msgstr ""
+
+msgid "DTS-HD(HR/MA) downmix"
 msgstr ""
 
 msgid "DUAL LAYER DVD"
@@ -2479,6 +2530,9 @@ msgstr "定時類型"
 #, fuzzy
 msgid "Default+Picon"
 msgstr "預設設定"
+
+msgid "Define additional delay in milliseconds before start of http(s) streams, e.g. to connect a remote tuner, you use a complex system of DiSEqC."
+msgstr ""
 
 msgid "Define the location of the EPG Cache file."
 msgstr ""
@@ -2700,6 +2754,9 @@ msgstr ""
 
 msgid "Disable"
 msgstr "禁用"
+
+msgid "Disable FCC during recordings"
+msgstr ""
 
 msgid "Disable Picture in Picture"
 msgstr "禁用畫中畫"
@@ -2942,6 +2999,10 @@ msgstr "可下載的新插件"
 msgid "Downloadable plugins"
 msgstr "可下載的插件"
 
+#, fuzzy
+msgid "Downloaded Images"
+msgstr "下載中"
+
 msgid "Downloading"
 msgstr "下載中"
 
@@ -2954,6 +3015,13 @@ msgstr "嘗試下載新的套裝軟體列表. 請稍候..."
 
 msgid "Downloading plugin information. Please wait..."
 msgstr "正在下載插件列表,請稍候..."
+
+#, fuzzy
+msgid "Downmix"
+msgstr "AC3 縮減混音"
+
+msgid "Drama and Films"
+msgstr ""
 
 #, fuzzy
 msgid "Drop unconfigured satellites"
@@ -2998,7 +3066,7 @@ msgid "ERROR - failed to scan (%s)!"
 msgstr "錯誤 - 掃描 (%s)失敗!"
 
 #, python-format
-msgid "ERROR downloading file %s"
+msgid "ERROR downloading file %s/%s"
 msgstr ""
 
 msgid "East"
@@ -3050,9 +3118,6 @@ msgstr "修改標題"
 
 msgid "Edit update source url"
 msgstr "編輯升級源地址"
-
-msgid "Education/Science/..."
-msgstr ""
 
 msgid "Egypt"
 msgstr ""
@@ -3121,6 +3186,10 @@ msgstr ""
 msgid "Enable auto fastscan for %s"
 msgstr ""
 
+#, fuzzy
+msgid "Enable bluetooth audio"
+msgstr "允許編輯自定義組"
+
 msgid "Enable bouquet edit"
 msgstr "允許編輯自定義組"
 
@@ -3150,6 +3219,10 @@ msgstr ""
 
 msgid "Enable parental protection"
 msgstr ""
+
+#, fuzzy
+msgid "Enable power off timer"
+msgstr "允許移動模式"
 
 msgid "Enable remote enigma2 receiver to be tried to tune into services that cannot be tuned into locally (e.g. tuner is occupied or service type is unavailable on the local tuner. Specify complete URL including http:// and port number (normally ...:8001), e.g. http://second_box:8001."
 msgstr ""
@@ -3293,10 +3366,6 @@ msgid "Eritrea"
 msgstr ""
 
 msgid "Error"
-msgstr "錯誤"
-
-#, fuzzy, python-format
-msgid "Error %s"
 msgstr "錯誤"
 
 msgid "Error code"
@@ -3538,6 +3607,14 @@ msgid ""
 "inactive"
 msgstr ""
 
+#, fuzzy
+msgid "FCC enabled"
+msgstr "允許"
+
+#, fuzzy
+msgid "FCCSetup"
+msgstr "設定"
+
 msgid "FEC"
 msgstr "FEC"
 
@@ -3628,6 +3705,15 @@ msgstr "愛爾蘭"
 
 msgid "Fast"
 msgstr "快速"
+
+msgid "Fast Channel Change"
+msgstr ""
+
+msgid "Fast Channel Change Setup"
+msgstr ""
+
+msgid "Fast Channel Change setup"
+msgstr ""
 
 msgid "Fast DiSEqC"
 msgstr "快速DiSEqC"
@@ -3726,7 +3812,13 @@ msgstr "按下 OK 鍵後將完成以下任務!"
 msgid "Force legacy signal stats"
 msgstr ""
 
+msgid "Force power off (even when not in standby)"
+msgstr ""
+
 msgid "Force zap to recording service in standby"
+msgstr ""
+
+msgid "Forces deep standby, even when not in standby mode. Scheduled recordings remain unaffected."
 msgstr ""
 
 msgid "Format"
@@ -3801,6 +3893,10 @@ msgstr ""
 msgid "Full view resolution"
 msgstr ""
 
+#, fuzzy
+msgid "Fullbackup Images"
+msgstr "安裝失敗"
+
 msgid "Function of OK button"
 msgstr ""
 
@@ -3843,6 +3939,9 @@ msgid "General AC3 delay"
 msgstr ""
 
 msgid "General PCM delay"
+msgstr ""
+
+msgid "General bluetooth audio delay"
 msgstr ""
 
 msgid "Genre"
@@ -4008,7 +4107,10 @@ msgstr ""
 msgid "HD2400"
 msgstr ""
 
-msgid "HD60/Multibox/Multibox SE"
+msgid "HD60/HD66SE/Multibox/Multibox SE"
+msgstr ""
+
+msgid "HDMI"
 msgstr ""
 
 msgid "HDMI Colordepth"
@@ -4073,6 +4175,9 @@ msgstr "硬碟"
 msgid "Harddisk Setup"
 msgstr ""
 
+msgid "Hardware Accelerated"
+msgstr ""
+
 msgid "Hardware: "
 msgstr ""
 
@@ -4117,6 +4222,10 @@ msgstr ""
 
 msgid "High bitrate support"
 msgstr "高位元率支援"
+
+#, fuzzy
+msgid "History Prev/Next"
+msgstr "出廠設定"
 
 msgid "History back"
 msgstr ""
@@ -4172,6 +4281,9 @@ msgstr "您想錄製多少分鐘?"
 
 msgid "How many minutes do you want to record?"
 msgstr "您想錄製多少分鐘?"
+
+msgid "Http(s) stream start delay"
+msgstr ""
 
 msgid "Hue"
 msgstr "色調"
@@ -4246,6 +4358,9 @@ msgid "If set to 'yes' signal values (SNR, etc) will be calculated from API V3. 
 msgstr ""
 
 msgid "If set to 'yes' the same commands will be sent to the TV for deep standby events, as are sent during regular standby events."
+msgstr ""
+
+msgid "If the box is supposed to enter deep standby e.g. monday night at 1 AM, it actually is already tuesday. To enable this anyway, differing next day start time can be specified here."
 msgstr ""
 
 msgid "If using multiple uncommitted switches the DiSEqC commands must be sent multiple times. Set to the number of uncommitted switches in the chain minus one."
@@ -4686,9 +4801,6 @@ msgstr "左"
 msgid "Left from servicename"
 msgstr ""
 
-msgid "Leisure hobbies"
-msgstr ""
-
 msgid "Lesotho"
 msgstr ""
 
@@ -4951,6 +5063,10 @@ msgstr "立陶宛語"
 msgid "Mauritius"
 msgstr "自定義組"
 
+#, fuzzy
+msgid "Max channels"
+msgstr "頻道"
+
 msgid "Max memory positions"
 msgstr ""
 
@@ -4965,13 +5081,6 @@ msgstr ""
 
 msgid "Media player"
 msgstr "媒體播放器"
-
-#, fuzzy
-msgid "Media player: GStreamer, version "
-msgstr "新版本:"
-
-msgid "Media player: ffmpeg, version "
-msgstr ""
 
 msgid "Media scanner"
 msgstr ""
@@ -5173,9 +5282,6 @@ msgstr "電影位置"
 msgid "Movie selection"
 msgstr ""
 
-msgid "Movie/Drama"
-msgstr ""
-
 msgid "Movielist menu"
 msgstr "已錄節目列表功能表"
 
@@ -5356,7 +5462,7 @@ msgstr ""
 msgid "New Zealand"
 msgstr "新西蘭"
 
-msgid "News Current Affairs"
+msgid "News/Current Affairs/Social"
 msgstr ""
 
 msgctxt "button label, 'next screen'"
@@ -5365,6 +5471,9 @@ msgstr ""
 
 msgctxt "now/next: 'next' event label"
 msgid "Next"
+msgstr ""
+
+msgid "Next day starts at"
 msgstr ""
 
 msgid "Nicaragua"
@@ -5689,6 +5798,10 @@ msgstr ""
 msgid "Only on startup"
 msgstr ""
 
+#, fuzzy
+msgid "Only power off"
+msgstr "允許移動模式"
+
 msgid "Only select 'yes' if you are using a multiswich that requires a DiSEqC Port-A command signal. For all other setups select 'no'."
 msgstr ""
 
@@ -5713,7 +5826,7 @@ msgstr ""
 msgid "Operating LED status in standby mode"
 msgstr ""
 
-msgid "Operating LED status while running."
+msgid "Operating LED status while running"
 msgstr ""
 
 msgid "Opkg"
@@ -5840,6 +5953,9 @@ msgstr ""
 
 msgid "Parental control setup"
 msgstr "家長控制設定"
+
+msgid "Passthrough"
+msgstr ""
 
 msgid "Password"
 msgstr ""
@@ -6258,6 +6374,12 @@ msgstr ""
 msgid "Power management. Consult your receiver's manual for more information."
 msgstr ""
 
+msgid "Power off time"
+msgstr ""
+
+msgid "Power off timer"
+msgstr ""
+
 msgid "Power on display"
 msgstr ""
 
@@ -6593,6 +6715,9 @@ msgid "Rec"
 msgstr ""
 
 msgid "Recall to previous service"
+msgstr ""
+
+msgid "Receiver or driver does not support FCC"
 msgstr ""
 
 msgid "Reception settings"
@@ -7013,6 +7138,9 @@ msgid "SNR"
 msgstr ""
 
 msgid "SNR:"
+msgstr ""
+
+msgid "SPDIF"
 msgstr ""
 
 msgid "SRT file"
@@ -7716,6 +7844,9 @@ msgstr "頻道掃描"
 msgid "Service title mode"
 msgstr ""
 
+msgid "Service type 4097 incorrect for PiP!"
+msgstr ""
+
 msgid ""
 "Service unavailable!\n"
 "Check tuner configuration!"
@@ -7748,6 +7879,9 @@ msgid "Set as startup service"
 msgstr ""
 
 msgid "Set blocktimes by weekday"
+msgstr ""
+
+msgid "Set cursor on service from channel history"
 msgstr ""
 
 msgid "Set default"
@@ -7873,9 +8007,6 @@ msgid "Show EPG for current channel..."
 msgstr ""
 
 msgid "Show EPG..."
-msgstr ""
-
-msgid "Show Games show"
 msgstr ""
 
 msgid "Show InfoBar"
@@ -8108,6 +8239,9 @@ msgstr ""
 msgid "Show warning when timeshift is stopped"
 msgstr ""
 
+msgid "Show/Game Show/Leisure hobbies"
+msgstr ""
+
 msgid "Show/hide window"
 msgstr ""
 
@@ -8272,9 +8406,6 @@ msgid "Smartcard PIN"
 msgstr ""
 
 msgid "Smooth"
-msgstr ""
-
-msgid "Social/Political/Economics"
 msgstr ""
 
 msgid "SocketMMI"
@@ -8782,7 +8913,7 @@ msgstr ""
 msgid "Switch on the display during Suspend Mode"
 msgstr ""
 
-msgid "Switch on the display during operation."
+msgid "Switch on the display during operation"
 msgstr ""
 
 #, fuzzy
@@ -9214,10 +9345,16 @@ msgstr ""
 msgid "This option allows you to show the full screen path leading to the current screen."
 msgstr ""
 
+msgid "This option allows you to switch audio to bluetooth speakers."
+msgstr ""
+
 msgid "This option allows you to view the old and new settings side by side."
 msgstr ""
 
 msgid "This option can be useful for long HDMI cables."
+msgstr ""
+
+msgid "This option configures the general audio delay for bluetooth speakers."
 msgstr ""
 
 msgid "This option set the level of surpression of mosquito noise (Mosquito Noise is random aliasing as a result of strong compression). Obviously this goes at the cost of picture details."
@@ -10152,6 +10289,10 @@ msgstr "W"
 msgid "WLAN connection"
 msgstr ""
 
+#, fuzzy
+msgid "WMA Pro downmix"
+msgstr "AC3 縮減混音"
+
 msgid "WSS on 4:3"
 msgstr "WSS on 4:3"
 
@@ -10430,7 +10571,7 @@ msgstr ""
 msgid "When enabled, the VCR scart option will be shown on the main menu"
 msgstr ""
 
-msgid "When enabled, the channel selection list will be hidden while listening to a radio channel"
+msgid "When enabled, the channel selection list will be hidden while listening to a radio channel. When disabled, the option 'Auto play last service in radio mode' is available."
 msgstr ""
 
 msgid "When enabled, the infobar will be displayed when a new event starts."
@@ -10458,6 +10599,9 @@ msgid "When enabled, the receiver will select an AC3 track (when available)."
 msgstr ""
 
 msgid "When enabled, the receiver will select an AC3+ track (when available)."
+msgstr ""
+
+msgid "When enabled, then when changing bouquets, set the cursor on the service from the channel history in the channel selection list."
 msgstr ""
 
 msgid "When enabled, this setting has more weight than 'Preferred tuner for recordings'."
@@ -10783,6 +10927,9 @@ msgstr ""
 msgid "Zap"
 msgstr ""
 
+msgid "Zap Up/Down"
+msgstr ""
+
 msgid "Zap back to previously tuned service?"
 msgstr ""
 
@@ -10830,7 +10977,7 @@ msgstr "編輯自動計時器服務"
 msgid "Zgemma H.S/H.2S/H.2H/H5/H7(old model)"
 msgstr ""
 
-msgid "Zgemma H9(old model)/I55Plus"
+msgid "Zgemma H9(old model)/I55Plus/H8"
 msgstr ""
 
 msgid "Zgemma Star S/2S/H1/H2"
@@ -10878,8 +11025,9 @@ msgstr ""
 msgid "additional cable of rotor"
 msgstr ""
 
-msgid "adult movie/drama"
-msgstr ""
+#, fuzzy
+msgid "adult movie"
+msgstr "選擇一部電影"
 
 msgid "advanced"
 msgstr "高級"
@@ -10969,9 +11117,6 @@ msgstr "較好"
 msgid "black"
 msgstr "黑色"
 
-msgid "black & white"
-msgstr ""
-
 msgid "blacklist"
 msgstr "黑名單"
 
@@ -11002,7 +11147,7 @@ msgstr ""
 msgid "chapters"
 msgstr "章節"
 
-msgid "childrens's/youth program (general)"
+msgid "childrens's youth program (general)"
 msgstr ""
 
 msgid "circular left"
@@ -11017,9 +11162,6 @@ msgstr ""
 msgid "comedy"
 msgstr ""
 
-msgid "config menu"
-msgstr "配置功能表"
-
 msgid "confirmed"
 msgstr "測驗通過"
 
@@ -11027,6 +11169,15 @@ msgid "connected"
 msgstr "已連接"
 
 msgid "controlled by HDMI"
+msgstr ""
+
+msgid "convert to AC3"
+msgstr ""
+
+msgid "convert to DTS"
+msgstr ""
+
+msgid "convert to multi-channel PCM"
 msgstr ""
 
 msgid "cooking"
@@ -11083,7 +11234,7 @@ msgstr ""
 msgid "economics/social advisory"
 msgstr ""
 
-msgid "education/science/factual topics (general)"
+msgid "educational/science/factual topics (general)"
 msgstr ""
 
 msgid "embedded"
@@ -11174,7 +11325,7 @@ msgstr ""
 msgid "fine arts"
 msgstr ""
 
-msgid "fitness & health"
+msgid "fitness and health"
 msgstr ""
 
 msgid "flat alphabetic"
@@ -11213,9 +11364,6 @@ msgid "further education"
 msgstr ""
 
 msgid "game show/quiz/contest"
-msgstr ""
-
-msgid "gardening"
 msgstr ""
 
 msgid "go to deep standby"
@@ -11324,7 +11472,7 @@ msgstr ""
 msgid "literature"
 msgstr ""
 
-msgid "live broadcast"
+msgid "local sports"
 msgstr ""
 
 msgid "locked"
@@ -11351,6 +11499,10 @@ msgstr "功能表"
 msgid "mins"
 msgstr "分鐘"
 
+#, fuzzy
+msgid "module disabled"
+msgstr "不可用"
+
 msgid "month"
 msgstr "月份"
 
@@ -11372,7 +11524,7 @@ msgstr "向上移動到第一個項目"
 msgid "move up to previous entry"
 msgstr "向上移動到上一個項目"
 
-msgid "movie/drama (general)"
+msgid "movie (general)"
 msgstr ""
 
 msgid "multi"
@@ -11504,9 +11656,6 @@ msgstr "打開DNS設定"
 msgid "original"
 msgstr ""
 
-msgid "original language"
-msgstr ""
-
 msgid "pass"
 msgstr "通過"
 
@@ -11528,6 +11677,13 @@ msgstr ""
 
 msgid "pre-school children's program"
 msgstr ""
+
+msgid "preserve bookmarks in cuts"
+msgstr ""
+
+#, fuzzy
+msgid "priority"
+msgstr "次序"
 
 msgid "receiver software because updates are available."
 msgstr ""
@@ -11552,6 +11708,9 @@ msgstr "移除這個位置之後的"
 
 msgid "remove before this position"
 msgstr "移除這個位置之前的"
+
+msgid "remove bookmarks in cuts"
+msgstr ""
 
 msgid "remove this mark"
 msgstr "移除這個標記"
@@ -11606,7 +11765,7 @@ msgstr "選擇功能表專案"
 msgid "serious music/classic music"
 msgstr ""
 
-msgid "serious/classical/religious/historical movie/drama"
+msgid "serious/classical/religious/historical drama"
 msgstr ""
 
 #, fuzzy
@@ -11686,13 +11845,13 @@ msgstr ""
 msgid "slot%s - %s, without backup"
 msgstr ""
 
-msgid "soap/melodram/folkloric"
+msgid "soap/melodrama/folkloric"
 msgstr ""
 
 msgid "social/political issues/economics (general)"
 msgstr ""
 
-msgid "social/spiritual science"
+msgid "social/spiritual sciences"
 msgstr ""
 
 msgid "space"
@@ -11745,10 +11904,10 @@ msgstr "切換到下一個語種字幕"
 msgid "talk show"
 msgstr ""
 
-msgid "team sports"
+msgid "team sports/excluding football"
 msgstr ""
 
-msgid "technology/natural science"
+msgid "technology/natural sciences"
 msgstr ""
 
 msgid "template file"
@@ -11796,13 +11955,16 @@ msgstr ""
 msgid "unknown service"
 msgstr "未知頻道"
 
-msgid "unpublished"
-msgstr ""
-
 msgid "untestable"
 msgstr ""
 
 msgid "until standby/restart"
+msgstr ""
+
+msgid "use HDMI cacenter"
+msgstr ""
+
+msgid "use best / controlled by HDMI"
 msgstr ""
 
 msgid "user defined"
@@ -11814,6 +11976,9 @@ msgstr "用戶定義"
 
 msgid "variety show"
 msgstr ""
+
+msgid "version"
+msgstr "版本"
 
 msgid "vertical"
 msgstr "垂直"
